Added in a couple more images, fixed all the arrows to be \rightarrow so they now show up

--- a/4T/ch10.tex
+++ b/4T/ch10.tex
@@ -385,7 +385,7 @@ As her emotional equilibrium comes back, Hayley mentions that she had no hair.  
 
 
 
-\textit{{[}Ongoing Challenge: The Tank → Athletics 2 (Hayley){]}}
+\textit{{[}Ongoing Challenge: The Tank $\rightarrow$ Athletics 2 (Hayley){]}}
 
 
 
@@ -551,10 +551,10 @@ Oliver starts drifting off.  Just as he passes out, he thinks that she touches h
 {
 \parskip=0pt
 \begin{itemize}
-\item Challenge: Notice 1.  Focused 2 (Oliver) → Overcome! \textbf{1 VP (Oliver)}
-\item Challenge: Notice ``You've been here before'' 2.  Veteran 2 → Matched
+\item Challenge: Notice 1.  Focused 2 (Oliver) $\rightarrow$ Overcome! \textbf{1 VP (Oliver)}
+\item Challenge: Notice ``You've been here before'' 2.  Veteran 2 $\rightarrow$ Matched
 \item Refresh: Focused (Oliver)
-\item Challenge: ``Remember where he came from'' 2.  Focused 2 (Oliver) + \textbf{ {\color[RGB]{255,0,0}Flaw: Nightmares 2{[}0{]}} } → Overcome! \textbf{2 VP (Oliver)}
+\item Challenge: ``Remember where he came from'' 2.  Focused 2 (Oliver) + \textbf{ {\color[RGB]{255,0,0}Flaw: Nightmares 2{[}0{]}} } $\rightarrow$ Overcome! \textbf{2 VP (Oliver)}
 \end{itemize}
 
 \begin{itemize}
@@ -562,7 +562,7 @@ Oliver starts drifting off.  Just as he passes out, he thinks that she touches h
 \end{itemize}
 
 \begin{itemize}
-\item Challenge: Notice 1.  Outgoing 2 (Oliver) → Overcome! \textbf{1 VP (Oliver)}
+\item Challenge: Notice 1.  Outgoing 2 (Oliver) $\rightarrow$ Overcome! \textbf{1 VP (Oliver)}
 \end{itemize}
 
 \begin{itemize}
@@ -570,44 +570,44 @@ Oliver starts drifting off.  Just as he passes out, he thinks that she touches h
 \end{itemize}
 
 \begin{itemize}
-\item Challenge: Gun down Nicklepan soldiers 3.  Crack Shot 3 (Oliver) → Matched
-\item Challenge: Avoid getting shot 2.  Hardened 3 (Oliver) → Overcome! \textbf{2 VP (Oliver)}
-\item Challenge: Give Cover 2.  Firearms: Sniper Rifle 2 (Oliver) → Matched
+\item Challenge: Gun down Nicklepan soldiers 3.  Crack Shot 3 (Oliver) $\rightarrow$ Matched
+\item Challenge: Avoid getting shot 2.  Hardened 3 (Oliver) $\rightarrow$ Overcome! \textbf{2 VP (Oliver)}
+\item Challenge: Give Cover 2.  Firearms: Sniper Rifle 2 (Oliver) $\rightarrow$ Matched
 \item Refresh: Hardened (Oliver)
-\item Challenge: Notice insignia 1. Citizen 1 (Oliver)  → Matched
-\item Challenge: Answer correctly 2. Veteran 2 (Oliver)  → Matched
-\item Challenge: Notice 1 → Sent back to pool
+\item Challenge: Notice insignia 1. Citizen 1 (Oliver)  $\rightarrow$ Matched
+\item Challenge: Answer correctly 2. Veteran 2 (Oliver)  $\rightarrow$ Matched
+\item Challenge: Notice 1 $\rightarrow$ Sent back to pool
 \item Refresh: Veteran (Oliver)
-\item Challenge: Avoid anyone noticing the desertion 3.  Focused 2 (Oliver) → Sent back to pool
-\item Challenge: Kill the guy 3. Hardened 3 (Oliver) → Matched
+\item Challenge: Avoid anyone noticing the desertion 3.  Focused 2 (Oliver) $\rightarrow$ Sent back to pool
+\item Challenge: Kill the guy 3. Hardened 3 (Oliver) $\rightarrow$ Matched
 \item Refresh: Focused (Oliver)
-\item Challenge: See face 2.  Focused 2 (Oliver) → Matched
-\item Challenge: Push through the pain 2.  Hardened 3 (Oliver) → Overcome! \textbf{2 VP (Oliver)}
+\item Challenge: See face 2.  Focused 2 (Oliver) $\rightarrow$ Matched
+\item Challenge: Push through the pain 2.  Hardened 3 (Oliver) $\rightarrow$ Overcome! \textbf{2 VP (Oliver)}
 \item Refresh: Crack Shot (Oliver)
-\item Challenge: Avoid getting dragged out into the street 2. Anti-Authoritarian 1 (Oliver) + Arm Strength 1 (Oliver) → Matched
-\item Challenge: Impress the guy 3. Veteran 2 (Oliver) + \textbf{ {\color[RGB]{255,0,0}Flaw: Insecurity about war history 2{[}0{]} } } → Matched
+\item Challenge: Avoid getting dragged out into the street 2. Anti-Authoritarian 1 (Oliver) + Arm Strength 1 (Oliver) $\rightarrow$ Matched
+\item Challenge: Impress the guy 3. Veteran 2 (Oliver) + \textbf{ {\color[RGB]{255,0,0}Flaw: Insecurity about war history 2{[}0{]} } } $\rightarrow$ Matched
 \item Refresh: Firearm: Sniper Rifle (Oliver)
 \item Refresh: Hardened (Oliver)
-\item Challenge: Avoid getting shot 4 → Sent back to pool
-\item Challenge: Difficulty Breathing 1.  Conditioned 2 (Hayley) → Overcome! \textbf{1 VP (Hayley)}
-\item Challenge: Notice woman 1.  Lady's maid 2 (Hayley) → Overcome! \textbf{1 VP (Hayley)}
-\item Challenge: Open Tank 2.  Athletics 2 (Hayley) → Matched 
-\item Challenge: Don't freak out 3.  Protocol 1 (Hayley) + Unashamed 1 (Hayley) + \textbf{ {\color[RGB]{255,0,0}Flaw: Fear of anyone she deeply cares about using the Tank 2{[}0{]}} } → Matched 
+\item Challenge: Avoid getting shot 4 $\rightarrow$ Sent back to pool
+\item Challenge: Difficulty Breathing 1.  Conditioned 2 (Hayley) $\rightarrow$ Overcome! \textbf{1 VP (Hayley)}
+\item Challenge: Notice woman 1.  Lady's maid 2 (Hayley) $\rightarrow$ Overcome! \textbf{1 VP (Hayley)}
+\item Challenge: Open Tank 2.  Athletics 2 (Hayley) $\rightarrow$ Matched 
+\item Challenge: Don't freak out 3.  Protocol 1 (Hayley) + Unashamed 1 (Hayley) + \textbf{ {\color[RGB]{255,0,0}Flaw: Fear of anyone she deeply cares about using the Tank 2{[}0{]}} } $\rightarrow$ Matched 
 \item Refresh: Conditioned (Hayley)
-\item Challenge: Notice potential threat 1.  Bodyguard 1 (Hayley) → Matched 
+\item Challenge: Notice potential threat 1.  Bodyguard 1 (Hayley) $\rightarrow$ Matched 
 \end{itemize}
 
 \begin{itemize}
-\item Challenge: Notice 1.  → Sent back to pool
-\item Challenge: Notice 1.  → Sent back to pool
+\item Challenge: Notice 1.  $\rightarrow$ Sent back to pool
+\item Challenge: Notice 1.  $\rightarrow$ Sent back to pool
 \end{itemize}
 
 \begin{itemize}
-\item Challenge: Avoid gunfire 3. Conditioned 2 (Hayley) → Sent back to pool
+\item Challenge: Avoid gunfire 3. Conditioned 2 (Hayley) $\rightarrow$ Sent back to pool
 \item Refresh: Protocol (Hayley)
 \item Refresh: Athletics 2 (Hayley)
-\item Challenge: Stop being choked 4 → Sent back to pool
-\item Challenge: Notice 2. Gorgeous 3 (Hayley) → Overcome! \textbf{2 VP (Hayley)} 
+\item Challenge: Stop being choked 4 $\rightarrow$ Sent back to pool
+\item Challenge: Notice 2. Gorgeous 3 (Hayley) $\rightarrow$ Overcome! \textbf{2 VP (Hayley)} 
 \end{itemize}
 }
 
@@ -615,8 +615,8 @@ Oliver starts drifting off.  Just as he passes out, he thinks that she touches h
 \jumpHeadline{Ongoing Challenges }  
 
 \begin{itemize}
-\item Ongoing Challenge: The Tank → Athletics 2 (Hayley)
-\item (possibly) Ongoing Challenge: The Tank → Hardened 3 (Oliver)
+\item Ongoing Challenge: The Tank $\rightarrow$ Athletics 2 (Hayley)
+\item (possibly) Ongoing Challenge: The Tank $\rightarrow$ Hardened 3 (Oliver)
 \end{itemize}
 
 
