--- a/4T/ch11.tex
+++ b/4T/ch11.tex
@@ -17,9 +17,9 @@ As always, p\hl{lease fill in the gaps and correct errors}\footnote{\textbf{Suko
 
 \jumpHeadline{ Capability purchases } 
 
-Jaya: \textit{Stash: 1 → 2} and \textit{Senior Constable: 1 → 2}
+Jaya: \textit{Stash: 1 $\rightarrow$ 2} and \textit{Senior Constable: 1 $\rightarrow$ 2}
 
-Hayley: Reduce Flaw: Follower: \textit{1{[}2{]} → 0{[}3{]}}, Reduce Flaw: Fear: \textit{2{[}0{]} → 1{[}1{]}} (via Capability expenditure)
+Hayley: Reduce Flaw: Follower: \textit{1{[}2{]} $\rightarrow$ 0{[}3{]}}, Reduce Flaw: Fear: \textit{2{[}0{]} $\rightarrow$ 1{[}1{]}} (via Capability expenditure)
 
 \jumpHeadline{ SAC-09 } 
 
@@ -642,7 +642,7 @@ Hayley says that she needs to learn some things to do better in the Tank next ti
 
 
 
-\textit{{[}Ongoing Challenge: The Tank → Senior Constable 2 (Jaya){]}}
+\textit{{[}Ongoing Challenge: The Tank $\rightarrow$ Senior Constable 2 (Jaya){]}}
 
 
 
@@ -663,7 +663,7 @@ Dr. Gerhauser, Swan and Micah are in the room.  \hl{Jonah and Jaya are prepped f
 \jumpHeadline{ Ongoing Challenges }  
 
 \begin{itemize}
-\item Ongoing Challenge: The Tank → Senior Constable 2 (Jaya)
+\item Ongoing Challenge: The Tank $\rightarrow$ Senior Constable 2 (Jaya)
 \end{itemize}
 
 
