--- a/4T/ch12.tex
+++ b/4T/ch12.tex
@@ -377,42 +377,42 @@ Midway through the night, they can hear Oliver tossing and turning as his sleep 
 {
 \parskip=0pt
 \begin{itemize}
-\item Challenge: Get the other medic to stay until the injured man is rebandaged 2.  Street Medic 2 (Jonah) → Matched
-\item Challenge: Convince the woman to let them leave 2.  Social Chameleon 3 → Overcome! \textbf{2 VP (Jonah)}
+\item Challenge: Get the other medic to stay until the injured man is rebandaged 2.  Street Medic 2 (Jonah) $\rightarrow$ Matched
+\item Challenge: Convince the woman to let them leave 2.  Social Chameleon 3 $\rightarrow$ Overcome! \textbf{2 VP (Jonah)}
 \item Refresh: Street Medic (Jonah)
-\item Challenge: Find out his companion's inventory and get access to it 2. Business Contacts 2 (Jonah) → Matched
-\item Challenge: Do I recognized him? 2.  Concealment 1 (Jonah) → Sent back to pool
-\item Challenge: Where do you live? 1. → Sent back to pool
-\item Challenge: Notice Bomb 2. Vigilant 3 → Overcome! \textbf{2 VP (Jonah)}
+\item Challenge: Find out his companion's inventory and get access to it 2. Business Contacts 2 (Jonah) $\rightarrow$ Matched
+\item Challenge: Do I recognized him? 2.  Concealment 1 (Jonah) $\rightarrow$ Sent back to pool
+\item Challenge: Where do you live? 1. $\rightarrow$ Sent back to pool
+\item Challenge: Notice Bomb 2. Vigilant 3 $\rightarrow$ Overcome! \textbf{2 VP (Jonah)}
 \item Refresh: Vigilant (Jonah)
-\item Challenge: What do the three stars mean? 1. → Sent back to pool
+\item Challenge: What do the three stars mean? 1. $\rightarrow$ Sent back to pool
 \item Refresh: Social Chameleon (Jonah)
-\item Challenge: Avoid blast 3. Vigilant 3 (Jonah) + Streetwise 1 (Jonah) + Small Unit Tactics 2 (Jonah) + \textbf{ {\color[RGB]{255,0,0}Flaw: } }\textbf{ {\color[RGB]{255,0,0}\hl{Haunted}} }\footnote{\textbf{Suko T }this comes up most when you are not well rested \textsubscript{12/07/12 10:59pm}}\textbf{ {\color[RGB]{255,0,0} 1{[}0{]}} } → Overcome! \textbf{3 VP (Jonah)}
+\item Challenge: Avoid blast 3. Vigilant 3 (Jonah) + Streetwise 1 (Jonah) + Small Unit Tactics 2 (Jonah) + \textbf{ {\color[RGB]{255,0,0}Flaw: } }\textbf{ {\color[RGB]{255,0,0}\hl{Haunted}} }\footnote{\textbf{Suko T }this comes up most when you are not well rested \textsubscript{12/07/12 10:59pm}}\textbf{ {\color[RGB]{255,0,0} 1{[}0{]}} } $\rightarrow$ Overcome! \textbf{3 VP (Jonah)}
 \item Refresh: Streetwise (Jonah)
 \item Refresh: Concealment (Jonah)
-\item Challenge: Escape Bro Team Alpha 2. Concealment 1 (Jonah) + Streetwise 1 (Jonah) → Matched
-\item Challenge: Fix the guy 2.  Street Medic 2 (Jonah) → Matched
-\item Challenge: Avoid being blown up 2. \textbf{ {\color[RGB]{255,0,0}Flaw: Fear of falling objects 1{[}0{]}} } → Sent back to pool
-\item Challenge: Tell me your name 2. Social Chameleon 3 → Overcome! \textbf{2 VP (Jonah)}
-\item Challenge: Knock Jonah out 2. Truncheon 2 (Jaya) → Matched
-\item Challenge: Break hold 2. Grim Visage 2 (Jaya) → Matched
+\item Challenge: Escape Bro Team Alpha 2. Concealment 1 (Jonah) + Streetwise 1 (Jonah) $\rightarrow$ Matched
+\item Challenge: Fix the guy 2.  Street Medic 2 (Jonah) $\rightarrow$ Matched
+\item Challenge: Avoid being blown up 2. \textbf{ {\color[RGB]{255,0,0}Flaw: Fear of falling objects 1{[}0{]}} } $\rightarrow$ Sent back to pool
+\item Challenge: Tell me your name 2. Social Chameleon 3 $\rightarrow$ Overcome! \textbf{2 VP (Jonah)}
+\item Challenge: Knock Jonah out 2. Truncheon 2 (Jaya) $\rightarrow$ Matched
+\item Challenge: Break hold 2. Grim Visage 2 (Jaya) $\rightarrow$ Matched
 \item Refresh: Grim Visage (Jaya)
-\item Challenge: Avoid sister seeing her like this 1. Air of Command 1 (Jaya) → Matched
-\item Challenge: Punch sister in the nose 2.  Adrenaline Junkie 2 (Jaya) → Matched
-\item Challenge: Headbutt Padme 2. Grim Visage 2 (Jaya) → Matched
+\item Challenge: Avoid sister seeing her like this 1. Air of Command 1 (Jaya) $\rightarrow$ Matched
+\item Challenge: Punch sister in the nose 2.  Adrenaline Junkie 2 (Jaya) $\rightarrow$ Matched
+\item Challenge: Headbutt Padme 2. Grim Visage 2 (Jaya) $\rightarrow$ Matched
 \item Refresh: Adrenaline Junkie (Jaya)
-\item Challenge: Get Morgan to let her go 2.  Intimidate 3 (Jaya) → Overcome! \textbf{2 VP (Jaya)}
-\item Challenge: Avoid getting shot by Oliver 3. Adrenaline Junkie 2 (Jaya) + Stash 2 (Jaya) → Matched
+\item Challenge: Get Morgan to let her go 2.  Intimidate 3 (Jaya) $\rightarrow$ Overcome! \textbf{2 VP (Jaya)}
+\item Challenge: Avoid getting shot by Oliver 3. Adrenaline Junkie 2 (Jaya) + Stash 2 (Jaya) $\rightarrow$ Matched
 \item Refresh: Truncheon (Jaya)
 \item Refresh: Senior Constable (Jaya)
-\item Challenge: Don't feel bad about what she did to Jace 2.  Senior Constable 2 (Jaya) → Matched
+\item Challenge: Don't feel bad about what she did to Jace 2.  Senior Constable 2 (Jaya) $\rightarrow$ Matched
 \item Refresh: Grim Visage (Jaya)
 \item Refresh: Stash (Jaya)
 \item Refresh: Adrenaline Junkie (Jaya)
-\item Challenge: Bully Jace 3.  Truncheon 2 (Jaya) + Grim Visage 2 (Jaya) → Matched
-\item Challenge: Ignore shitty state of clothes 2.  Stash 2 (Jaya) → Matched
+\item Challenge: Bully Jace 3.  Truncheon 2 (Jaya) + Grim Visage 2 (Jaya) $\rightarrow$ Matched
+\item Challenge: Ignore shitty state of clothes 2.  Stash 2 (Jaya) $\rightarrow$ Matched
 \item Refresh: Truncheon (Jaya)
-\item Challenge: Avoid going down like a bitch 3. Adrenaline Junkie 2 (Jaya) → Sent back to pool
+\item Challenge: Avoid going down like a bitch 3. Adrenaline Junkie 2 (Jaya) $\rightarrow$ Sent back to pool
 \item Refresh: Senior Constable (Jaya)
 \end{itemize}
 
