--- a/4T/ch15.tex
+++ b/4T/ch15.tex
@@ -427,48 +427,48 @@ Meanwhile, Jaya is running up the stairs of the building she entered.  She burst
 \parskip=0pt
 
 \begin{itemize}
-\item Challenge: Notice Movement 1.  Rangefinder Binoculars 2 (Jaya) → Overcome! \textbf{1 VP (Jaya)}
-\item Challenge: Notice People 2.  Focused 2 (Oliver) + Parabolic Antenna 2 (Oliver) → Overcome! \textbf{2 VP (Oliver)}
-\item Challenge: Break the lock 1.  Rifle 2 (Hayley) → Overcome! \textbf{1 VP (Hayley)}
-\item Challenge: Find something cool 2. Truncheon 2 (Jaya) →  Matched
+\item Challenge: Notice Movement 1.  Rangefinder Binoculars 2 (Jaya) $\rightarrow$ Overcome! \textbf{1 VP (Jaya)}
+\item Challenge: Notice People 2.  Focused 2 (Oliver) + Parabolic Antenna 2 (Oliver) $\rightarrow$ Overcome! \textbf{2 VP (Oliver)}
+\item Challenge: Break the lock 1.  Rifle 2 (Hayley) $\rightarrow$ Overcome! \textbf{1 VP (Hayley)}
+\item Challenge: Find something cool 2. Truncheon 2 (Jaya) $\rightarrow$  Matched
 \item Refresh: Rangefinder Binoculars 2 (Jaya)
-\item Challenge: Signs of Life 2.  Vigilant 3 (Jonah) → Overcome! \textbf{2 VP (Jonah)}
-\item Challenge: Notice 1.  Ladies' Maid 2 (Hayley) → Overcome! \textbf{1 VP (Hayley)}
-\item Challenge: Notice/Reaction 2.  Rangefinder Binoculars 2 (Jaya) → Matched
+\item Challenge: Signs of Life 2.  Vigilant 3 (Jonah) $\rightarrow$ Overcome! \textbf{2 VP (Jonah)}
+\item Challenge: Notice 1.  Ladies' Maid 2 (Hayley) $\rightarrow$ Overcome! \textbf{1 VP (Hayley)}
+\item Challenge: Notice/Reaction 2.  Rangefinder Binoculars 2 (Jaya) $\rightarrow$ Matched
 \item Refresh: Focused 2 (Oliver)
 \item Refresh: Vigilant 3 (Jonah)
-\item Challenge: Notice 1. Bodyguard 1 (Hayley) → Matched
-\item Challenge: Notice 2. Focused 2 (Oliver) → Matched
-\item Challenge: Shoot the flying thing 4.  Crack Shot 3 (Oliver) + Sidearm 3 (Jaya) → Matched
+\item Challenge: Notice 1. Bodyguard 1 (Hayley) $\rightarrow$ Matched
+\item Challenge: Notice 2. Focused 2 (Oliver) $\rightarrow$ Matched
+\item Challenge: Shoot the flying thing 4.  Crack Shot 3 (Oliver) + Sidearm 3 (Jaya) $\rightarrow$ Matched
 \item Refresh: Sidearm 3 (Jaya)
 \item Refresh: Parabolic Antenna 2 (Oliver)
-\item Challenge: Notice 1. Streetwise 1 (Jonah) → Matched
-\item Challenge: ``No way that could have happened'' 2. Vigilant 3 → Overcome! \textbf{2 VP (Jonah)}
-\item Challenge: Don't get gunned down 3. Adrenaline Junkie 2 (Jaya) + Senior Constable: Colorful Record 2 (Jaya) → Matched
+\item Challenge: Notice 1. Streetwise 1 (Jonah) $\rightarrow$ Matched
+\item Challenge: ``No way that could have happened'' 2. Vigilant 3 $\rightarrow$ Overcome! \textbf{2 VP (Jonah)}
+\item Challenge: Don't get gunned down 3. Adrenaline Junkie 2 (Jaya) + Senior Constable: Colorful Record 2 (Jaya) $\rightarrow$ Matched
 \item Refresh: Adrenaline Junkie 2 (Jaya)
-\item Challenge: Oh the horror 1.  Air of Command 1 (Jaya) → Matched
+\item Challenge: Oh the horror 1.  Air of Command 1 (Jaya) $\rightarrow$ Matched
 \item Refresh: Crack Shot 3 (Oliver)
-\item Challenge: Can't deal 2.  Stash 2 (Jaya) → Matched
-\item Challenge: Don't get sick 2. \textbf{ {\color[RGB]{255,0,0}Flaw: Grave Rot 2{[}0{]} (Jaya)} } → Matched
-\item Challenge: Disrupt Aim 3. Sidearm 3 (Jaya) → Matched
+\item Challenge: Can't deal 2.  Stash 2 (Jaya) $\rightarrow$ Matched
+\item Challenge: Don't get sick 2. \textbf{ {\color[RGB]{255,0,0}Flaw: Grave Rot 2{[}0{]} (Jaya)} } $\rightarrow$ Matched
+\item Challenge: Disrupt Aim 3. Sidearm 3 (Jaya) $\rightarrow$ Matched
 \item Refresh: Focused 2 (Oliver)
 \item Refresh: Rifle 2 (Hayley)
-\item Challenge: Notice 1 for Oliver, Jonah and Hayley. Did nothing → Sent back to pool
+\item Challenge: Notice 1 for Oliver, Jonah and Hayley. Did nothing $\rightarrow$ Sent back to pool
 \item Challenge: Don't get blown up by grenade 2, for Oliver, Jonah, and Hayley.  
 \end{itemize}
 
 \begin{itemize}
-\item Oliver: Arm Strength 2 → Matched
-\item Jonah: Armor 2 → Matched
-\item Hayley: Armor 2 → Matched
+\item Oliver: Arm Strength 2 $\rightarrow$ Matched
+\item Jonah: Armor 2 $\rightarrow$ Matched
+\item Hayley: Armor 2 $\rightarrow$ Matched
 \end{itemize}
 
 \begin{itemize}
 \item Refresh: Sidearm 3 (Jaya)
 \item Refresh: Senior Constable 2 (Jaya)
-\item Challenge: Find Target 2.  Parabolic Antenna 2 (Oliver) → Matched
+\item Challenge: Find Target 2.  Parabolic Antenna 2 (Oliver) $\rightarrow$ Matched
 \item Refresh: Vigilant 3 (Jonah)
-\item Challenge: Head shot 5.  Small Unit Tactics 2 (Jonah) + Basic Uniform 1 (Jonah) + Small arms 1 (Jonah) + \textbf{ {\color[RGB]{255,0,0}Flaw: Wounded shoulder 2{[}0{]} (Jonah)} } + Basic Uniform 1 (Oliver) + Silencer 1 (Oliver) + Crack Shot 3 (Oliver) + Sniper 2 (Oliver) + Focused 2 (Oliver) → Matched
+\item Challenge: Head shot 5.  Small Unit Tactics 2 (Jonah) + Basic Uniform 1 (Jonah) + Small arms 1 (Jonah) + \textbf{ {\color[RGB]{255,0,0}Flaw: Wounded shoulder 2{[}0{]} (Jonah)} } + Basic Uniform 1 (Oliver) + Silencer 1 (Oliver) + Crack Shot 3 (Oliver) + Sniper 2 (Oliver) + Focused 2 (Oliver) $\rightarrow$ Matched
 \end{itemize}
 
 }
