--- a/4T/ch16.tex
+++ b/4T/ch16.tex
@@ -46,7 +46,7 @@ Meanwhile, down below, Lackovich starts putting down some cover fire and tells H
 
 \sceneHeadline{Oliver and Jonah }
 
-Upstairs in the building that Hayley just left, Oliver has just heard Jonah cry out as he gets shot by the soldier in the back alley.  Oliver staggers over to Jonah, who is trying to staunch the bleeding but is sliding into shock.  {[}\textit{Reduce Flaw: Gunshot wound to shoulder 2 → 1}{]}.  They patch him up as best they can with their limited supplies.  Oliver is still reeling a bit from everything going on and has to devote all of his attention to helping Jonah, thus missing all of the sounds and activity going on elsewhere {[}\textit{Refresh: Focused 2}{]}.
+Upstairs in the building that Hayley just left, Oliver has just heard Jonah cry out as he gets shot by the soldier in the back alley.  Oliver staggers over to Jonah, who is trying to staunch the bleeding but is sliding into shock.  {[}\textit{Reduce Flaw: Gunshot wound to shoulder 2 $\rightarrow$ 1}{]}.  They patch him up as best they can with their limited supplies.  Oliver is still reeling a bit from everything going on and has to devote all of his attention to helping Jonah, thus missing all of the sounds and activity going on elsewhere {[}\textit{Refresh: Focused 2}{]}.
 
 
 \sceneHeadline{Jaya and Hayley }
@@ -177,7 +177,7 @@ Oliver again encourages Lackovich and Jonah to make a break for it while he cove
 
 Once on the ground, Jaya is unable to get back up again.  When Hayley attempts to help her to her feet, Jaya says, ``My arm's dislocated, you're going to have to pop it back in.''
 
-Hayley looks at Jaya's shoulder consideringly and replies, ``I've had that before.  I think I know what to do.''  She takes Jaya's arm and braces herself.  ``This will probably hurt a lot, feel free to scream.''  With no more warning than that, she brutally wrenches Jaya's shoulder back into place. {[}\textit{Reduce Flaw: Dislocated left shoulder 2 → 1}{]}.  Jaya screams and passes out.
+Hayley looks at Jaya's shoulder consideringly and replies, ``I've had that before.  I think I know what to do.''  She takes Jaya's arm and braces herself.  ``This will probably hurt a lot, feel free to scream.''  With no more warning than that, she brutally wrenches Jaya's shoulder back into place. {[}\textit{Reduce Flaw: Dislocated left shoulder 2 $\rightarrow$ 1}{]}.  Jaya screams and passes out.
 
 
 
@@ -266,7 +266,7 @@ Jaya collapses and passes out. Hayley woozily looks over at Jaya to make sure sh
 
 
 
-When the train arrives back at SAC-09, Hayley is immediately sedated and taken to MedBay.  They evaluate Jaya's condition a little longer and then sedate her too and send her to MedBay.  Jonah's shoulder is treated {[}\textit{Reduce Flaw: Gunshot wound to shoulder 1 → 0}{]}, Oliver and Lackovich are evaluated and released.
+When the train arrives back at SAC-09, Hayley is immediately sedated and taken to MedBay.  They evaluate Jaya's condition a little longer and then sedate her too and send her to MedBay.  Jonah's shoulder is treated {[}\textit{Reduce Flaw: Gunshot wound to shoulder 1 $\rightarrow$ 0}{]}, Oliver and Lackovich are evaluated and released.
 
 
 
@@ -356,52 +356,52 @@ Morgan ends the debriefing and says that everyone should write up a report for t
 
 
 \begin{itemize}
-\item Challenge: Duck \& Shove 2.  Adrenaline Junkie 2 (Jaya) →  Matched
-\item Challenge: Shoot him 2.  Side arm: Empty Clip 3 (Jaya) → Overcome! \textbf{2 VP (Jaya)}
-\item Challenge: Dodge sniper 2.  Athletics 2 (Hayley) → Matched
+\item Challenge: Duck \& Shove 2.  Adrenaline Junkie 2 (Jaya) $\rightarrow$  Matched
+\item Challenge: Shoot him 2.  Side arm: Empty Clip 3 (Jaya) $\rightarrow$ Overcome! \textbf{2 VP (Jaya)}
+\item Challenge: Dodge sniper 2.  Athletics 2 (Hayley) $\rightarrow$ Matched
 \item Refresh: Athletics (Hayley)
-\item  {\color[RGB]{255,0,0}Reduce}  {\color[RGB]{255,0,0}\hl{Flaw}} \footnote{\textbf{Suko T }Because there were so freakin' many of them, I put flaws that were later reduced in session in regular un-bolded red so that you hopefully don't get repeats. \textsubscript{02/25/13 10:49pm}} {\color[RGB]{255,0,0}: Gunshot wound to shoulder 2{[}0{]} (Jonah)} .  Medkit 1 (Jonah) + Medkit 1 (Oliver) →  {\color[RGB]{255,0,0}Flaw: Gunshot wound to shoulder 1{[}1{]} (Jonah)} 
+\item  {\color[RGB]{255,0,0}Reduce}  {\color[RGB]{255,0,0}\hl{Flaw}} \footnote{\textbf{Suko T }Because there were so freakin' many of them, I put flaws that were later reduced in session in regular un-bolded red so that you hopefully don't get repeats. \textsubscript{02/25/13 10:49pm}} {\color[RGB]{255,0,0}: Gunshot wound to shoulder 2{[}0{]} (Jonah)} .  Medkit 1 (Jonah) + Medkit 1 (Oliver) $\rightarrow$  {\color[RGB]{255,0,0}Flaw: Gunshot wound to shoulder 1{[}1{]} (Jonah)} 
 \item Refresh: Focused 2 (Oliver)
-\item Challenge: Notice 1. Senior Constable 2 (Jaya) → Overcome! \textbf{1 VP (Jaya)}
-\item Challenge: Avoid getting kneecapped 3.  TA Uniform 1 (Jaya) + \textbf{ {\color[RGB]{255,0,0}Flaw: Wound in thigh 1{[}0{]} (Jaya)} } → Sent back
-\item Challenge: Smack him in the chin 2.  Truncheon 2 (Jaya) → Matched
-\item Challenge: Avoid getting shot 2.  Dancer 1 (Hayley) + \textbf{ {\color[RGB]{255,0,0}Flaw: Bruised Ribs 1{[}0{]} (Hayley)} } → Matched
+\item Challenge: Notice 1. Senior Constable 2 (Jaya) $\rightarrow$ Overcome! \textbf{1 VP (Jaya)}
+\item Challenge: Avoid getting kneecapped 3.  TA Uniform 1 (Jaya) + \textbf{ {\color[RGB]{255,0,0}Flaw: Wound in thigh 1{[}0{]} (Jaya)} } $\rightarrow$ Sent back
+\item Challenge: Smack him in the chin 2.  Truncheon 2 (Jaya) $\rightarrow$ Matched
+\item Challenge: Avoid getting shot 2.  Dancer 1 (Hayley) + \textbf{ {\color[RGB]{255,0,0}Flaw: Bruised Ribs 1{[}0{]} (Hayley)} } $\rightarrow$ Matched
 \item Refresh: Sidearm 3 (Jaya)
-\item Challenge: Avoid getting shot, again 2.   {\color[RGB]{255,0,0}Flaw: Dislocated left shoulder 2{[}0{]} (Jaya)}  → Matched
-\item Challenge: Avoid friendly fire or being spotted 1.  Vigilant 3 (Jonah) → Overcome! \textbf{1 VP (Jonah)}
+\item Challenge: Avoid getting shot, again 2.   {\color[RGB]{255,0,0}Flaw: Dislocated left shoulder 2{[}0{]} (Jaya)}  $\rightarrow$ Matched
+\item Challenge: Avoid friendly fire or being spotted 1.  Vigilant 3 (Jonah) $\rightarrow$ Overcome! \textbf{1 VP (Jonah)}
 \item Refresh: Arm strength 2 (Oliver)
-\item Challenge: Open the helmet 2.  Arm strength 2 (Oliver) → Matched
-\item Challenge: Put him down 4.  Side Arm 3 (Jaya) + \textbf{ {\color[RGB]{255,0,0}Flaw: Wound in right arm 1{[}0{]} (Jaya)} } + Rifle 2 (Hayley) + Rifle 1 (Hayley) → Matched
-\item Challenge: Toss him off the roof without going over with him 4. Athletics 2 (Hayley) + Conditioned 2 (Hayley) + Hand to Hand Combat 1 (Hayley) + TA Uniform 1 (Hayley) + \textbf{ {\color[RGB]{255,0,0}Flaw: Knife wound to upper right arm 2{[}0{]} (Hayley)} } → Matched
-\item Challenge: Avoid getting shot, for the third time 2.  \textbf{ {\color[RGB]{255,0,0}Flaw: Deafened in right ear 1{[}0{]} (Hayley)} } → Sent back
+\item Challenge: Open the helmet 2.  Arm strength 2 (Oliver) $\rightarrow$ Matched
+\item Challenge: Put him down 4.  Side Arm 3 (Jaya) + \textbf{ {\color[RGB]{255,0,0}Flaw: Wound in right arm 1{[}0{]} (Jaya)} } + Rifle 2 (Hayley) + Rifle 1 (Hayley) $\rightarrow$ Matched
+\item Challenge: Toss him off the roof without going over with him 4. Athletics 2 (Hayley) + Conditioned 2 (Hayley) + Hand to Hand Combat 1 (Hayley) + TA Uniform 1 (Hayley) + \textbf{ {\color[RGB]{255,0,0}Flaw: Knife wound to upper right arm 2{[}0{]} (Hayley)} } $\rightarrow$ Matched
+\item Challenge: Avoid getting shot, for the third time 2.  \textbf{ {\color[RGB]{255,0,0}Flaw: Deafened in right ear 1{[}0{]} (Hayley)} } $\rightarrow$ Sent back
 \item Refresh: Adrenaline Junkie 2 (Jaya)
-\item Challenge: WTF just happened? 2. \textbf{ {\color[RGB]{255,0,0}Flaw: Wait, am I tripping? 1{[}0{]} (Jaya)} } → Sent back
+\item Challenge: WTF just happened? 2. \textbf{ {\color[RGB]{255,0,0}Flaw: Wait, am I tripping? 1{[}0{]} (Jaya)} } $\rightarrow$ Sent back
 \item Refresh: Senior Constable 2 (Jaya)
 \item Refresh: Conditioned 2 (Hayley)
 \item Refresh: Armor 2 (Jonah)
-\item Challenge: Notice 1. Focused 2 (Oliver) → Overcome! \textbf{1 VP (Oliver)}
+\item Challenge: Notice 1. Focused 2 (Oliver) $\rightarrow$ Overcome! \textbf{1 VP (Oliver)}
 \item Refresh: Crack Shot 3 (Oliver)
 \item Refresh: Small Unit Tactics 2 (Jonah)
-\item Challenge: Notice 1. Nose for Breadcrumbs 2 (Hayley) → Overcome! \textbf{1 VP (Hayley)}
-\item Challenge: Don't get blown up, again 2. Adrenaline Junkie 2 (Jaya) → Matched
-\item  {\color[RGB]{255,0,0}Reduce Flaw: Dislocated left shoulder 2{[}0{]} (Jaya)} .  Conditioned 2 (Hayley) → \textbf{ {\color[RGB]{255,0,0}Flaw: Injured shoulder 1{[}1{]} (Jaya)} }
+\item Challenge: Notice 1. Nose for Breadcrumbs 2 (Hayley) $\rightarrow$ Overcome! \textbf{1 VP (Hayley)}
+\item Challenge: Don't get blown up, again 2. Adrenaline Junkie 2 (Jaya) $\rightarrow$ Matched
+\item  {\color[RGB]{255,0,0}Reduce Flaw: Dislocated left shoulder 2{[}0{]} (Jaya)} .  Conditioned 2 (Hayley) $\rightarrow$ \textbf{ {\color[RGB]{255,0,0}Flaw: Injured shoulder 1{[}1{]} (Jaya)} }
 \item Refresh: Athletics 2 (Hayley)
-\item Challenge: Chase off the fliers 3. Crack shot 3 (Oliver) → Matched
-\item Challenge: Get to the stairs before being dive-bombed 3. Senior Constable 2 (Jaya) → Sent back
-\item Challenge: Notice 1.  Small Unit Tactics 2 (Jonah) → Overcome! \textbf{1 VP (Jonah)}
-\item Challenge: Find Shelter from the blast 3. Hardened 4 (Oliver) → Overcome! \textbf{3 VP (Oliver)}
+\item Challenge: Chase off the fliers 3. Crack shot 3 (Oliver) $\rightarrow$ Matched
+\item Challenge: Get to the stairs before being dive-bombed 3. Senior Constable 2 (Jaya) $\rightarrow$ Sent back
+\item Challenge: Notice 1.  Small Unit Tactics 2 (Jonah) $\rightarrow$ Overcome! \textbf{1 VP (Jonah)}
+\item Challenge: Find Shelter from the blast 3. Hardened 4 (Oliver) $\rightarrow$ Overcome! \textbf{3 VP (Oliver)}
 \item Challenge: Get on board before explosion 1 (for each of us).
 \end{itemize}
 
 \begin{itemize}
-\item Jaya: → Sent Back
-\item Hayley: Athletics 2 (Hayley) → Overcome! \textbf{1 VP (Hayley)}
-\item Oliver: Grim Visage 2 (Jaya) → Overcome! \textbf{1 VP (Jaya)}
-\item Jonah: Armor 2 (Jonah) → Overcome! \textbf{1 VP (Jonah)}
+\item Jaya: $\rightarrow$ Sent Back
+\item Hayley: Athletics 2 (Hayley) $\rightarrow$ Overcome! \textbf{1 VP (Hayley)}
+\item Oliver: Grim Visage 2 (Jaya) $\rightarrow$ Overcome! \textbf{1 VP (Jaya)}
+\item Jonah: Armor 2 (Jonah) $\rightarrow$ Overcome! \textbf{1 VP (Jonah)}
 \end{itemize}
 
 \begin{itemize}
-\item  {\color[RGB]{255,0,0}Reduce Flaw: }  {\color[RGB]{255,0,0}Gunshot wound to shoulder}  {\color[RGB]{255,0,0} 1{[}1{]} (Jonah)} .  Street Medic 2 (Jonah) → \textbf{ {\color[RGB]{255,0,0}\hl{Quirk: Gunshot scar on shoulder}} }\footnote{\textbf{Suko T }I assume, but of course you can change it. \textsubscript{02/25/13 10:50pm}}\textbf{ {\color[RGB]{255,0,0}0{[}2{]} (Jonah)} }
+\item  {\color[RGB]{255,0,0}Reduce Flaw: }  {\color[RGB]{255,0,0}Gunshot wound to shoulder}  {\color[RGB]{255,0,0} 1{[}1{]} (Jonah)} .  Street Medic 2 (Jonah) $\rightarrow$ \textbf{ {\color[RGB]{255,0,0}\hl{Quirk: Gunshot scar on shoulder}} }\footnote{\textbf{Suko T }I assume, but of course you can change it. \textsubscript{02/25/13 10:50pm}}\textbf{ {\color[RGB]{255,0,0}0{[}2{]} (Jonah)} }
 \end{itemize}
 
 
@@ -487,3 +487,9 @@ Oliver: 4
 % Exported @ 08/23/15 11:58pm
 \end{flushright}
 
+
+\begin{flushright}
+~
+\vskip 30em
+\includegraphics[width=12cm]{img/boo1_shooting_misc.jpg}
+\end{flushright}
