--- a/4T/ch17.tex
+++ b/4T/ch17.tex
@@ -460,7 +460,7 @@ No one knows.  He looks up Operator and the competences are fairly basic - firea
 
 
 
-At this moment, the door opens and Micah walks in with a stopwatch.  ``Present your team at the ready line!'' he says and starts the watch.  Luckily Jonah had gone through the duffel bag that Jari delivered earlier and passed out the training uniforms that were within.  {[}\textit{Challenge: Get ready in mediocre time 2 → Matched}{]}.  \hl{Hayley leaps into action and practically dresses Jaya as she stands there in bewilderment}\footnote{\textbf{q.google }I think that's actually a Challenge, and worth VP :). \textsubscript{04/06/13 2:17pm}}\footnote{$\rightarrow$\textbf{Suko T }There are few things Hayley has been trained for but this is one of them.  So this was nuthin'.  Especially since it wasn't a haute couture gown with all the fancy undergarments, accessories and necessary complimentary hair styling. :D \textsubscript{04/06/13 4:29pm}}, and then makes sure everyone else's uniforms are up to snuff.
+At this moment, the door opens and Micah walks in with a stopwatch.  ``Present your team at the ready line!'' he says and starts the watch.  Luckily Jonah had gone through the duffel bag that Jari delivered earlier and passed out the training uniforms that were within.  {[}\textit{Challenge: Get ready in mediocre time 2 $\rightarrow$ Matched}{]}.  \hl{Hayley leaps into action and practically dresses Jaya as she stands there in bewilderment}\footnote{\textbf{q.google }I think that's actually a Challenge, and worth VP :). \textsubscript{04/06/13 2:17pm}}\footnote{$\rightarrow$\textbf{Suko T }There are few things Hayley has been trained for but this is one of them.  So this was nuthin'.  Especially since it wasn't a haute couture gown with all the fancy undergarments, accessories and necessary complimentary hair styling. :D \textsubscript{04/06/13 4:29pm}}, and then makes sure everyone else's uniforms are up to snuff.
 
 
 
@@ -476,7 +476,7 @@ Jaya is 1, Oliver is 2, Jonah is 3 and Hayley is 4.  Jonah notes who is which nu
 
 Jaya and Jonah step back from the ready line, along with Lackovich and Davis.
 
-``Evens, drop and give me 50,'' barks Micah.  {[}\textit{Challenge: Win 50 pushup test → Overcome!}{]}
+``Evens, drop and give me 50,'' barks Micah.  {[}\textit{Challenge: Win 50 pushup test $\rightarrow$ Overcome!}{]}
 
 
 
@@ -484,15 +484,15 @@ Jaya and Jonah step back from the ready line, along with Lackovich and Davis.
 
 
 
-``Alright, go around the pillars, relay.  Five miles.  Go!''  {[}\textit{Challenge: Beat other team at running 3 → Matched}{]}  Jaya manages to time her laps so that she can sneak a little something extra from her stash when hidden by a pillar.  She also deliberately provokes and ``accidentally'' elbows Lackovich a few times so that Lackovich expends too much energy fighting back and tires herself out.   They get into a couple of scuffles during the run but Jaya is simply inexhaustible, even bruised and bleeding as she is.  Jonah has managed to pace himself very well so that between the two of them, by the last few laps, they have built up a fair lead and they finish the 5 miles before Lackovich and Davis.  Halfway through the 5 miles, Morgan and Rook walk into the training room and ask Jari for the patrol group's status.
+``Alright, go around the pillars, relay.  Five miles.  Go!''  {[}\textit{Challenge: Beat other team at running 3 $\rightarrow$ Matched}{]}  Jaya manages to time her laps so that she can sneak a little something extra from her stash when hidden by a pillar.  She also deliberately provokes and ``accidentally'' elbows Lackovich a few times so that Lackovich expends too much energy fighting back and tires herself out.   They get into a couple of scuffles during the run but Jaya is simply inexhaustible, even bruised and bleeding as she is.  Jonah has managed to pace himself very well so that between the two of them, by the last few laps, they have built up a fair lead and they finish the 5 miles before Lackovich and Davis.  Halfway through the 5 miles, Morgan and Rook walk into the training room and ask Jari for the patrol group's status.
 
 
 
-Back at the ready line, Micah announces that they will have a 2 minute rest.  Oliver whines about the short break {[}\textit{Reduce Flaw: Showoff 1 → 0}{]} and pisses off Micah enough to cut the rest short.
+Back at the ready line, Micah announces that they will have a 2 minute rest.  Oliver whines about the short break {[}\textit{Reduce Flaw: Showoff 1 $\rightarrow$ 0}{]} and pisses off Micah enough to cut the rest short.
 
 
 
-``Alright, Assembly next!'' says Micah and starts his stopwatch again, and Carruthers and Javier head for some crates against the back wall.  In the crates are parts of a handgun, rifle and sniper rifle, including ammunition.  {[}\textit{Challenge: Win gun assembly 3 → Matched}{]}
+``Alright, Assembly next!'' says Micah and starts his stopwatch again, and Carruthers and Javier head for some crates against the back wall.  In the crates are parts of a handgun, rifle and sniper rifle, including ammunition.  {[}\textit{Challenge: Win gun assembly 3 $\rightarrow$ Matched}{]}
 
 
 
@@ -537,11 +537,11 @@ Hayley just looks at Jaya for instructions, so Jaya steps forward and says to Ro
 
 
 \begin{itemize}
-\item Challenge: Get ready in mediocre time 2.  Ladies' Maid 2 (Hayley) → Matched
-\item Challenge: Win 50 pushup test. Athletics 2 (Hayley) + Armstrength 1 (Oliver) +  {\color[RGB]{255,0,0}Flaw: Show off 1}  (Oliver) → Overcome! (\textbf{1 VP Oliver, 1 VP Hayley})
-\item Challenge: Beat other team at running 3.  Stash 2 (Jaya) + Adrenaline Junkie 2 (Jaya) → Matched
-\item Reduce Flaw: Showoff 1 via Anti-authoritarian 1 (Oliver) → 0
-\item Challenge: Win gun assembly 3. Sniper Rifle 2 (Oliver) + Memory for Details 1 (Hayley) + Rifle 1 (Hayley)  → Matched
+\item Challenge: Get ready in mediocre time 2.  Ladies' Maid 2 (Hayley) $\rightarrow$ Matched
+\item Challenge: Win 50 pushup test. Athletics 2 (Hayley) + Armstrength 1 (Oliver) +  {\color[RGB]{255,0,0}Flaw: Show off 1}  (Oliver) $\rightarrow$ Overcome! (\textbf{1 VP Oliver, 1 VP Hayley})
+\item Challenge: Beat other team at running 3.  Stash 2 (Jaya) + Adrenaline Junkie 2 (Jaya) $\rightarrow$ Matched
+\item Reduce Flaw: Showoff 1 via Anti-authoritarian 1 (Oliver) $\rightarrow$ 0
+\item Challenge: Win gun assembly 3. Sniper Rifle 2 (Oliver) + Memory for Details 1 (Hayley) + Rifle 1 (Hayley)  $\rightarrow$ Matched
 \end{itemize}
 
 
