--- a/4T/ch18.tex
+++ b/4T/ch18.tex
@@ -579,8 +579,8 @@ The situation has grown so odd that\hl{Jaya finally realizes that she must be tr
 
 
 \begin{itemize}
-\item Challenge 3: Take down Rook without ending up in a compromising position.  Unashamed 1 (Hayley) + Dancer 1 (Hayley) + Truncheon 2 (Jaya) → Matched
-\item Challenge 3: Notice what Jari is up to.  Vigilant 3 (Jonah) → Matched
+\item Challenge 3: Take down Rook without ending up in a compromising position.  Unashamed 1 (Hayley) + Dancer 1 (Hayley) + Truncheon 2 (Jaya) $\rightarrow$ Matched
+\item Challenge 3: Notice what Jari is up to.  Vigilant 3 (Jonah) $\rightarrow$ Matched
 \item Refresh: Sniper Rifle 2 (Oliver)
 \item Refresh: Adrenaline Junkie 2 (Jaya)
 \item Challenge 1: Notice machinery.  Senior Constable 2 (Jaya)  --\textgreater  Overcome! (\textbf{1 VP Jaya})
