--- a/4T/ch21.tex
+++ b/4T/ch21.tex
@@ -255,7 +255,7 @@ Jonah chats up the Station Chief and looks over the maps of the area.  They find
 
 
 
-Oliver falls behind again, not just his limp but he's also looking and listening for snipers {[}\textit{Challenge: Notice Snipers 1. Binoculars 2 (Oliver) → Overcome! }\textit{\textbf{1 VP (Oliver)}}{]}
+Oliver falls behind again, not just his limp but he's also looking and listening for snipers {[}\textit{Challenge: Notice Snipers 1. Binoculars 2 (Oliver) $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Oliver)}}{]}
 
 
 
@@ -271,23 +271,23 @@ Jonah and Oliver start talking strategy as we approach the Apartment Building.
 
 ``I'd rather not deal with a corpse this time,'' says Jonah.
 
-``Hey, I was the one who brought back the corpse,'' corrects Oliver, loudly enough to be overheard.  The redshirts get nervous.  {[}\textit{Challenge: Don't frighten the Norms 2.  Social Chameleon 4 (Jonah) → Overcome! }\textit{\textbf{2 VP (Jonah)}}{]}
+``Hey, I was the one who brought back the corpse,'' corrects Oliver, loudly enough to be overheard.  The redshirts get nervous.  {[}\textit{Challenge: Don't frighten the Norms 2.  Social Chameleon 4 (Jonah) $\rightarrow$ Overcome! }\textit{\textbf{2 VP (Jonah)}}{]}
 
 
 
-Oliver finds out that Dev was in the war and has some combat experience. {[}\textit{Challenge: }\textit{\hl{Coach Dev into helping be a sniper}}\footnote{\textbf{Adam Kenney }This was actually more of a social challenge to win his trust and get him to cover Oliver's back. \textsubscript{02/27/14 3:01pm}}\textit{1. Veteran 2 (Oliver) → Overcome! }\textit{\textbf{1 VP (Oliver)}}{]}
+Oliver finds out that Dev was in the war and has some combat experience. {[}\textit{Challenge: }\textit{\hl{Coach Dev into helping be a sniper}}\footnote{\textbf{Adam Kenney }This was actually more of a social challenge to win his trust and get him to cover Oliver's back. \textsubscript{02/27/14 3:01pm}}\textit{1. Veteran 2 (Oliver) $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Oliver)}}{]}
 
 
 
-{[}\textit{Challenge: Calm down Diego 1. Gorgeous 3 (Hayley) → Overcome! }\textit{\textbf{1 VP (Hayley)}}{]}  Hayley smiles at Diego and he swallows his nerves so he doesn't look nervous in front of the pretty girl.
+{[}\textit{Challenge: Calm down Diego 1. Gorgeous 3 (Hayley) $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Hayley)}}{]}  Hayley smiles at Diego and he swallows his nerves so he doesn't look nervous in front of the pretty girl.
 
 
 
-{[}\textit{Challenge: Calm down Franke 1. Small Unit Tactics 2 (Jonah) → Overcome! }\textit{\textbf{1 VP (Jonah)}}{]} Jonah gives Franke some tactical advice that calms him down so he knows there is a good plan. 
+{[}\textit{Challenge: Calm down Franke 1. Small Unit Tactics 2 (Jonah) $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Jonah)}}{]} Jonah gives Franke some tactical advice that calms him down so he knows there is a good plan. 
 
 
 
-Unfortunately Jonah totally misjudges Leah {[}\textit{Refresh: Social Chameleon 4 (Jonah)}{]} and instead of calming her down, freaks her out even more.  {[}\textit{Challenge: Calm down freaked out Leah 2. Stash 2 (Jaya) →  Matched}{]} Luckily Jaya knows just what to do and pulls Leah aside and slips her a pill from her Stash.  From the deft way Leah takes the pill, it's clear she is very familiar with chemical enhancements.
+Unfortunately Jonah totally misjudges Leah {[}\textit{Refresh: Social Chameleon 4 (Jonah)}{]} and instead of calming her down, freaks her out even more.  {[}\textit{Challenge: Calm down freaked out Leah 2. Stash 2 (Jaya) $\rightarrow$  Matched}{]} Luckily Jaya knows just what to do and pulls Leah aside and slips her a pill from her Stash.  From the deft way Leah takes the pill, it's clear she is very familiar with chemical enhancements.
 
 
 
@@ -319,7 +319,7 @@ Jaya instructs Leah and Diego to start searching door to door.  She and Hayley w
 
 
 
-{[}\textit{Challenge: Notice 1. Concealment 1 (Jonah) → Matched}{]} Around the 5th/6th floor, Jonah notices something out of place- a cable/conduit running up and down the stairwell wall.  It is camouflaged to escape easy notice.  The technology of the cable is beyond the tech in the building, and closer to what Jonah sees at SAC-09.  He reports that he has found a wire.
+{[}\textit{Challenge: Notice 1. Concealment 1 (Jonah) $\rightarrow$ Matched}{]} Around the 5th/6th floor, Jonah notices something out of place- a cable/conduit running up and down the stairwell wall.  It is camouflaged to escape easy notice.  The technology of the cable is beyond the tech in the building, and closer to what Jonah sees at SAC-09.  He reports that he has found a wire.
 
 
 
@@ -387,7 +387,7 @@ Jaya peers around a corner and sees a man in miner's clothing standing by a larg
 
 
 
-The man starts lowering his hands and Hayley tackles him.  {[}\textit{Challenge: The Window is not a healthy Exit Strategy 3. Athletics 3 (Hayley) + Hand to Hand 2 (Hayley) + Saltremachy 2 (Hayley)→ Overcome! }\textit{\textbf{3 VP (Hayley)}}{]}.  The man tries to use Hayley's momentum against her and hurl her through the window but she sees it coming and twists out of the way.  She attempts to grab him but instead of fighting her, he moves towards the window, clearly intending to jump out himself.  Hayley viciously kicks him in the knee, probably breaking it.  She remembers the soldiers in Nicklepan and immobilizes his hands so he can't trigger any devices.  The man stares out the window.
+The man starts lowering his hands and Hayley tackles him.  {[}\textit{Challenge: The Window is not a healthy Exit Strategy 3. Athletics 3 (Hayley) + Hand to Hand 2 (Hayley) + Saltremachy 2 (Hayley)$\rightarrow$ Overcome! }\textit{\textbf{3 VP (Hayley)}}{]}.  The man tries to use Hayley's momentum against her and hurl her through the window but she sees it coming and twists out of the way.  She attempts to grab him but instead of fighting her, he moves towards the window, clearly intending to jump out himself.  Hayley viciously kicks him in the knee, probably breaking it.  She remembers the soldiers in Nicklepan and immobilizes his hands so he can't trigger any devices.  The man stares out the window.
 
 
 
@@ -397,7 +397,7 @@ He rattles off a long sequence of numbers, with some odd symbols/words in there 
 
 
 
-Jonah and Franke have arrived on the 7th floor.  Jonah looks out the window {[}\textit{Challenge: Notice 1. Vigilant 3 (Jonah)  → Overcome! }\textit{\textbf{1 VP (Jonah)}}{]} and can see a building with a large open area.  In the middle of the open area is a figure, seated in a chair.  It is too far to be certain who it is but \hl{it seems very possible that it is Lackovich}\footnote{\textbf{Suko T }or was this verified with a challenge that I missed?  Oliver has the binocs and the sniper scope so I didn't think we had any means of distance vision. \textsubscript{02/25/14 4:54pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Oliver confirmed it at the end of the session, yes. \textsubscript{02/25/14 8:12pm}}\footnote{$\rightarrow$\textbf{Suko T }Cool.  I couldn't recall if he was able to get eyes on the yard or not. \textsubscript{02/25/14 9:46pm}}.
+Jonah and Franke have arrived on the 7th floor.  Jonah looks out the window {[}\textit{Challenge: Notice 1. Vigilant 3 (Jonah)  $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Jonah)}}{]} and can see a building with a large open area.  In the middle of the open area is a figure, seated in a chair.  It is too far to be certain who it is but \hl{it seems very possible that it is Lackovich}\footnote{\textbf{Suko T }or was this verified with a challenge that I missed?  Oliver has the binocs and the sniper scope so I didn't think we had any means of distance vision. \textsubscript{02/25/14 4:54pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Oliver confirmed it at the end of the session, yes. \textsubscript{02/25/14 8:12pm}}\footnote{$\rightarrow$\textbf{Suko T }Cool.  I couldn't recall if he was able to get eyes on the yard or not. \textsubscript{02/25/14 9:46pm}}.
 
 
 
@@ -425,16 +425,16 @@ Oliver tries to get to a position where he can see the yard from a lower level/t
 
 \begin{itemize}
 \item Refresh: Hardened 4 (Oliver)
-\item Challenge: Notice Snipers 1. Binoculars 2 (Oliver) → Overcome! \textbf{1 VP (Oliver)}
-\item Challenge: Don't frighten the Norms 2.  Social Chameleon 4 (Jonah) → Overcome! \textbf{2 VP (Jonah)}
-\item Challenge: Coach Dev into helping be a sniper 1. Veteran 2 (Oliver) → Overcome! \textbf{1 VP (Oliver)}
-\item Challenge: Calm down Diego 1. Gorgeous 3 (Hayley) → Overcome! \textbf{1 VP (Hayley)}{]} 
-\item Challenge: Calm down Franke 1. Small Unit Tactics 2 (Jonah) → Overcome! \textbf{1 VP (Jonah)}
+\item Challenge: Notice Snipers 1. Binoculars 2 (Oliver) $\rightarrow$ Overcome! \textbf{1 VP (Oliver)}
+\item Challenge: Don't frighten the Norms 2.  Social Chameleon 4 (Jonah) $\rightarrow$ Overcome! \textbf{2 VP (Jonah)}
+\item Challenge: Coach Dev into helping be a sniper 1. Veteran 2 (Oliver) $\rightarrow$ Overcome! \textbf{1 VP (Oliver)}
+\item Challenge: Calm down Diego 1. Gorgeous 3 (Hayley) $\rightarrow$ Overcome! \textbf{1 VP (Hayley)}{]} 
+\item Challenge: Calm down Franke 1. Small Unit Tactics 2 (Jonah) $\rightarrow$ Overcome! \textbf{1 VP (Jonah)}
 \item Refresh: Social Chameleon 4 (Jonah)
-\item Challenge: Calm down freaked out Leah 2. Stash 2 (Jaya) →  Matched
-\item Challenge: Notice 1. Concealment 1 (Jonah) → Matched
-\item Challenge: The Window is not a viable Exit Strategy 3. Athletics 3 (Hayley) + Hand to Hand 2 (Hayley) + Saltremachy 2 (Hayley)→ Overcome! \textbf{3 VP (Hayley)}
-\item Challenge: Notice 1. Vigilant 3 (Jonah)  → Overcome! \textbf{1 VP (Jonah)}
+\item Challenge: Calm down freaked out Leah 2. Stash 2 (Jaya) $\rightarrow$  Matched
+\item Challenge: Notice 1. Concealment 1 (Jonah) $\rightarrow$ Matched
+\item Challenge: The Window is not a viable Exit Strategy 3. Athletics 3 (Hayley) + Hand to Hand 2 (Hayley) + Saltremachy 2 (Hayley)$\rightarrow$ Overcome! \textbf{3 VP (Hayley)}
+\item Challenge: Notice 1. Vigilant 3 (Jonah)  $\rightarrow$ Overcome! \textbf{1 VP (Jonah)}
 \end{itemize}
 
 
