--- a/4T/ch22.tex
+++ b/4T/ch22.tex
@@ -75,7 +75,7 @@ Jonah asks her a bit about Redemarrer and she said she was born there, \hl{then 
 
 
 
-There is a muddled discussion on what to do next.  Diego, Leah and Franke are very confused by all this.  Jaya starts looking for Dev, peering out of windows.  Hayley moves with her, keeping a firm grip on the back of Jaya's uniform so she doesn't fall out.  Jonah is too distracted by everything going on to help search for Dev. {[}\textit{Refresh Vigilant 3 (Jonah)}{]}.  Jaya can't find him and asks Hayley to help.  {[}\textit{Challenge: Find Dev 2. Nose for Breadcrumbs 2 (Hayley) → Matched}{]}
+There is a muddled discussion on what to do next.  Diego, Leah and Franke are very confused by all this.  Jaya starts looking for Dev, peering out of windows.  Hayley moves with her, keeping a firm grip on the back of Jaya's uniform so she doesn't fall out.  Jonah is too distracted by everything going on to help search for Dev. {[}\textit{Refresh Vigilant 3 (Jonah)}{]}.  Jaya can't find him and asks Hayley to help.  {[}\textit{Challenge: Find Dev 2. Nose for Breadcrumbs 2 (Hayley) $\rightarrow$ Matched}{]}
 
 
 
@@ -95,7 +95,7 @@ Jaya and Hayley make it down the ground floor (after hip-checking some old dude 
 
 
 
-{[}\textit{Challenge: Notice 1.  Small Unit Tactics 2 (Jonah) → Overcome! }\textit{\textbf{1 VP (Jonah)}}{]}  Jonah notices that the \#2 guy (nearest to Lackovich) has pulled out a pistol.  Guy \#1 is looking toward the Apartment in Jaya/Hayley/Dev's general direction. 
+{[}\textit{Challenge: Notice 1.  Small Unit Tactics 2 (Jonah) $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Jonah)}}{]}  Jonah notices that the \#2 guy (nearest to Lackovich) has pulled out a pistol.  Guy \#1 is looking toward the Apartment in Jaya/Hayley/Dev's general direction. 
 
 
 
@@ -179,7 +179,7 @@ Hayley can't bring herself to repeat such rude words, even if she agrees with th
 
 
 
-Oliver tries to push it to keep the connection {[}\textit{Refresh Operator 1 (Oliver)}{]} and instead he feels a sudden shock of pain like knives slicing into his back.  He pitches forward.  {[}\textit{Challenge 3: Don't set off gun.  Hardened 4 (Oliver) → Overcome! }\textit{\textbf{3 VP (Oliver)}}{]}
+Oliver tries to push it to keep the connection {[}\textit{Refresh Operator 1 (Oliver)}{]} and instead he feels a sudden shock of pain like knives slicing into his back.  He pitches forward.  {[}\textit{Challenge 3: Don't set off gun.  Hardened 4 (Oliver) $\rightarrow$ Overcome! }\textit{\textbf{3 VP (Oliver)}}{]}
 
 
 
@@ -233,7 +233,7 @@ Guy \#2 pauses and looks at the guy next to him then answers, ``This is clearly 
 
 
 
-{[}\textit{Challenge: Notice 2.  Vigilant 3 (Jonah)  → Overcome! }\textit{\textbf{2 VP (Jonah)}}{]}  At this point, Jonah notices a rod strapped to one of the legs of the chair.  It is odd-looking, clearly advanced technology.
+{[}\textit{Challenge: Notice 2.  Vigilant 3 (Jonah)  $\rightarrow$ Overcome! }\textit{\textbf{2 VP (Jonah)}}{]}  At this point, Jonah notices a rod strapped to one of the legs of the chair.  It is odd-looking, clearly advanced technology.
 
 
 
@@ -241,11 +241,11 @@ Guy \#2 pauses and looks at the guy next to him then answers, ``This is clearly 
 
 
 
-Hayley moves toward Lackovich and Guy \#2 tries to grab her.  She tries to get out of the way but moves in just the wrong direction.  {[}\textit{Refresh: Saltaremachy 2 (Hayley)}{]}.  {[}\textit{Challenge: Don't get grabbed 4.  Sidearm 3 (Jaya) + Crack Shot 3 (Oliver) → Matched}{]}.  Jaya and Oliver both fire on the guy and he takes a hit to the ribs and goes reeling back.
+Hayley moves toward Lackovich and Guy \#2 tries to grab her.  She tries to get out of the way but moves in just the wrong direction.  {[}\textit{Refresh: Saltaremachy 2 (Hayley)}{]}.  {[}\textit{Challenge: Don't get grabbed 4.  Sidearm 3 (Jaya) + Crack Shot 3 (Oliver) $\rightarrow$ Matched}{]}.  Jaya and Oliver both fire on the guy and he takes a hit to the ribs and goes reeling back.
 
 
 
-{[}\textit{Challenge: Notice 1.  Ladies' Maid 2 (Hayley) → Overcome! }\textit{\textbf{1 VP (Hayley)}}{]} Guy \#2's cloak is torn and his armor is somewhat damaged.  He pulls back his visor and Hayley can see his face.  His skin is well moisturized and his cheekbones are fabulous.  \hl{She's momentarily distracted by his handsome good looks and excellent skincare.}\footnote{\textbf{q.google } \textsubscript{05/01/14 12:43pm}}  She doesn't recognize him.
+{[}\textit{Challenge: Notice 1.  Ladies' Maid 2 (Hayley) $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Hayley)}}{]} Guy \#2's cloak is torn and his armor is somewhat damaged.  He pulls back his visor and Hayley can see his face.  His skin is well moisturized and his cheekbones are fabulous.  \hl{She's momentarily distracted by his handsome good looks and excellent skincare.}\footnote{\textbf{q.google } \textsubscript{05/01/14 12:43pm}}  She doesn't recognize him.
 
 
 
@@ -253,15 +253,15 @@ Two of the other guys throw something up in the air that explode and starts rele
 
 
 
-Jaya rushes Guy \#1.  {[}\textit{Challenge: Knock over Guy \#1 2.  Adrenaline Junkie 2 (Jaya) + Pistol 2 (Jaya)  → Overcome! }\textit{\textbf{2 VP (Jaya)}}{]}.  She knocks him to the ground.
+Jaya rushes Guy \#1.  {[}\textit{Challenge: Knock over Guy \#1 2.  Adrenaline Junkie 2 (Jaya) + Pistol 2 (Jaya)  $\rightarrow$ Overcome! }\textit{\textbf{2 VP (Jaya)}}{]}.  She knocks him to the ground.
 
 
 
-Guy \#2 starts moving toward Lackovich.  Hayley also starts running toward Lackovich.  Oliver uses Operator to tell Hayley to step aside, giving him a clear shot at Guy \#2 but delaying her reaching Lackovich.  Guy \#2 reaches Lackovich and kicks the leg of the chair out that had the rod attached to it.  He kneels down, and starts doing something to the ground.  {[}\textit{Challenge: Body Shot 3.  Sniper 3 (Oliver) → Matched}{]}.  Oliver shoots the guy and he stumbles back away from Lackovich.
+Guy \#2 starts moving toward Lackovich.  Hayley also starts running toward Lackovich.  Oliver uses Operator to tell Hayley to step aside, giving him a clear shot at Guy \#2 but delaying her reaching Lackovich.  Guy \#2 reaches Lackovich and kicks the leg of the chair out that had the rod attached to it.  He kneels down, and starts doing something to the ground.  {[}\textit{Challenge: Body Shot 3.  Sniper 3 (Oliver) $\rightarrow$ Matched}{]}.  Oliver shoots the guy and he stumbles back away from Lackovich.
 
 
 
-Jaya starts punching Guy \#1.  He says, ``I'm going to kill your sister.'' which enrages Jaya.  {[}\textit{Challenge: Crush face to bloody pulp 2.  Truncheon 3 (Jaya)  → Overcome! }\textit{\textbf{2 VP (Jaya)}}{]}.  She beats his face in and kills him..
+Jaya starts punching Guy \#1.  He says, ``I'm going to kill your sister.'' which enrages Jaya.  {[}\textit{Challenge: Crush face to bloody pulp 2.  Truncheon 3 (Jaya)  $\rightarrow$ Overcome! }\textit{\textbf{2 VP (Jaya)}}{]}.  She beats his face in and kills him..
 
 
 
@@ -279,7 +279,7 @@ The ground below Lackovich starts moving.  It is a grate that is opening downwar
 
 
 
-{[}\textit{Challenge: Keep Lackovich from falling 2.  Conditioned 2 (Hayley) → Matched}{]}  Hayley dives to grab Lackovich, the deadweight of her body and the chair wrenching Hayley's arms painfully, but she hangs on.  From this vantage point, she can see that below Lackovich there is just darkness and an odd noise.  There is a rush of air as the air and smoke are sucked into the darkness below.
+{[}\textit{Challenge: Keep Lackovich from falling 2.  Conditioned 2 (Hayley) $\rightarrow$ Matched}{]}  Hayley dives to grab Lackovich, the deadweight of her body and the chair wrenching Hayley's arms painfully, but she hangs on.  From this vantage point, she can see that below Lackovich there is just darkness and an odd noise.  There is a rush of air as the air and smoke are sucked into the darkness below.
 
 
 
@@ -287,7 +287,7 @@ Guy \#2 aims his gun at Hayley and says, ``We said that you would do.''
 
 
 
-{[}\textit{Challenge: Not get shot 4.  Armor 2 (Hayley) + Grim Visage 2 (Jaya) + Saltremachy 2 (Hayley) + Flaw: Shot in the ribs 2 (Hayley) → Matched}{]}  Jaya screams at the guy and rushes at him, distracting him.  Hayley manages to twist just enough to take \hl{the gunshot to her ribs instead of a more immediately lethal area}\footnote{\textbf{Rebecca S. }wait, what? isn't getting shot in the ribs pretty lethal? \textsubscript{04/24/14 8:55pm}}\footnote{$\rightarrow$\textbf{Suko T }All a matter of degree.  It's less immediately lethal than the back of her head. :)  She can survive having a hole in her lungs longer than a hole in her skull.... \textsubscript{04/24/14 9:28pm}}, and not lose her grip on Lackovich.
+{[}\textit{Challenge: Not get shot 4.  Armor 2 (Hayley) + Grim Visage 2 (Jaya) + Saltremachy 2 (Hayley) + Flaw: Shot in the ribs 2 (Hayley) $\rightarrow$ Matched}{]}  Jaya screams at the guy and rushes at him, distracting him.  Hayley manages to twist just enough to take \hl{the gunshot to her ribs instead of a more immediately lethal area}\footnote{\textbf{Rebecca S. }wait, what? isn't getting shot in the ribs pretty lethal? \textsubscript{04/24/14 8:55pm}}\footnote{$\rightarrow$\textbf{Suko T }All a matter of degree.  It's less immediately lethal than the back of her head. :)  She can survive having a hole in her lungs longer than a hole in her skull.... \textsubscript{04/24/14 9:28pm}}, and not lose her grip on Lackovich.
 
 
 
@@ -319,7 +319,7 @@ Jaya assists Hayley off the Yard, with Lackovich walking after them.  Everyone (
 
 
 
-Jonah treats Hayley's wounds. {[}\textit{Challenge: Reduce Flaw 2 (Hayley).  Street Medic 2 (Jonah) → Flaw 1 injured ribs (Hayley)}{]}. 
+Jonah treats Hayley's wounds. {[}\textit{Challenge: Reduce Flaw 2 (Hayley).  Street Medic 2 (Jonah) $\rightarrow$ Flaw 1 injured ribs (Hayley)}{]}. 
 
 
 
@@ -347,7 +347,7 @@ It is full of old, rusted equipment.  It is very dark and we must use our flashl
 
 
 
-{[}\textit{Challenge: Notice 1.  Forensics 2 (Jonah) → Overcome! }\textit{\textbf{1 VP (Jonah)}}{]}  Jonah notices that there are marks of someone being dragged into the Factory.  Lackovich says that it wasn't her.  We follow the drag marks to a room and find Dev's body hanging from a chain.  We get his body down. He is dead.
+{[}\textit{Challenge: Notice 1.  Forensics 2 (Jonah) $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Jonah)}}{]}  Jonah notices that there are marks of someone being dragged into the Factory.  Lackovich says that it wasn't her.  We follow the drag marks to a room and find Dev's body hanging from a chain.  We get his body down. He is dead.
 
 
 
@@ -367,7 +367,7 @@ It is full of old, rusted equipment.  It is very dark and we must use our flashl
 
 
 
-Oliver starts climbing a ladder with Lackovich not far behind.  Oliver reaches the top of the ladder and a figure attacks him.  Lackovich and Jaya can hear a scuffle but aren't close enough to assist.  ``I would love to help you, but all I can do is shoot a gun,'' yells Jaya.  {[}\textit{Challenge: Don't get grabbed 5.  Hardened 4 (Oliver) + Sniper Rifle 3 (Oliver) + }\textit{ {\color[RGB]{255,0,0}Flaw: Winded 2 (Oliver)} }\textit{ + }\textit{ {\color[RGB]{255,0,0}Flaw: damaged gun 2 (Oliver)} }\textit{ → Matched}{]}.  Oliver pulls free but his rifle is damaged in the process and he gets the wind knocked out of him.
+Oliver starts climbing a ladder with Lackovich not far behind.  Oliver reaches the top of the ladder and a figure attacks him.  Lackovich and Jaya can hear a scuffle but aren't close enough to assist.  ``I would love to help you, but all I can do is shoot a gun,'' yells Jaya.  {[}\textit{Challenge: Don't get grabbed 5.  Hardened 4 (Oliver) + Sniper Rifle 3 (Oliver) + }\textit{ {\color[RGB]{255,0,0}Flaw: Winded 2 (Oliver)} }\textit{ + }\textit{ {\color[RGB]{255,0,0}Flaw: damaged gun 2 (Oliver)} }\textit{ $\rightarrow$ Matched}{]}.  Oliver pulls free but his rifle is damaged in the process and he gets the wind knocked out of him.
 
 
 
@@ -385,7 +385,7 @@ Lackovich and Jaya are trying to climb up the ladder and Lackovich is getting in
 
 
 
-``I know exactly what I need to know about you,'' Oliver says to the figure.  He tries to fire his gun but it misfires from the damage earlier.   The Orc moves defensively out of the way and then realizes the gun is not functioning.  \hl{The Orc grabs Oliver's collar and leans in close}\footnote{\textbf{Nathaniel Ford }The Orc grabbed his BDU collar and pulled him close before saying, ``Are you sure?'' Then Oliver was slammed into the wall before the Orc took off. \textsubscript{03/19/14 11:34am}}\footnote{$\rightarrow$\textbf{Suko T }Cool, thanks!  Fixed. \textsubscript{03/19/14 11:01pm}}.  ``Are you sure?'' says the Orc.  \hl{A strand of dark hair with reddish highlights brushes Oliver's face}\footnote{\textbf{q.google }Cue dramatic music!  The boards are talking about this for days afterwards. \textsubscript{05/01/14 12:48pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Google really needs to implement a +1 on comments. Seriously. They integrated G+ everywhere else. \textsubscript{05/01/14 3:24pm}} as the Orc slams him against the wall.  {[}\textit{Challenge: Stay in the fight 3.  Battle dress uniform 2 (Oliver) + Arm Strength 1 (Oliver) + }\textit{ {\color[RGB]{255,0,0}Flaw: Stunned 1 (Oliver)} }\textit{ → Matched}{]}  The Orc leaves.
+``I know exactly what I need to know about you,'' Oliver says to the figure.  He tries to fire his gun but it misfires from the damage earlier.   The Orc moves defensively out of the way and then realizes the gun is not functioning.  \hl{The Orc grabs Oliver's collar and leans in close}\footnote{\textbf{Nathaniel Ford }The Orc grabbed his BDU collar and pulled him close before saying, ``Are you sure?'' Then Oliver was slammed into the wall before the Orc took off. \textsubscript{03/19/14 11:34am}}\footnote{$\rightarrow$\textbf{Suko T }Cool, thanks!  Fixed. \textsubscript{03/19/14 11:01pm}}.  ``Are you sure?'' says the Orc.  \hl{A strand of dark hair with reddish highlights brushes Oliver's face}\footnote{\textbf{q.google }Cue dramatic music!  The boards are talking about this for days afterwards. \textsubscript{05/01/14 12:48pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Google really needs to implement a +1 on comments. Seriously. They integrated G+ everywhere else. \textsubscript{05/01/14 3:24pm}} as the Orc slams him against the wall.  {[}\textit{Challenge: Stay in the fight 3.  Battle dress uniform 2 (Oliver) + Arm Strength 1 (Oliver) + }\textit{ {\color[RGB]{255,0,0}Flaw: Stunned 1 (Oliver)} }\textit{ $\rightarrow$ Matched}{]}  The Orc leaves.
 
 
 
@@ -404,37 +404,37 @@ Lackovich and Jaya are trying to climb up the ladder and Lackovich is getting in
 \begin{itemize}
 \item Refresh Operator 1 (Oliver)
 \item Refresh Vigilant 3 (Jonah)
-\item Challenge: Find Dev 2. Nose for Breadcrumbs 2 (Hayley) → Matched
-\item Challenge: Notice 1.  Small Unit Tactics 2 (Jonah) → Overcome! \textbf{1 VP (Jonah)}
+\item Challenge: Find Dev 2. Nose for Breadcrumbs 2 (Hayley) $\rightarrow$ Matched
+\item Challenge: Notice 1.  Small Unit Tactics 2 (Jonah) $\rightarrow$ Overcome! \textbf{1 VP (Jonah)}
 \item Refresh Operator 1 (Jonah)
 \item Refresh Operator 1 (Oliver)
-\item Challenge 3: Don't set off gun.  Hardened 4 (Oliver) → Overcome! \textbf{3 VP (Oliver)}
-\item Challenge: Notice 2.  Vigilant 3 (Jonah)  → Overcome! \textbf{2 VP (Jonah)}
+\item Challenge 3: Don't set off gun.  Hardened 4 (Oliver) $\rightarrow$ Overcome! \textbf{3 VP (Oliver)}
+\item Challenge: Notice 2.  Vigilant 3 (Jonah)  $\rightarrow$ Overcome! \textbf{2 VP (Jonah)}
 \item Refresh: Small Unit Tactics 2 (Jonah)
 \item Refresh: Saltremachy 2 (Hayley)
-\item Challenge: Don't get grabbed 4.  Sidearm 3 (Jaya) + Crack Shot 3 (Oliver) → Matched
-\item Challenge: Notice 1.  Ladies' Maid 2 (Hayley) → Overcome! \textbf{1 VP (Hayley)}
-\item Challenge: Knock over Guy \#1 2.  Adrenaline Junkie 2 (Jaya) + Pistol 2 (Jaya)  → Overcome! \textbf{2 VP (Jaya)}
-\item Challenge: Body Shot 3.  Sniper 3 (Oliver) → Matched
-\item Challenge: Crush face to bloody pulp 2.  Truncheon 3 (Jaya)  → Overcome! \textbf{2 VP (Jaya)}
+\item Challenge: Don't get grabbed 4.  Sidearm 3 (Jaya) + Crack Shot 3 (Oliver) $\rightarrow$ Matched
+\item Challenge: Notice 1.  Ladies' Maid 2 (Hayley) $\rightarrow$ Overcome! \textbf{1 VP (Hayley)}
+\item Challenge: Knock over Guy \#1 2.  Adrenaline Junkie 2 (Jaya) + Pistol 2 (Jaya)  $\rightarrow$ Overcome! \textbf{2 VP (Jaya)}
+\item Challenge: Body Shot 3.  Sniper 3 (Oliver) $\rightarrow$ Matched
+\item Challenge: Crush face to bloody pulp 2.  Truncheon 3 (Jaya)  $\rightarrow$ Overcome! \textbf{2 VP (Jaya)}
 \item Refresh Operator 1 (Jonah)
 \item Refresh Crackshot 3 (Oliver)
 \item Refresh Pistol 2 (Jaya)
-\item Challenge: Keep Lackovich from falling 2.  Conditioned 2 (Hayley) → Matched
-\item Challenge: Not get shot 4.  Armor 2 (Hayley) + Grim Visage 2 (Jaya) + Saltremachy 2 (Hayley) + Flaw: Shot in the ribs 2 (Hayley) → Matched
+\item Challenge: Keep Lackovich from falling 2.  Conditioned 2 (Hayley) $\rightarrow$ Matched
+\item Challenge: Not get shot 4.  Armor 2 (Hayley) + Grim Visage 2 (Jaya) + Saltremachy 2 (Hayley) + Flaw: Shot in the ribs 2 (Hayley) $\rightarrow$ Matched
 \item Refresh: Sniper Rifle 3 (Oliver)
 \item Refresh: Sidearm 2 (Jaya)
 \item Refresh: Stash 2 (Jaya)
-\item Reduce Flaw 2 (Hayley).  Street Medic 2 (Jonah) →  {\color[RGB]{255,0,0}Flaw 1 injured ribs (Hayley)} 
+\item Reduce Flaw 2 (Hayley).  Street Medic 2 (Jonah) $\rightarrow$  {\color[RGB]{255,0,0}Flaw 1 injured ribs (Hayley)} 
 \item Refresh: Adrenaline Junkie 2 (Jaya)
 \item Refresh: Hardened 4 (Oliver)
-\item Challenge: Notice 1.  Forensics 2 (Jonah) → Overcome! \textbf{1 VP (Jonah)}
+\item Challenge: Notice 1.  Forensics 2 (Jonah) $\rightarrow$ Overcome! \textbf{1 VP (Jonah)}
 \item Refresh: Truncheon 3 (Jaya)
 \item Refresh: Operator 1 (Oliver)
 \item Refresh: Ladies' Maid 2 (Hayley)
 \item Refresh: Operator 1 (Jonah)
-\item Challenge: Don't get grabbed 5.  Hardened 4 (Oliver) + Sniper Rifle 3 (Oliver) +  {\color[RGB]{255,0,0}Flaw: Winded 2 (Oliver)}  +  {\color[RGB]{255,0,0}Flaw: damaged gun 2 (Oliver)}  → Matched
-\item Challenge: Stay in the fight 3.  Battle dress uniform 2 (Oliver) + Arm Strength 1 (Oliver) +  {\color[RGB]{255,0,0}Flaw: Stunned 1 (Oliver)}  → Matched
+\item Challenge: Don't get grabbed 5.  Hardened 4 (Oliver) + Sniper Rifle 3 (Oliver) +  {\color[RGB]{255,0,0}Flaw: Winded 2 (Oliver)}  +  {\color[RGB]{255,0,0}Flaw: damaged gun 2 (Oliver)}  $\rightarrow$ Matched
+\item Challenge: Stay in the fight 3.  Battle dress uniform 2 (Oliver) + Arm Strength 1 (Oliver) +  {\color[RGB]{255,0,0}Flaw: Stunned 1 (Oliver)}  $\rightarrow$ Matched
 \end{itemize}
 
 
