--- a/4T/ch23.tex
+++ b/4T/ch23.tex
@@ -71,11 +71,11 @@ Jaya turns the corner and sees the Orc.  She lunges at the Orc at the same time 
 
 
 
-{[}\textit{Challenge 3: Avoid bullets and close with the Orc.  Armor 2 (Jaya) + Senior Constable 2 (Jaya) + Sidearm 3 (Jaya)  → Overcome! }\textit{\textbf{3 VP (Jaya)}}{]}  Jaya takes a few hits to her armor and her holster for her sidearm takes some pretty severe damage, but she manages to reach the Orc without any major injuries.   The two of them start punching and kicking the crap out of each other
+{[}\textit{Challenge 3: Avoid bullets and close with the Orc.  Armor 2 (Jaya) + Senior Constable 2 (Jaya) + Sidearm 3 (Jaya)  $\rightarrow$ Overcome! }\textit{\textbf{3 VP (Jaya)}}{]}  Jaya takes a few hits to her armor and her holster for her sidearm takes some pretty severe damage, but she manages to reach the Orc without any major injuries.   The two of them start punching and kicking the crap out of each other
 
 
 
-Still back in the other room upstairs, Oliver and Jonah are arguing about treatment and diagnosis, but eventually they get Oliver patched up. {[}\textit{Reduce Flaw Winded 2 (Oliver).  Street Medic 2 (Jonah) → }\textit{Flaw: Winded 1 (Oliver)}\textit{ {\color[RGB]{255,0,0}. } }\textit{ }\textit{Reduce Flaw 1 (Oliver).  MedKit 1 (Oliver) → }\textit{ {\color[RGB]{255,0,0}Flaw: slightly winded 0 (Oliver)} }{]}.  
+Still back in the other room upstairs, Oliver and Jonah are arguing about treatment and diagnosis, but eventually they get Oliver patched up. {[}\textit{Reduce Flaw Winded 2 (Oliver).  Street Medic 2 (Jonah) $\rightarrow$ }\textit{Flaw: Winded 1 (Oliver)}\textit{ {\color[RGB]{255,0,0}. } }\textit{ }\textit{Reduce Flaw 1 (Oliver).  MedKit 1 (Oliver) $\rightarrow$ }\textit{ {\color[RGB]{255,0,0}Flaw: slightly winded 0 (Oliver)} }{]}.  
 
 
 
@@ -83,11 +83,11 @@ Below, Hayley is knocked down by the gunfire, although her armor soaks most of t
 
 
 
-Jaya headbutts the Orc and breaks her nose, which is very satisfying.  The Orc returns the favor.  {[}\textit{Challenge 3: Stop the Orc from getting up.  Adrenaline Junkie 2 (Jaya) → Sent back to pool}{]}.  {[}\textit{Challenge 1: Notice.  Stash 2 (Jaya)  → Overcome! }\textit{\textbf{1 VP (Jaya)}}{]}  Brawling face to face, Jaya hears the faint pop and hiss noise and sees the Orc's eyes dilate- she can tell the Orc just received some kind of drug injection... somehow?  The Orc punches Jaya really hard.
+Jaya headbutts the Orc and breaks her nose, which is very satisfying.  The Orc returns the favor.  {[}\textit{Challenge 3: Stop the Orc from getting up.  Adrenaline Junkie 2 (Jaya) $\rightarrow$ Sent back to pool}{]}.  {[}\textit{Challenge 1: Notice.  Stash 2 (Jaya)  $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Jaya)}}{]}  Brawling face to face, Jaya hears the faint pop and hiss noise and sees the Orc's eyes dilate- she can tell the Orc just received some kind of drug injection... somehow?  The Orc punches Jaya really hard.
 
 
 
-Oliver takes apart his gun {[}\textit{Refresh: Sniper Rifle 3 (Oliver)}{]}.   {[}\textit{Challenge1:  Notice.  Trigger Reflexes 1 (Jonah) → Matched}{]}.  A guy comes around the corner into the room where Oliver and Jonah are. Jonah notices him and gets the drop on him.  He kills the guy and then takes the guy's machine gun.  Oliver pays little attention, focused on fixing his gun {[}\textit{Reduce Flaw: Damaged Gun 2 (Oliver).  Focused 4 (Oliver) → }\textit{ {\color[RGB]{255,0,0}Flaw: Slightly Damaged Gun 1 (Oliver)} }{]}
+Oliver takes apart his gun {[}\textit{Refresh: Sniper Rifle 3 (Oliver)}{]}.   {[}\textit{Challenge1:  Notice.  Trigger Reflexes 1 (Jonah) $\rightarrow$ Matched}{]}.  A guy comes around the corner into the room where Oliver and Jonah are. Jonah notices him and gets the drop on him.  He kills the guy and then takes the guy's machine gun.  Oliver pays little attention, focused on fixing his gun {[}\textit{Reduce Flaw: Damaged Gun 2 (Oliver).  Focused 4 (Oliver) $\rightarrow$ }\textit{ {\color[RGB]{255,0,0}Flaw: Slightly Damaged Gun 1 (Oliver)} }{]}
 
 
 
@@ -103,7 +103,7 @@ Lackovich cries out as the Orc starts pummeling the crap out of her.
 
 
 
-{[}\textit{Challenge 1: Notice.  Process Wonk 2 (Hayley)  → Overcome! }\textit{\textbf{1 VP (Hayley)}}{]}.  Hayley notices something odd about the soldiers on the ground floor.  They are moving in eerie unison, advancing smoothly, and yet she can see no evidence of them communicating with each other.
+{[}\textit{Challenge 1: Notice.  Process Wonk 2 (Hayley)  $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Hayley)}}{]}.  Hayley notices something odd about the soldiers on the ground floor.  They are moving in eerie unison, advancing smoothly, and yet she can see no evidence of them communicating with each other.
 
 
 
@@ -111,11 +111,11 @@ Oliver and Jonah enter into the larger room with everyone.  The Orc is holding u
 
 
 
-{[}\textit{Challenge 5: Shoot Orc in the leg (to cripple or slow).  Sniper Rifle 3 (Oliver) + Crack Shot 3 (Oliver) + Gauss Pistol 2 (Jonah) +Small Arms 2 (Jonah) + Athletics 3 (Hayley)  → Matched}{]}
+{[}\textit{Challenge 5: Shoot Orc in the leg (to cripple or slow).  Sniper Rifle 3 (Oliver) + Crack Shot 3 (Oliver) + Gauss Pistol 2 (Jonah) +Small Arms 2 (Jonah) + Athletics 3 (Hayley)  $\rightarrow$ Matched}{]}
 
 
 
-{[}\textit{Challenge 2: Help Lackovich not get shot.  Agent 1  (Jaya) + Air of Command 2  (Jaya) + }\textit{ {\color[RGB]{255,0,0}Flaw: Shot 1 (Jaya)} }\textit{  → Overcome! }\textit{\textbf{2 VP (Jaya)}}{]}.
+{[}\textit{Challenge 2: Help Lackovich not get shot.  Agent 1  (Jaya) + Air of Command 2  (Jaya) + }\textit{ {\color[RGB]{255,0,0}Flaw: Shot 1 (Jaya)} }\textit{  $\rightarrow$ Overcome! }\textit{\textbf{2 VP (Jaya)}}{]}.
 
 
 
@@ -164,7 +164,7 @@ The Orc steps closer to Oliver and reaches for his throat.  ``In fact, you can n
 
 
 
-{[}\textit{Challenge 4: }\textit{\hl{Grievously hinder the Orc's life}}\footnote{\textbf{Suko T }One of my favorite challenge titles to date.  I believe credit goes to Nate? \textsubscript{04/02/14 4:14pm}}\textit{.  Sniper Rifle 3 (Oliver) + }\textit{ {\color[RGB]{255,0,0}Flaw: Destroyed gun 3 (Oliver) } }\textit{→ Matched}{]}.  The rifle passes through the field around the Orc, but something goes terribly wrong when he pulls the trigger.  The rifle explodes.  The Orc manages to grab his neck but the explosion flings them back against the catwalk's rails.  Oliver is burned and there is blood everywhere.
+{[}\textit{Challenge 4: }\textit{\hl{Grievously hinder the Orc's life}}\footnote{\textbf{Suko T }One of my favorite challenge titles to date.  I believe credit goes to Nate? \textsubscript{04/02/14 4:14pm}}\textit{.  Sniper Rifle 3 (Oliver) + }\textit{ {\color[RGB]{255,0,0}Flaw: Destroyed gun 3 (Oliver) } }\textit{$\rightarrow$ Matched}{]}.  The rifle passes through the field around the Orc, but something goes terribly wrong when he pulls the trigger.  The rifle explodes.  The Orc manages to grab his neck but the explosion flings them back against the catwalk's rails.  Oliver is burned and there is blood everywhere.
 
 
 
@@ -176,7 +176,7 @@ One of the soldiers on the ground runs past Jaya to jump through the portal, but
 
 
 
-Oliver pulls out a knife.  ``Kate's just trying to save me now, \hl{but that's not working out either,''}\footnote{\textbf{Suko T }loved this line \textsubscript{04/02/14 4:13pm}}\footnote{$\rightarrow$\textbf{Rebecca S. }ditto.  I can close my eyes and see the dramatic anime art style this whole exchange plays out, to compliment the Oliver/Kate exchange in the rain sessions ago \textsubscript{04/24/14 8:30pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{04/24/14 9:30pm}}\footnote{$\rightarrow$\textbf{q.google }+1 \textsubscript{05/01/14 12:10pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 Quick! Someone write a screenplay. \textsubscript{05/26/14 9:34pm}} he says, and stabs her.  {[}\textit{Challenge 5: Kill the Orc.  Hardened 4 (Oliver) + }\textit{ {\color[RGB]{255,0,0}Flaw: Over the Edge 4 (Oliver) } }\textit{→ Matched}{]}.  Oliver falls into the portal and Hayley can't stop it though she tries.  ``Should I follow?'' she asks over the radio and outloud (so that Jaya can hear it).  In her mind, Oliver says, ``No.''
+Oliver pulls out a knife.  ``Kate's just trying to save me now, \hl{but that's not working out either,''}\footnote{\textbf{Suko T }loved this line \textsubscript{04/02/14 4:13pm}}\footnote{$\rightarrow$\textbf{Rebecca S. }ditto.  I can close my eyes and see the dramatic anime art style this whole exchange plays out, to compliment the Oliver/Kate exchange in the rain sessions ago \textsubscript{04/24/14 8:30pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{04/24/14 9:30pm}}\footnote{$\rightarrow$\textbf{q.google }+1 \textsubscript{05/01/14 12:10pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 Quick! Someone write a screenplay. \textsubscript{05/26/14 9:34pm}} he says, and stabs her.  {[}\textit{Challenge 5: Kill the Orc.  Hardened 4 (Oliver) + }\textit{ {\color[RGB]{255,0,0}Flaw: Over the Edge 4 (Oliver) } }\textit{$\rightarrow$ Matched}{]}.  Oliver falls into the portal and Hayley can't stop it though she tries.  ``Should I follow?'' she asks over the radio and outloud (so that Jaya can hear it).  In her mind, Oliver says, ``No.''
 
 
 
@@ -184,7 +184,7 @@ There is a second ``pop!'' and another portal appears on the ground floor.  In u
 
 
 
-Jonah enters the room to see Jaya moving to block anyone from entering the second portal.  {[}\textit{Challenge 5.  Keep the soldiers from getting through the portal.  Stash 2 (Jaya) + Truncheon 3 (Jaya) + Gauss Pistol 2 (Hayley) + }\textit{ {\color[RGB]{255,0,0}Flaw: Severed Arm 4 (Jaya)} }\textit{ → Matched}{]}
+Jonah enters the room to see Jaya moving to block anyone from entering the second portal.  {[}\textit{Challenge 5.  Keep the soldiers from getting through the portal.  Stash 2 (Jaya) + Truncheon 3 (Jaya) + Gauss Pistol 2 (Hayley) + }\textit{ {\color[RGB]{255,0,0}Flaw: Severed Arm 4 (Jaya)} }\textit{ $\rightarrow$ Matched}{]}
 
 
 
@@ -212,7 +212,7 @@ Jonah looks at the bodies of the dead soldiers.  Their faces are young and well 
 
 
 
-{[}\textit{Challenge 2: Notice incoming aircraft}\textit{???}\textit{.  Vigilant 3 (Jonah)  → Overcome! }\textit{\textbf{2 VP (Jonah)}}{]}  Jonah can hear, far in the distance, some incoming aircraft.
+{[}\textit{Challenge 2: Notice incoming aircraft}\textit{???}\textit{.  Vigilant 3 (Jonah)  $\rightarrow$ Overcome! }\textit{\textbf{2 VP (Jonah)}}{]}  Jonah can hear, far in the distance, some incoming aircraft.
 
 
 
@@ -220,7 +220,7 @@ Jaya wakes up, in shock. She hasn't quite realized what happened to her arm yet.
 
 
 
-{[}\textit{Challenge 1: Notice.  Small Unit Tactics 2 (Jonah)  → Overcome! }\textit{\textbf{1 VP (Jonah)}}{]}.  Jonah can hear gunfire in the distance.
+{[}\textit{Challenge 1: Notice.  Small Unit Tactics 2 (Jonah)  $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Jonah)}}{]}.  Jonah can hear gunfire in the distance.
 
 
 
@@ -236,7 +236,7 @@ Not far from the Factory, there is another ``pop!'' and 12 people fall out of a 
 
 
 
-{[}\textit{Challenge 2: Don't get shot.  Saltaremachy 2 (Hayley) → Matched}{]}.  Hayley manages to maneuver herself and Lackovich out of the way of the gunfire.
+{[}\textit{Challenge 2: Don't get shot.  Saltaremachy 2 (Hayley) $\rightarrow$ Matched}{]}.  Hayley manages to maneuver herself and Lackovich out of the way of the gunfire.
 
 
 
@@ -244,7 +244,7 @@ The top of the Apartment Tower explodes.  There is a surge of panicked people th
 
 
 
-{[}\textit{Challenge 2 (for each): Stay ahead of the wave of panicked populace.   Truncheon 3 (Jaya)  → Overcome! }\textit{\textbf{2 VP (Jaya)}}\textit{.  Streetwise 3  (Jonah) → Overcome! }\textit{\textbf{2 VP (Jonah)}}\textit{. Bodyguard 1 (Hayley) + Unashamed 1 (Hayley)  → Matched}{]}.  Jaya clears her way, swinging her Truncheon.  Jonah figures out shortcuts and knows the best way back to the Station.  Hayley just hangs onto Lackovich and shoves anyone, men, women, small children, out of her way.  The air is full of smoke and panic.
+{[}\textit{Challenge 2 (for each): Stay ahead of the wave of panicked populace.   Truncheon 3 (Jaya)  $\rightarrow$ Overcome! }\textit{\textbf{2 VP (Jaya)}}\textit{.  Streetwise 3  (Jonah) $\rightarrow$ Overcome! }\textit{\textbf{2 VP (Jonah)}}\textit{. Bodyguard 1 (Hayley) + Unashamed 1 (Hayley)  $\rightarrow$ Matched}{]}.  Jaya clears her way, swinging her Truncheon.  Jonah figures out shortcuts and knows the best way back to the Station.  Hayley just hangs onto Lackovich and shoves anyone, men, women, small children, out of her way.  The air is full of smoke and panic.
 
 
 
@@ -260,7 +260,7 @@ It is pandemonium at the TA Station.  The crowds are pressed to the gates, deman
 
 
 
-{[}\textit{Challenge 4.  Get through the crowd to the station.  Sidearm 3 (Jaya) + Vigilant 3 (Jonah)  → Matched}{]}.  Jaya fires her gun into the air and Jonah finds the weaknesses in the crowd and we break through.  The TA constables are pissed because we just made their job harder as the crowd surges through the hole we just made.  Inside the station, the dust and debris of a recent explosion are still settling.
+{[}\textit{Challenge 4.  Get through the crowd to the station.  Sidearm 3 (Jaya) + Vigilant 3 (Jonah)  $\rightarrow$ Matched}{]}.  Jaya fires her gun into the air and Jonah finds the weaknesses in the crowd and we break through.  The TA constables are pissed because we just made their job harder as the crowd surges through the hole we just made.  Inside the station, the dust and debris of a recent explosion are still settling.
 
 
 
@@ -268,7 +268,7 @@ A second train arrives on the far track.  The Conductor is checking his schedule
 
 
 
-Jonah treats Jaya's GSW with the few remaining supplies left and we head back to SAC-09.  {[}\textit{Reduce Flaw: Shot 1.  Medkit 1 (Hayley) →  }\textit{ {\color[RGB]{255,0,0}Flaw 0 Gunshot scar (Jaya)} }{]}
+Jonah treats Jaya's GSW with the few remaining supplies left and we head back to SAC-09.  {[}\textit{Reduce Flaw: Shot 1.  Medkit 1 (Hayley) $\rightarrow$  }\textit{ {\color[RGB]{255,0,0}Flaw 0 Gunshot scar (Jaya)} }{]}
 
 
 
@@ -288,34 +288,34 @@ Next up: Part 3: Shit goes ill.
 
 \begin{itemize}
 \item Refresh: Street Medic 2 (Jonah)
-\item Challenge 3: Avoid bullets and close with the Orc.  Armor 2 (Jaya) + Senior Constable 2 (Jaya) + Sidearm 3 (Jaya)  → Overcome! \textbf{3 VP (Jaya)}
-\item Reduce Flaw Winded 2 (Oliver).  Street Medic 2 (Jonah) → Flaw: Winded 1 (Oliver) {\color[RGB]{255,0,0}. }  Reduce Flaw 1 (Oliver).  MedKit 1 (Oliver) →  {\color[RGB]{255,0,0}Flaw: slightly winded 0 (Oliver)} 
-\item Challenge 3: Stop the Orc from getting up.  Adrenaline Junkie 2 (Jaya) → Sent back to pool
+\item Challenge 3: Avoid bullets and close with the Orc.  Armor 2 (Jaya) + Senior Constable 2 (Jaya) + Sidearm 3 (Jaya)  $\rightarrow$ Overcome! \textbf{3 VP (Jaya)}
+\item Reduce Flaw Winded 2 (Oliver).  Street Medic 2 (Jonah) $\rightarrow$ Flaw: Winded 1 (Oliver) {\color[RGB]{255,0,0}. }  Reduce Flaw 1 (Oliver).  MedKit 1 (Oliver) $\rightarrow$  {\color[RGB]{255,0,0}Flaw: slightly winded 0 (Oliver)} 
+\item Challenge 3: Stop the Orc from getting up.  Adrenaline Junkie 2 (Jaya) $\rightarrow$ Sent back to pool
 \item Refresh: Sniper Rifle 3 (Oliver)
-\item Challenge1:  Notice.  Trigger Reflexes 1 (Jonah) → Matched
-\item Reduce Flaw: Damaged Gun 2 (Oliver).  Focused 4 (Oliver) →  {\color[RGB]{255,0,0}Flaw: Slightly Damaged Gun 1 (Oliver)} 
+\item Challenge1:  Notice.  Trigger Reflexes 1 (Jonah) $\rightarrow$ Matched
+\item Reduce Flaw: Damaged Gun 2 (Oliver).  Focused 4 (Oliver) $\rightarrow$  {\color[RGB]{255,0,0}Flaw: Slightly Damaged Gun 1 (Oliver)} 
 \item Refresh: Athletics 3 (Hayley)
 \item Refresh: Truncheon 3 (Jaya)
-\item Challenge 1: Notice.  Process Wonk 2 (Hayley)   → Overcome! \textbf{1 VP (Hayley)}
+\item Challenge 1: Notice.  Process Wonk 2 (Hayley)   $\rightarrow$ Overcome! \textbf{1 VP (Hayley)}
 \item Operator 1 (Oliver)
 \item Refresh: Hardened 4 (Oliver)
-\item Challenge 5: Shoot Orc in the leg (to cripple or slow).  Sniper Rifle 3 (Oliver) + Crack Shot 3 (Oliver) + Gauss Pistol 2 (Jonah) +Small Arms 2 (Jonah) + Athletics 3 (Hayley)  → Matched
-\item Challenge 2: Help Lackovich not get shot.  Agent 1  (Jaya) + Air of Command 2  (Jaya) + Flaw: Shot 1 (Jaya)  → Overcome! \textbf{2 VP (Jaya)}
+\item Challenge 5: Shoot Orc in the leg (to cripple or slow).  Sniper Rifle 3 (Oliver) + Crack Shot 3 (Oliver) + Gauss Pistol 2 (Jonah) +Small Arms 2 (Jonah) + Athletics 3 (Hayley)  $\rightarrow$ Matched
+\item Challenge 2: Help Lackovich not get shot.  Agent 1  (Jaya) + Air of Command 2  (Jaya) + Flaw: Shot 1 (Jaya)  $\rightarrow$ Overcome! \textbf{2 VP (Jaya)}
 \item Refresh: Sniper Rifle 3 (Oliver)
 \item Refresh: Stash 2 (Jaya)
 \item Refresh: Saltaremachy 2 (Hayley)
-\item Challenge 4: Grievously hinder the Orc's life.  Sniper Rifle 3 (Oliver) +  {\color[RGB]{255,0,0}Flaw: Destroyed gun 3 (Oliver) } → Matched
-\item Challenge 5: Kill the Orc.  Hardened 4 (Oliver) +  {\color[RGB]{255,0,0}Flaw: Falls into Portal 4 (Oliver) } → Matched
-\item Challenge 5.  Keep the soldiers from getting through the portal.  Stash 2 (Jaya) + Truncheon 3 (Jaya) + Gauss Pistol 2 (Jonah) +  {\color[RGB]{255,0,0}Flaw: Severed Arm 4 (Jaya)}  → Matched
+\item Challenge 4: Grievously hinder the Orc's life.  Sniper Rifle 3 (Oliver) +  {\color[RGB]{255,0,0}Flaw: Destroyed gun 3 (Oliver) } $\rightarrow$ Matched
+\item Challenge 5: Kill the Orc.  Hardened 4 (Oliver) +  {\color[RGB]{255,0,0}Flaw: Falls into Portal 4 (Oliver) } $\rightarrow$ Matched
+\item Challenge 5.  Keep the soldiers from getting through the portal.  Stash 2 (Jaya) + Truncheon 3 (Jaya) + Gauss Pistol 2 (Jonah) +  {\color[RGB]{255,0,0}Flaw: Severed Arm 4 (Jaya)}  $\rightarrow$ Matched
 \item \textbf{Vengeance of Octavian Triggered: 40}\textbf{ Tokens}\textbf{ enter the Pool}
-\item Challenge 2: ???.  Vigilant 3 (Jonah)  → Overcome! \textbf{2 VP (Jonah)}
-\item Challenge 1: Notice.  Small Unit Tactics 2 (Jonah)  → Overcome! \textbf{1 VP (Jonah)}
-\item Challenge 2: Don't get shot.  Saltaremachy 2 (Hayley) → Matched
-\item Challenge 2 (for each): Stay ahead of the wave of panicked populace.   Truncheon 3 (Jaya)  → Overcome! \textbf{2 VP (Jaya)}.  Streetwise 3  (Jonah) → Overcome! \textbf{2 VP (Jonah)}. Bodyguard 1 (Hayley) + Unashamed 1 (Hayley)  → Matched
+\item Challenge 2: ???.  Vigilant 3 (Jonah)  $\rightarrow$ Overcome! \textbf{2 VP (Jonah)}
+\item Challenge 1: Notice.  Small Unit Tactics 2 (Jonah)  $\rightarrow$ Overcome! \textbf{1 VP (Jonah)}
+\item Challenge 2: Don't get shot.  Saltaremachy 2 (Hayley) $\rightarrow$ Matched
+\item Challenge 2 (for each): Stay ahead of the wave of panicked populace.   Truncheon 3 (Jaya)  $\rightarrow$ Overcome! \textbf{2 VP (Jaya)}.  Streetwise 3  (Jonah) $\rightarrow$ Overcome! \textbf{2 VP (Jonah)}. Bodyguard 1 (Hayley) + Unashamed 1 (Hayley)  $\rightarrow$ Matched
 \item Refresh: Vigilant 3 (Jonah)
 \item Refresh: Sidearm 3 (Jaya)
-\item Challenge 4.  Get through the crowd to the station.  Sidearm 3 (Jaya) + Vigilant 3 (Jonah)  → Matched
-\item Reduce Flaw: Shot 1.  Medkit 1 (Hayley) →   {\color[RGB]{255,0,0}Flaw: Gunshot scar 0 (Jaya)} 
+\item Challenge 4.  Get through the crowd to the station.  Sidearm 3 (Jaya) + Vigilant 3 (Jonah)  $\rightarrow$ Matched
+\item Reduce Flaw: Shot 1.  Medkit 1 (Hayley) $\rightarrow$   {\color[RGB]{255,0,0}Flaw: Gunshot scar 0 (Jaya)} 
 \end{itemize}
 
 
@@ -382,3 +382,9 @@ Oliver: ``She didn't send me here to save you.''
 % Exported @ 08/24/15 11:00am
 \end{flushright}
 
+
+\begin{flushright}
+~
+\vskip 10em
+\includegraphics[width=8cm]{img/ch23_twisty_arm.png}
+\end{flushright}
