--- a/4T/ch24.tex
+++ b/4T/ch24.tex
@@ -133,7 +133,9 @@ Warming to the topic now, Jaya says with all the enthusiasm she can muster, give
 
 ``The FUCK you say!!''
 
-Rook sighs.  ``You don't have to say them to me.  Think of someone else if you like.''``No.  No way.''
+Rook sighs.  ``You don't have to say them to me.  Think of someone else if you like.''
+
+``No.  No way.''
 
 ``Just say it.'' says Rook, his tone getting a bit more emphatic.
 
@@ -380,21 +382,21 @@ Jaya finds Rook and he tells her that if she wants to visit her family, she will
 
 \sceneHeadline{Hayley and Jaya}
 
-\hl{Hayley is discharged from the Medbay (they need the room for someone else).  She returns to the bunk and runs into Jaya who is getting ready to visit her family.  Hayley greets her and helps her get dressed and pack a bag.
+\hl{Hayley is discharged from the Medbay (they need the room for someone else).  She returns to the bunk and runs into Jaya who is getting ready to visit her family.  Hayley greets her and helps her get dressed and pack a bag.}
 
-Hayley ask Jaya, ``Is it okay to have an overnight guest?''
+\hl{Hayley ask Jaya, ``Is it okay to have an overnight guest?''}
 
-``As long as it's not Trenton, sure.  Just, you know, let us know so we can clear out,'' says Jaya with a wink.
+\hl{``As long as it's not Trenton, sure.  Just, you know, let us know so we can clear out,'' says Jaya with a wink.}
 
-``Oh it wouldn't be Mr. Hadef, he's mad at me right now.''  Hayley looks puzzled.  ``And why would you want to clear out?  Won't you need to sleep also?''
+\hl{``Oh it wouldn't be Mr. Hadef, he's mad at me right now.''  Hayley looks puzzled.  ``And why would you want to clear out?  Won't you need to sleep also?''}
 
-``Who are you going to have over?''
+\hl{``Who are you going to have over?''}
 
-``Signe,'' Hayley says with a happy smile.
+\hl{``Signe,'' Hayley says with a happy smile.}
 
-Jaya looks a bit surprised and then looks Hayley up and down again, a little intrigued.  ``Huh.  I didn't see that coming.''  She grins.  ``No \textit{wonder} Trenton is mad.''
+\hl{Jaya looks a bit surprised and then looks Hayley up and down again, a little intrigued.  ``Huh.  I didn't see that coming.''  She grins.  ``No \textit{wonder} Trenton is mad.''}
 
-Hayley smiles back uncertainly, but clearly has no idea what she's talking about.}\footnote{\textbf{Nathaniel Ford }I totally missed this conversation. Delightful! \textsubscript{05/10/14 1:16am}}\footnote{$\rightarrow$\textbf{Suko T }Yeah, that's why I missed the Trenton-Jonah stuff, this was too good to skip :)  I loved the direction it went. \textsubscript{05/10/14 2:15am}}
+\hl{Hayley smiles back uncertainly, but clearly has no idea what she's talking about.}\footnote{\textbf{Nathaniel Ford }I totally missed this conversation. Delightful! \textsubscript{05/10/14 1:16am}}\footnote{$\rightarrow$\textbf{Suko T }Yeah, that's why I missed the Trenton-Jonah stuff, this was too good to skip :)  I loved the direction it went. \textsubscript{05/10/14 2:15am}}
 
 
 \sceneHeadline{Jonah and Trenton}
@@ -811,3 +813,9 @@ Jaya: Shut up! You're on drugs!
 % Exported @ 08/24/15 11:07am
 \end{flushright}
 
+
+\begin{center}
+~
+\vskip 0em
+\includegraphics[width=12cm]{img/ch26_new_arm.jpg}
+\end{center}
