--- a/4T/ch27.tex
+++ b/4T/ch27.tex
@@ -564,7 +564,7 @@ Jaya arches an eyebrow.
 
 ``The kind of help that can bombard an area from all directions.  The kind of help that can blow up a building with just a gun, not a bomb,'' says Jonah.
 
-Ogleby looks dubious.  {[}\textit{Challenge 3: Convince Ogleby that we're telling the truth. Social Chameleon 4 (Jonah) → Overcome! }\textit{\textbf{3 VP (Jonah)}}{]} 
+Ogleby looks dubious.  {[}\textit{Challenge 3: Convince Ogleby that we're telling the truth. Social Chameleon 4 (Jonah) $\rightarrow$ Overcome! }\textit{\textbf{3 VP (Jonah)}}{]} 
 
 
 
@@ -580,7 +580,7 @@ Jonah shows Ogleby the box.  ``We need your help to tell him that his son is dea
 
 ``I suppose I could expedite the request for a meeting...'' says Ogleby, clearly still thrown by the info about Oliver.
 
-``I strongly suggest that you expedite this. Right.  Now.'' says Jaya, putting her hand on the box and staring intently at Ogleby. {[}\textit{Challenge 1: Convince Ogleby expedite the request. Air of   Command 2 (Jaya) → Overcome! }\textit{\textbf{1 VP (Jaya)}}{]} 
+``I strongly suggest that you expedite this. Right.  Now.'' says Jaya, putting her hand on the box and staring intently at Ogleby. {[}\textit{Challenge 1: Convince Ogleby expedite the request. Air of   Command 2 (Jaya) $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Jaya)}}{]} 
 
 Ogleby has his secretary escort us to the den down the hall to wait.  After about 20 minutes, a Constable comes to fetch us and escorts us to a meeting with Mr. Langdon.
 
@@ -591,7 +591,7 @@ Ogleby has his secretary escort us to the den down the hall to wait.  After abou
 
 \sceneHeadline{Langdon Apartment}
 
-Mr.Langdon has a suite of apartments.  A well dressed Franchise woman greets us at the door.  Behind her is a man with pulled back hair, neatly dressed in what Hayley recognizes as a House Langdon uniform.  He appears to be \hl{the butler}\footnote{\textbf{Nathaniel Ford }Actually, probably somewhat higher station. More like a steward or equivalent. But 'off' for that. \textsubscript{07/03/14 11:02am}}\footnote{$\rightarrow$\textbf{Suko T }I don't know why but when you described him with the pulled back hair, I instantly thought of Steven Segal.  Who would also look somewhat out of place as a house steward :D \textsubscript{07/03/14 11:58am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Interesting! I was thinking more http://www.hotflick.net/flicks/1988\_Dangerous\_Liaisons/988DLS\_John\_Malkovich\_017.jpg But I think that Segal definitely has more of the 'out of place' vibe. \textsubscript{07/03/14 12:49pm}}\footnote{$\rightarrow$\textbf{Suko T }I think Segal always looks out of place and sort of uncomfortable in everything and everywhere.  He's just so...clunky.  Looking like Malkovich would definitely be creepier tho.  I could really picture Malkovich saying ``Gillian says hi'' with exactly the right level of menace. \textsubscript{07/21/14 10:50am}} and addresses us, ``Agent Parvadi, I was told that you were coming.''  He tries to put his hand on Jaya's shoulder but she ducks him. {[}\textit{Challenge 1: Notice. Sixth Sense 1 (Jaya) → Matched}{]}  Jaya senses that he is combat trained. 
+Mr.Langdon has a suite of apartments.  A well dressed Franchise woman greets us at the door.  Behind her is a man with pulled back hair, neatly dressed in what Hayley recognizes as a House Langdon uniform.  He appears to be \hl{the butler}\footnote{\textbf{Nathaniel Ford }Actually, probably somewhat higher station. More like a steward or equivalent. But 'off' for that. \textsubscript{07/03/14 11:02am}}\footnote{$\rightarrow$\textbf{Suko T }I don't know why but when you described him with the pulled back hair, I instantly thought of Steven Segal.  Who would also look somewhat out of place as a house steward :D \textsubscript{07/03/14 11:58am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Interesting! I was thinking more http://www.hotflick.net/flicks/1988\_Dangerous\_Liaisons/988DLS\_John\_Malkovich\_017.jpg But I think that Segal definitely has more of the 'out of place' vibe. \textsubscript{07/03/14 12:49pm}}\footnote{$\rightarrow$\textbf{Suko T }I think Segal always looks out of place and sort of uncomfortable in everything and everywhere.  He's just so...clunky.  Looking like Malkovich would definitely be creepier tho.  I could really picture Malkovich saying ``Gillian says hi'' with exactly the right level of menace. \textsubscript{07/21/14 10:50am}} and addresses us, ``Agent Parvadi, I was told that you were coming.''  He tries to put his hand on Jaya's shoulder but she ducks him. {[}\textit{Challenge 1: Notice. Sixth Sense 1 (Jaya) $\rightarrow$ Matched}{]}  Jaya senses that he is combat trained. 
 
 
 
@@ -605,7 +605,7 @@ The ninja butler stalls us and won't let us see Mr. Langdon.  \hl{The woman look
 
 ``Yes''
 
-{[}\textit{Challenge 2: Notice. Vigilant 3 (Jonah) → Overcome! }\textit{\textbf{3 VP (Jonah)}}{]} 
+{[}\textit{Challenge 2: Notice. Vigilant 3 (Jonah) $\rightarrow$ Overcome! }\textit{\textbf{3 VP (Jonah)}}{]} 
 
 ``It would be a mistake to see him,'' says the ninja butler.
 
@@ -625,7 +625,7 @@ Jaya reaches around Hayley and grabs his jacket front with her mechanical arm.  
 
 \textit{{[}Refresh Vigilant (Jonah){]}}  Jonah doesn't hear anyone coming down the hallway.
 
-{[}\textit{Challenge 3: Do not get caught strangling a liveried house servant in Mr. Langdon's antechamber. Senior Constable 2 (Jaya) + Bodyguard 2 (Hayley) → Matched}{]} 
+{[}\textit{Challenge 3: Do not get caught strangling a liveried house servant in Mr. Langdon's antechamber. Senior Constable 2 (Jaya) + Bodyguard 2 (Hayley) $\rightarrow$ Matched}{]} 
 
 Hayley murmurs quietly to Jaya that someone is coming and Jaya smoothly drops the ninja butler and steps away just as Mr. Langdon enters the room.
 
@@ -639,7 +639,7 @@ Hayley murmurs quietly to Jaya that someone is coming and Jaya smoothly drops th
 
 ``Not here, we have very...emotional news for you,'' says Jaya, straightening her uniform.
 
-{[}\textit{Challenge 2: Convince Mr. Langdon to have a private meeting. Dress Uniform 2 (Jaya) → Matched}{]} 
+{[}\textit{Challenge 2: Convince Mr. Langdon to have a private meeting. Dress Uniform 2 (Jaya) $\rightarrow$ Matched}{]} 
 
 Looking displeased, Mr. Langdon says, ``Well then I guess we won't do this on the porch then.  Follow me.''
 
@@ -687,7 +687,7 @@ Mr. Langdon still doesn't move to take the box but he flicks a glance over at th
 
 ``I'd like to be alone now,'' says Mr. Langdon.
 
-{[}\textit{Challenge 3: Notice. }\textit{Vigilant }\textit{3 (Jonah) → Matched}{]} 
+{[}\textit{Challenge 3: Notice. }\textit{Vigilant }\textit{3 (Jonah) $\rightarrow$ Matched}{]} 
 
 Jonah can tell that Mr. Langdon doesn't believe us.
 
@@ -703,7 +703,7 @@ Jaya cracks her neck and speaks for the first time, ``We have stuff to tell you.
 
 ``I am tired of threats,'' says Mr. Langdon.
 
-{[}\textit{Challenge 4.  Convince Mr. Langdon that we not street thugs and are friends of Oliver's.  Battle Uniform 2 (Jonah) + Ladies' Maid 2 (Hayley) + Gorgeous 3 (Hayley)  → Matched}{]}. 
+{[}\textit{Challenge 4.  Convince Mr. Langdon that we not street thugs and are friends of Oliver's.  Battle Uniform 2 (Jonah) + Ladies' Maid 2 (Hayley) + Gorgeous 3 (Hayley)  $\rightarrow$ Matched}{]}. 
 
 Jonah doesn't reply and Hayley can tell that we're losing the window for a polite reply.  She pulls off her helmet, tossing her salon-worthy hair over her shoulder to reveal her elegant features.  Mr. Langdon's attention is drawn to her in surprise and she looks at him, her expression open and earnest.  Her language shifts to a more stiffly formal pattern that you have not heard her speak since her first few days on the team.  ``Operator Langdon was a highly valued asset to the Transit Authority.  He received multiple commendations on record and is a true credit to House Langdon.  Even in his death, he gained us very important information.  Information you need to know.  Please listen to us.''
 
@@ -719,27 +719,28 @@ Jonah doesn't reply and Hayley can tell that we're losing the window for a polit
 \jumpHeadline{Challenges \& Refreshes }
 
 \begin{itemize}
-\item Challenge 3: Convince Ogleby that we're telling the truth. Social Chameleon 4 (Jonah) → Overcome! \textbf{3 VP (Jonah)}
-\item Challenge 1: Convince Ogleby expedite the request. Air of Command 2 (Jaya) → Overcome! \textbf{1 VP (Jaya)}
-\item Challenge 1: Notice. Sixth Sense 1 (Jaya) → Matched
-\item Challenge 2: Notice. Vigilant 3 (Jonah) → Overcome! \textbf{2 VP (Jonah)}
+\item Challenge 3: Convince Ogleby that we're telling the truth. Social Chameleon 4 (Jonah) $\rightarrow$ Overcome! \textbf{3 VP (Jonah)}
+\item Challenge 1: Convince Ogleby expedite the request. Air of Command 2 (Jaya) $\rightarrow$ Overcome! \textbf{1 VP (Jaya)}
+\item Challenge 1: Notice. Sixth Sense 1 (Jaya) $\rightarrow$ Matched
+\item Challenge 2: Notice. Vigilant 3 (Jonah) $\rightarrow$ Overcome! \textbf{2 VP (Jonah)}
 \item Refresh Vigilant 3 (Jonah)
-\item Challenge 3: Do not get caught strangling a liveried house servant in Mr. Langdon's antechamber. Senior Constable 2 (Jaya) + Bodyguard 2 (Hayley) → Matched
-\item Challenge 2: Convince Mr. Langdon to have a private meeting. Dress Uniform 2 (Jaya) → Matched
+\item Challenge 3: Do not get caught strangling a liveried house servant in Mr. Langdon's antechamber. Senior Constable 2 (Jaya) + Bodyguard 2 (Hayley) $\rightarrow$ Matched
+\item Challenge 2: Convince Mr. Langdon to have a private meeting. Dress Uniform 2 (Jaya) $\rightarrow$ Matched
 \item Refresh Social Chameleon 4 (Jonah)
-\item Challenge 3: Notice. Vigilant 3 (Jonah) → Matched
-\item Challenge 4.  Convince Mr. Langdon that we not street thugs and are friends of Oliver's.  Battle Uniform 2 (Jonah) + Ladies' Maid 2 (Hayley) + Gorgeous 3 (Hayley)  → Matched
+\item Challenge 3: Notice. Vigilant 3 (Jonah) $\rightarrow$ Matched
+\item Challenge 4.  Convince Mr. Langdon that we not street thugs and are friends of Oliver's.  Battle Uniform 2 (Jonah) + Ladies' Maid 2 (Hayley) + Gorgeous 3 (Hayley)  $\rightarrow$ Matched
 \end{itemize}
 
 
 \jumpHeadline{VP Totals }
 
+{\parskip=0pt
 Jonah 5
 
 Jaya 1
 
 Hayley 0
-
+}
 
 \jumpHeadline{Quotes: }
 
@@ -752,6 +753,9 @@ Jonah: You've never spoken to him, have you?
 }
 
 
+\begin{center}
+\includegraphics[width=12cm]{img/ch27_diplomatic.jpg}
+\end{center}
 
 \vspace{\fill}
 
