--- a/4T/ch28.tex
+++ b/4T/ch28.tex
@@ -49,7 +49,7 @@ Mr. Langdon addresses us again, ``What do I need to know?''
 
 Jaya and Jonah tell Hayley to give Mr. Langdon the papers.  Hayley does so, saying that they were prepared for Mr. Langdon's Filis.
 
-Mr. Langdon reads the papers and Jonah watches him closely to see what parts of the papers he pauses at.  {[}\textit{Challenge 1:  Notice what catches Mr. Langdon's eye. Business Contacts 2 (Jonah) → Overcome! }\textit{\textbf{1 VP (Jonah)}}{]}.  Mr. Langdon pauses when he gets to the sections on cause of death (asphyxiation from enemy inflicted wounds) and at the listing of Oliver's rank.  He seems to be searching for something... some sort of proof of something.
+Mr. Langdon reads the papers and Jonah watches him closely to see what parts of the papers he pauses at.  {[}\textit{Challenge 1:  Notice what catches Mr. Langdon's eye. Business Contacts 2 (Jonah) $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Jonah)}}{]}.  Mr. Langdon pauses when he gets to the sections on cause of death (asphyxiation from enemy inflicted wounds) and at the listing of Oliver's rank.  He seems to be searching for something... some sort of proof of something.
 
 ``My apologies if I say anything inappropriate, but we only know what we know because of your son's sacrifice,'' says Jonah.
 
@@ -87,7 +87,7 @@ The door opens and Jaya goes on alert.  Hayley, in the middle of putting the can
 
 ``I will not discuss such things with you.  I've never met you.  I don't even know who sent you, or even if you are who you say you are,'' says Mr. Langdon.  Hayley is looking alarmed and opens her mouth to say something, then shuts it.
 
-Jaya makes a frustrated noise and rubs her nose.  ``Let's get to the point,'' says Jaya.  Hayley looks horrified.  {[}\textit{Challenge 2:  Notice.  Stash 2 (Jaya) → Matched{]}}.  Jaya's perception is sharpened by the drugs she just took, Jaya can tell \hl{that Mr. Langdon doesn't believe us}\footnote{\textbf{Suko T }I think this is what she noticed?  Yes? \textsubscript{07/27/14 10:52pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }It probably went beyond that to, ``Mr. Langdon did not find you believable/credible.'' \textsubscript{07/28/14 6:50pm}}.
+Jaya makes a frustrated noise and rubs her nose.  ``Let's get to the point,'' says Jaya.  Hayley looks horrified.  {[}\textit{Challenge 2:  Notice.  Stash 2 (Jaya) $\rightarrow$ Matched{]}}.  Jaya's perception is sharpened by the drugs she just took, Jaya can tell \hl{that Mr. Langdon doesn't believe us}\footnote{\textbf{Suko T }I think this is what she noticed?  Yes? \textsubscript{07/27/14 10:52pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }It probably went beyond that to, ``Mr. Langdon did not find you believable/credible.'' \textsubscript{07/28/14 6:50pm}}.
 
 Mr. Langdon says in a voice full of controlled anger, ``Yes. By all means, let us get to the point.  Let me see if I can summarize this.  It seems like you want me to know my son is dead.  And the people who did it are some nameless enemy that I have to take your word for is dangerous.  I am to keep this in mind at the next senate meeting.  Is that all?''  Mr. Langdon stands and rests his hands on the table.  ``If you what you claim is true, and you aren't a bunch of grenadiers trying to shake me down for...whatever it is you are trying to shake me down for, then we are done here.''  He leaves the room.  Hayley is looking almost ill with distress.  Jaya leaves.  Jonah pauses turns to the Fili.  ``I would like to state for the record that we extend our condolences for the loss of Operator Langdon.  \hl{We came here to inform his father of his son's dedicated service.}\footnote{\textbf{Suko T }I think there was something else that Jonah added to the message about the vote or something but I have no notes on what it was. \textsubscript{07/25/14 2:58am}}````I cannot convey messages sir,'' says the Fili politely.
 
@@ -97,7 +97,7 @@ Mr. Langdon says in a voice full of controlled anger, ``Yes. By all means, let u
 
 ``Very good.  Thank you,'' says Jonah.  The Fili looks uncomfortable at the thanks.
 
-Hayley waits until Jonah is leaving the room and then nods at the Fili with the precise level of respect due to her position and follows Jonah.  Jaya and Hayley keep an eye out for the butler as they leave but do not see him.  {[}\textit{Challenge 3: Notice what was up with Mr. Langdon.  Process Wonk 2 (Hayley) + Nose for Breadcrumbs 2 (Hayley) → Matched{]}}. As they walk out, Hayley slowly puts together the bits of information she was gathering about Mr. Langdon.  She realizes that Mr. Langdon was fishing for information from us.  He was under some sort of pressure from someone, a pressure that is forcing him to do something.  He didn't know if we were part of that group or some new party trying to manipulate him.  He felt like we were shaking him down for something but he didn't know what.
+Hayley waits until Jonah is leaving the room and then nods at the Fili with the precise level of respect due to her position and follows Jonah.  Jaya and Hayley keep an eye out for the butler as they leave but do not see him.  {[}\textit{Challenge 3: Notice what was up with Mr. Langdon.  Process Wonk 2 (Hayley) + Nose for Breadcrumbs 2 (Hayley) $\rightarrow$ Matched{]}}. As they walk out, Hayley slowly puts together the bits of information she was gathering about Mr. Langdon.  She realizes that Mr. Langdon was fishing for information from us.  He was under some sort of pressure from someone, a pressure that is forcing him to do something.  He didn't know if we were part of that group or some new party trying to manipulate him.  He felt like we were shaking him down for something but he didn't know what.
 
 
 
@@ -402,7 +402,7 @@ Jaya doesn't move and keeps staring at Bennett.  She replies, ``No.''
 
 At that, Hayley gasps and immediately abandons guarding Jaya's back and moves to stand between Jaya and the beefy guy.  She looks very worried and tense as she tries to track the movement of everyone in the room.
 
-``If you are intimidated by just this conversation....'' taunts Bennett. {[}\textit{Challenge 3: Don't be intimidated by Bennett.   Left Arm 3 (Jaya) → Matched}{]}.
+``If you are intimidated by just this conversation....'' taunts Bennett. {[}\textit{Challenge 3: Don't be intimidated by Bennett.   Left Arm 3 (Jaya) $\rightarrow$ Matched}{]}.
 
 Jaya steps forward again and crosses her metallic arm over her regular one.  The servos on the wrist whirl audibly.   ``DO I LOOK FUCKING INTIMIDATED?'' she demands.  
 
@@ -442,7 +442,7 @@ Jaya and Hayley leave the building without incident and retrieve their weapons a
 
 
 
-Jaya and Hayley make it to the courtyard and 6 TA soldiers are waiting for them there with rifles.  They all see each other at about the same time.  ``Run!'' says Jaya and she bolts.  {[}\textit{Challenge 2: Outrun the soldiers.  Adrenaline Junkie 2 (Jaya) → Matched}{]}.  Jaya escapes down the street.
+Jaya and Hayley make it to the courtyard and 6 TA soldiers are waiting for them there with rifles.  They all see each other at about the same time.  ``Run!'' says Jaya and she bolts.  {[}\textit{Challenge 2: Outrun the soldiers.  Adrenaline Junkie 2 (Jaya) $\rightarrow$ Matched}{]}.  Jaya escapes down the street.
 
 
 
@@ -452,7 +452,7 @@ Hayley runs afterward, but slowly, limping.  Two of the soldiers pass her, and d
 
 ``Uh, my commanding officer, Station Chief Vargas.''
 
-\hl{Hayley nods and looks at the constable steadily.  ``I see.  You may inform him that you tried.  You may leave now.'' {[}\textit{Challenge 2: Pull Rank.   TA Battle Dress Uniform 2 (Hayley) → Matched}{]}.  Hayley unnecessarily straightens her uniform collar and makes sure her Agent badge is visible and smiles nicely at the constables.}\footnote{\textbf{Rebecca S. }sweeeeeeet \textsubscript{07/28/14 10:19pm}}
+\hl{Hayley nods and looks at the constable steadily.  ``I see.  You may inform him that you tried.  You may leave now.'' {[}\textit{Challenge 2: Pull Rank.   TA Battle Dress Uniform 2 (Hayley) $\rightarrow$ Matched}{]}.  Hayley unnecessarily straightens her uniform collar and makes sure her Agent badge is visible and smiles nicely at the constables.}\footnote{\textbf{Rebecca S. }sweeeeeeet \textsubscript{07/28/14 10:19pm}}
 
 The constable looks very nervous and says, ``Er.  We saw the suspects and pursued them to, uh....'' he looks around for the street name.  Hayley helpfully gives him the street name.
 
@@ -520,7 +520,7 @@ Jonah takes a sip of the drink and looks at it appreciatively.  ``This is really
 
 ``In battle, the rules are clear.  You can't argue with bullets.  You have to make decisions and they can be very difficult.  Sometimes you have a way out.  But not always and sometimes the way out is deceiving.  My point is that the rules in war are clear, but now the rules are getting less clear.''
 
-Jonah pauses and looks at Marechenko.  ``Are you familiar with the name Octavius?''  {[}\textit{Challenge 3: Notice if Marechenko reacts to Octavius' name.  Trigger Reflex 2 + }\textit{ {\color[RGB]{255,0,0}Flaw 2: Trust Marechenko} }\textit{ → Matched}{]}.  If he wasn't looking for it, he might have missed it but Marechenko's attitude does shift subtly at that name.
+Jonah pauses and looks at Marechenko.  ``Are you familiar with the name Octavius?''  {[}\textit{Challenge 3: Notice if Marechenko reacts to Octavius' name.  Trigger Reflex 2 + }\textit{ {\color[RGB]{255,0,0}Flaw 2: Trust Marechenko} }\textit{ $\rightarrow$ Matched}{]}.  If he wasn't looking for it, he might have missed it but Marechenko's attitude does shift subtly at that name.
 
 ``You are asking if it is familiar?'' asks Marechenko.
 
@@ -602,7 +602,7 @@ Marechenko asks if he's alright.
 
 \hl{{[}...{]}}\footnote{\textbf{Suko T }was out of the room, no idea what was said here.  Can anyone fill in? \textsubscript{07/28/14 12:09am}}
 
-``Octavius is even more disturbing,'' says Jonah.  ``Any deal he offers is no good.'' {[}\textit{Challenge 4: Convince Marechenko not to make a deal with Octavius.  Combat Armor 3 + Pulse Rifle 3 + Social Chameleon 4 → Overcome! }\textit{\textbf{4 VP (Jonah)}}{]}.  
+``Octavius is even more disturbing,'' says Jonah.  ``Any deal he offers is no good.'' {[}\textit{Challenge 4: Convince Marechenko not to make a deal with Octavius.  Combat Armor 3 + Pulse Rifle 3 + Social Chameleon 4 $\rightarrow$ Overcome! }\textit{\textbf{4 VP (Jonah)}}{]}.  
 
 Jonah puts his hand on his weapon and says grimly, ``I would rather die than accept that deal.''
 
@@ -660,7 +660,7 @@ Marechenko looks at Jonah, ``Are you alright?  You see unwell.''
 
 ``Is there anything that you can tell us that will help us when we speak to him?'' asks Jonah.
 
-{[}\textit{Challenge 2: Get more info about Agent Lorentz.  Small Unit Tactics 3 → Overcome! }\textit{\textbf{2 VP (Jonah)}}{]}.  
+{[}\textit{Challenge 2: Get more info about Agent Lorentz.  Small Unit Tactics 3 $\rightarrow$ Overcome! }\textit{\textbf{2 VP (Jonah)}}{]}.  
 
 ``\hl{Mohinder is a patriot.  A true patriot.  And his cat's name is Otto,}\footnote{\textbf{Rebecca S. }ugh, how can we NOT meet him?? \textsubscript{07/28/14 10:21pm}}`` says Marechenko.
 
@@ -689,19 +689,19 @@ Jaya and Hayley come running up and we start hustling for the TA station.  Befor
 
 \begin{itemize}
 \item Pool: 9
-\item Challenge 1:  Notice what catches Mr. Langdon's eye. Business Contacts 2 (Jonah) → Overcome! \textbf{1 VP (Jonah)}
-\item Challenge 2:  Notice.  Stash 2 (Jaya) → Matched
-\item Challenge 3: Notice what was up with Mr. Langdon.  Process Wonk 2 (Hayley) + Nose for Breadcrumbs 2 (Hayley) → Matched
+\item Challenge 1:  Notice what catches Mr. Langdon's eye. Business Contacts 2 (Jonah) $\rightarrow$ Overcome! \textbf{1 VP (Jonah)}
+\item Challenge 2:  Notice.  Stash 2 (Jaya) $\rightarrow$ Matched
+\item Challenge 3: Notice what was up with Mr. Langdon.  Process Wonk 2 (Hayley) + Nose for Breadcrumbs 2 (Hayley) $\rightarrow$ Matched
 \item Pool: 3 + 12 (Bennett)
 \item Refresh Bodyguard 2 (Hayley)
-\item Challenge 3: Don't be intimidated by Bennett.   Left Arm 3 (Jaya) → Matched
-\item Challenge 2: Outrun the soldiers.  Adrenaline Junkie 2 (Jaya) → Matched
-\item Challenge 2: Pull Rank.   TA Battle Dress Uniform 2 (Hayley) → Matched
+\item Challenge 3: Don't be intimidated by Bennett.   Left Arm 3 (Jaya) $\rightarrow$ Matched
+\item Challenge 2: Outrun the soldiers.  Adrenaline Junkie 2 (Jaya) $\rightarrow$ Matched
+\item Challenge 2: Pull Rank.   TA Battle Dress Uniform 2 (Hayley) $\rightarrow$ Matched
 \item Pool: 8 + 12 (Marechenko)
-\item Challenge 3: Notice if Marechenko reacts to Octavius' name.  Trigger Reflex 2 +  {\color[RGB]{255,0,0}Flaw 2: Trust Marechenko}  → Matched
-\item Challenge 4: Convince Marechenko that Octavius is that much of a threat.  Combat Armor 3 + Pulse Rifle 3 + Social Chameleon 4 → Overcome! \textbf{4 VP (Jonah)}
+\item Challenge 3: Notice if Marechenko reacts to Octavius' name.  Trigger Reflex 2 +  {\color[RGB]{255,0,0}Flaw 2: Trust Marechenko}  $\rightarrow$ Matched
+\item Challenge 4: Convince Marechenko that Octavius is that much of a threat.  Combat Armor 3 + Pulse Rifle 3 + Social Chameleon 4 $\rightarrow$ Overcome! \textbf{4 VP (Jonah)}
 \item Refresh Vigilant 3 (Jonah)
-\item Challenge 2: Get more info about Agent Lorentz.  Small Unit Tactics 3 \textit{→ Overcome! }\textit{\textbf{2 VP (Jonah)}}
+\item Challenge 2: Get more info about Agent Lorentz.  Small Unit Tactics 3 \textit{$\rightarrow$ Overcome! }\textit{\textbf{2 VP (Jonah)}}
 \item Pool: 12
 \end{itemize}
 
