--- a/4T/ch29.tex
+++ b/4T/ch29.tex
@@ -23,7 +23,7 @@ We meet the mysterious Agent Mohinder Lorentz!  Jonah decides to trust even more
 
 
 
-Hayley informs Jonah that he wasn't on the arrest warrant.  Jaya leads us to the rooftop of a restaurant so we can talk in (relative) privacy.  {[}\textit{Challenge 2: Convince people that we're on official TA business.  Concealment 1 (Jonah) + Agent 1 (Jaya) }\textit{) → Matched}{]}
+Hayley informs Jonah that he wasn't on the arrest warrant.  Jaya leads us to the rooftop of a restaurant so we can talk in (relative) privacy.  {[}\textit{Challenge 2: Convince people that we're on official TA business.  Concealment 1 (Jonah) + Agent 1 (Jaya) }\textit{) $\rightarrow$ Matched}{]}
 
 
 \sceneHeadline{Rooftop}
@@ -32,7 +32,7 @@ There is a small garden on top of the building.  There are some chickens in a ca
 
 
 
-Jaya and Jonah radio Jari.  They tell him that Senator Bennett is compromised and that he has Station Chief Vargas issuing an arrest warrant for Jaya and Hayley.  Jonah tells Jari that Marechenko has an offer.  He will back us if he gets proof of SAC-09's location.  Jari laughs and says, ``That will never happen.  I've known her for some time now and Morgan will never agree to that.''   {[}\textit{Challenge 2: Convince Jari to plead our case, despite his doubts..  Flaw 2 Owe Jari a favor (Jonah) → Matched}{]}.  Jari grudgingly agrees to go back to SAC-09 and do his best to convince Morgan that the payoff (Marechenko's support) is worth the price.  He says it will take him at least an hour and half to get to SAC-09 and back, assuming they don't keep him there while they talk things over.
+Jaya and Jonah radio Jari.  They tell him that Senator Bennett is compromised and that he has Station Chief Vargas issuing an arrest warrant for Jaya and Hayley.  Jonah tells Jari that Marechenko has an offer.  He will back us if he gets proof of SAC-09's location.  Jari laughs and says, ``That will never happen.  I've known her for some time now and Morgan will never agree to that.''   {[}\textit{Challenge 2: Convince Jari to plead our case, despite his doubts..  Flaw 2 Owe Jari a favor (Jonah) $\rightarrow$ Matched}{]}.  Jari grudgingly agrees to go back to SAC-09 and do his best to convince Morgan that the payoff (Marechenko's support) is worth the price.  He says it will take him at least an hour and half to get to SAC-09 and back, assuming they don't keep him there while they talk things over.
 
 
 
@@ -54,7 +54,7 @@ Hayley sniffles and the tears slow a little but she keeps looking at Jonah sadly
 
 
 
-Jaya wanders around the roof and then kills a klipspringer {[}\textit{Refresh: Left Arm 3 (Jaya)}{]} who was totally trying to nibble on her uniform.  The animals go crazy and the little boy runs down the stairs.  Hayley attempts to clean Jaya's uniform with the rest of the water in her Canteen.  {[}\textit{Refresh: Dress Uniform 2 (Jaya)}{]}. And older man rushes out onto the roof and is upset over the dead klipspringer.   {[}\textit{Challenge 2: Get old man to chill.  Grim Visage 2 (Jaya) → Matched}{]}.  Jaya just glares at him intimidatingly and he backs down and goes away.
+Jaya wanders around the roof and then kills a klipspringer {[}\textit{Refresh: Left Arm 3 (Jaya)}{]} who was totally trying to nibble on her uniform.  The animals go crazy and the little boy runs down the stairs.  Hayley attempts to clean Jaya's uniform with the rest of the water in her Canteen.  {[}\textit{Refresh: Dress Uniform 2 (Jaya)}{]}. And older man rushes out onto the roof and is upset over the dead klipspringer.   {[}\textit{Challenge 2: Get old man to chill.  Grim Visage 2 (Jaya) $\rightarrow$ Matched}{]}.  Jaya just glares at him intimidatingly and he backs down and goes away.
 
 
 \sceneHeadline{Terminus Station}
@@ -138,7 +138,7 @@ Jonah leaves and gets the Agent in Training.  They walk to the agreed-upon meetu
 
 
 
-Jaya is grinning at the children in the plaza and scaring them.  Hayley has her helmet on and is scanning the crowd with her Heads-up Display.  {[}\textit{Challenge 3 Notice.  Heads-up Display 4 (Hayley) → Overcome! }\textit{\textbf{3 VP (Hayley)}}{]}.  Hayley spots Jonah (of course) and scans the man next to him.  She notices that he is not wearing any armor or weapons.  And there is a bit of short grey hairs on the shoulder of his jacket (the man is not greyhaired).  Her understanding proper dress is put on high alert.
+Jaya is grinning at the children in the plaza and scaring them.  Hayley has her helmet on and is scanning the crowd with her Heads-up Display.  {[}\textit{Challenge 3 Notice.  Heads-up Display 4 (Hayley) $\rightarrow$ Overcome! }\textit{\textbf{3 VP (Hayley)}}{]}.  Hayley spots Jonah (of course) and scans the man next to him.  She notices that he is not wearing any armor or weapons.  And there is a bit of short grey hairs on the shoulder of his jacket (the man is not greyhaired).  Her understanding proper dress is put on high alert.
 
 
 
@@ -177,7 +177,7 @@ Jaya nods.  Hayley moves to interpose herself protectively between the three of 
 
 \sceneHeadline{Transit Authority HQ}
 
-We approach the \hl{TA Agent HQ}\footnote{\textbf{Nathaniel Ford }Note that this is the TA Agent HQ, not the TA HQ, which is a bit more decentralized or more accurately places as the Security Triumvirate. \textsubscript{08/11/14 9:58am}} building.  It has been riot-proofed and somewhat upgraded.  Jonah is very nervous and some of it is leaking through to Jaya.  {[}\textit{Challenge 1 Notice.  Streetwise 1 (Jonah) → Matched}{]}.  Jonah notices that there are people up on the\hl{roofs of nearby buildings}\footnote{\textbf{Nathaniel Ford }Important to note the people in question were in nearby buildings, not TA HQ. \textsubscript{08/11/14 9:57am}}.
+We approach the \hl{TA Agent HQ}\footnote{\textbf{Nathaniel Ford }Note that this is the TA Agent HQ, not the TA HQ, which is a bit more decentralized or more accurately places as the Security Triumvirate. \textsubscript{08/11/14 9:58am}} building.  It has been riot-proofed and somewhat upgraded.  Jonah is very nervous and some of it is leaking through to Jaya.  {[}\textit{Challenge 1 Notice.  Streetwise 1 (Jonah) $\rightarrow$ Matched}{]}.  Jonah notices that there are people up on the\hl{roofs of nearby buildings}\footnote{\textbf{Nathaniel Ford }Important to note the people in question were in nearby buildings, not TA HQ. \textsubscript{08/11/14 9:57am}}.
 
 
 
@@ -291,7 +291,7 @@ Vogel opens the doors with flair and walks right in.  Jaya, Jonah and Hayley fol
 
 
 
-Jaya starts regaling Vogel with some of her war stories {[}\textit{Challenge 2: Make Vogel think Jaya is a badass.  Truncheon 2 (Jaya) → Matched}{]}.  Jaya waves her truncheon around for emphasis and demonstration.  Vogel listens and seems interested in the stories.  Malak seems to be mostly watching the truncheon.
+Jaya starts regaling Vogel with some of her war stories {[}\textit{Challenge 2: Make Vogel think Jaya is a badass.  Truncheon 2 (Jaya) $\rightarrow$ Matched}{]}.  Jaya waves her truncheon around for emphasis and demonstration.  Vogel listens and seems interested in the stories.  Malak seems to be mostly watching the truncheon.
 
 
 
@@ -353,7 +353,7 @@ Hayley coughs again, more loudly.  Jonah looks annoyed.
 
 ``Well they act funny.  Like a group.   All creepy finishing each other's sentences and shit.  Oh and when they die their faces get all melty and crap,'' says Jaya.
 
-{[}\textit{Challenge 1 Notice.  Ladies' Maid (Hayley) → Overcome! }\textit{\textbf{1 VP (Hayley)}}{]}  Hayley notices that Vogel looks over at the Agent in Training when Jaya says this and Malak looks at Vogel.
+{[}\textit{Challenge 1 Notice.  Ladies' Maid (Hayley) $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Hayley)}}{]}  Hayley notices that Vogel looks over at the Agent in Training when Jaya says this and Malak looks at Vogel.
 
 ``Can you tell us what they look like?'' asks Vogel.
 
@@ -367,7 +367,7 @@ Jaya glares at him.  ``This is fucking important!''
 
 
 
-Jaya rises to the challenge and they armwrestle.  {[}\textit{Challenge 4: Beat Drake Malak at Armwrestling.  Left Arm 3 (Jaya) + Flaw 3: Rivalry with Drake Malak (Jaya) → Matched}{]}.  Jaya puts up more of a fight than Malak expects and then she starts winning. He strains but she inexorably pushes his hand toward the table. Just before it touches the table he \hl{ragequits}\footnote{\textbf{Rebecca S. }\textless 3 \textsubscript{08/11/14 11:34pm}}.  He pulls his hand away and pushes away from the table violently, breaking his chair.  He storms over to the window and does several rage man poses \hl{to express his feelings}\footnote{\textbf{Suko T }\textless 3 \textsubscript{08/11/14 11:53pm}}.  Hayley unslings her rifle and holds it at the ready, not pointed at anyone but watching Malak carefully.  Malak takes a few deep breaths and then returns to the table, a bit calmer but still angry.  He says to Jaya grudgingly, ``Impressive, Agent.''  He pulls up another chair to sit in.   ``I concede.''
+Jaya rises to the challenge and they armwrestle.  {[}\textit{Challenge 4: Beat Drake Malak at Armwrestling.  Left Arm 3 (Jaya) + Flaw 3: Rivalry with Drake Malak (Jaya) $\rightarrow$ Matched}{]}.  Jaya puts up more of a fight than Malak expects and then she starts winning. He strains but she inexorably pushes his hand toward the table. Just before it touches the table he \hl{ragequits}\footnote{\textbf{Rebecca S. }\textless 3 \textsubscript{08/11/14 11:34pm}}.  He pulls his hand away and pushes away from the table violently, breaking his chair.  He storms over to the window and does several rage man poses \hl{to express his feelings}\footnote{\textbf{Suko T }\textless 3 \textsubscript{08/11/14 11:53pm}}.  Hayley unslings her rifle and holds it at the ready, not pointed at anyone but watching Malak carefully.  Malak takes a few deep breaths and then returns to the table, a bit calmer but still angry.  He says to Jaya grudgingly, ``Impressive, Agent.''  He pulls up another chair to sit in.   ``I concede.''
 
 ``Most people do,'' says Jaya smugly.
 
@@ -610,22 +610,22 @@ And there is a large explosion.
 
 \begin{itemize}
 \item Pool: 12
-\item Challenge 2: Convince people that we're on official TA business.  Concealment 1 (Jonah) + Agent 1 (Jaya) ) → Matched
-\item Challenge 2: Convince Jari to plead our case, despite his doubts..  Flaw 2 Owe Jari a favor (Jonah) → Matched
+\item Challenge 2: Convince people that we're on official TA business.  Concealment 1 (Jonah) + Agent 1 (Jaya) ) $\rightarrow$ Matched
+\item Challenge 2: Convince Jari to plead our case, despite his doubts..  Flaw 2 Owe Jari a favor (Jonah) $\rightarrow$ Matched
 \item Refresh: Left Arm 3 (Jaya)
 \item Refresh: Dress Uniform 2 (Jaya)
-\item Challenge 2: Get old man to chill.  Grim Visage 2 (Jaya) → Matched
+\item Challenge 2: Get old man to chill.  Grim Visage 2 (Jaya) $\rightarrow$ Matched
 \item Challenge 1 Notice. Sent back
 \item Refresh Vigilant 3 (Jonah)
-\item Challenge 3 Notice.  Heads-up Display 4 (Hayley) → Overcome! \textbf{3 VP (Hayley)}
-\item Challenge 1 Notice.  Streetwise 1 (Jonah) → Matched
+\item Challenge 3 Notice.  Heads-up Display 4 (Hayley) $\rightarrow$ Overcome! \textbf{3 VP (Hayley)}
+\item Challenge 1 Notice.  Streetwise 1 (Jonah) $\rightarrow$ Matched
 \item Refresh Ladies' Maid 2 (Hayley)
 \item Refresh Social Chameleon 4 (Jonah)
 \item Pool: 7+20 (Lorentz)
-\item Challenge 2: Make Vogel think Jaya is a badass.  Truncheon 2 (Jaya) → Matched
+\item Challenge 2: Make Vogel think Jaya is a badass.  Truncheon 2 (Jaya) $\rightarrow$ Matched
 \item Challenge 1: Notice.  Sent back to pool.
-\item Challenge 1 Notice.  Ladies' Maid (Hayley) → Overcome! \textbf{1 VP (Hayley)}
-\item Challenge 4: Beat Drake Malak at Armwrestling.  Left Arm 3 (Jaya) + Flaw 3: Rivalry with Drake Malak (Jaya) → Matched
+\item Challenge 1 Notice.  Ladies' Maid (Hayley) $\rightarrow$ Overcome! \textbf{1 VP (Hayley)}
+\item Challenge 4: Beat Drake Malak at Armwrestling.  Left Arm 3 (Jaya) + Flaw 3: Rivalry with Drake Malak (Jaya) $\rightarrow$ Matched
 \item Pool: 20
 \end{itemize}
 
