--- a/4T/ch30.tex
+++ b/4T/ch30.tex
@@ -128,7 +128,7 @@ Jonah comes to and feels Jaya in his mind \textit{right there}, which is strange
 
 
 
-Jaya, not wearing combat armor other than her light vest, is not doing so well. {[}\textit{Challenge 2: Not be injured.  }\textit{Flaw 2: Injured right arm (Jaya)}\textit{ → Matched}{]}.  Her right arm is a really messed up- badly sprained but not broken- and she takes some time to repair her left arm as well {[}\textit{Refresh: Left Arm 3 (Jaya)}{]}.
+Jaya, not wearing combat armor other than her light vest, is not doing so well. {[}\textit{Challenge 2: Not be injured.  }\textit{Flaw 2: Injured right arm (Jaya)}\textit{ $\rightarrow$ Matched}{]}.  Her right arm is a really messed up- badly sprained but not broken- and she takes some time to repair her left arm as well {[}\textit{Refresh: Left Arm 3 (Jaya)}{]}.
 
 
 
@@ -156,7 +156,7 @@ Hayley asks (in the general direction of Drake and Lorentz), ``Sir, do we dig in
 
 
 
-Jaya moves over to the new opening in the wall and looks outside.  {[}\textit{Challenge 2: Notice.  Binoculars 2 (Jaya) → Matched}{]}
+Jaya moves over to the new opening in the wall and looks outside.  {[}\textit{Challenge 2: Notice.  Binoculars 2 (Jaya) $\rightarrow$ Matched}{]}
 
 
 
@@ -164,19 +164,19 @@ Drake and Hayley join Jaya at the hole in the wall, taking up positions to eithe
 
 
 
-{[}\textit{Challenge 3: Bandage Mohinder Lorentz.  Surgical Kit 2 (Jonah) + Street Medic 2 (Jonah) → Matched}{]}  Jonah bandages up Lorentz.
+{[}\textit{Challenge 3: Bandage Mohinder Lorentz.  Surgical Kit 2 (Jonah) + Street Medic 2 (Jonah) $\rightarrow$ Matched}{]}  Jonah bandages up Lorentz.
 
 
 
-There is more shooting coming from elsewhere.  Jaya leans out to see where the shooting is coming from, exposing herself.  {[}\textit{Refresh: Adrenaline Junkie 2 (Jaya)}{]}.  {[}\textit{Challenge 2: Shoot guy aiming at Jaya. Rifle 2 (Hayley) → Matched}{]}  Hayley can see a guy aiming a rifle toward Jaya, but she shoots him before he can take his shot and he falls.
+There is more shooting coming from elsewhere.  Jaya leans out to see where the shooting is coming from, exposing herself.  {[}\textit{Refresh: Adrenaline Junkie 2 (Jaya)}{]}.  {[}\textit{Challenge 2: Shoot guy aiming at Jaya. Rifle 2 (Hayley) $\rightarrow$ Matched}{]}  Hayley can see a guy aiming a rifle toward Jaya, but she shoots him before he can take his shot and he falls.
 
 
 
-One of the guys in the building sees them too and aims a grenade launcher at them.  Jaya points him out to Hayley.  Jaya decides to jump down to the floor below to get more cover.  {[}\textit{Challenge 1: Jump down to second floor.  Adrenaline Junkie 2 (Jaya)  → Overcome! }\textit{\textbf{1 VP (Jaya)}}{]}
+One of the guys in the building sees them too and aims a grenade launcher at them.  Jaya points him out to Hayley.  Jaya decides to jump down to the floor below to get more cover.  {[}\textit{Challenge 1: Jump down to second floor.  Adrenaline Junkie 2 (Jaya)  $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Jaya)}}{]}
 
 
 
-{[}\textit{Challenge 4: Shoot guy with grenade launcher before he can fire on us.  Saltaremachy 3 (Hayley) + Bodyguard 2 (Hayley) + Memory for Details 1 (Hayley) + Small Unit Tactics 1 (Hayley) → Matched}{]}.  Hayley does some quick calculations on how much cover is available for the people in the room, weighed against her memories of grenade blast radii from Nicklepan, and decides to try to take the guy out before he can fire.  She flicks her flashlight on and off which distracts him and causes him to pause for a crucial moment.  She fires at him and hits him, but he still gets the shot off.  Somehow exactly in the right place at the right time, as if she could track its trajectory exactly, Hayley spins, leaps and gracefully \underline{  {\color[RGB]{17,85,204}\hl{scissor kicks}}  }\footnote{\textbf{Nathaniel Ford }lulz \textsubscript{08/18/14 9:06pm}}, the grenade out of the air so that it explodes outside of the building.  Hayley and Drake absorb some concussive pushback, but there is negligible other damage from the blast.  Jonah, attending to Lorentz, misses what Hayley did entirely, but Drake sees the whole thing.
+{[}\textit{Challenge 4: Shoot guy with grenade launcher before he can fire on us.  Saltaremachy 3 (Hayley) + Bodyguard 2 (Hayley) + Memory for Details 1 (Hayley) + Small Unit Tactics 1 (Hayley) $\rightarrow$ Matched}{]}.  Hayley does some quick calculations on how much cover is available for the people in the room, weighed against her memories of grenade blast radii from Nicklepan, and decides to try to take the guy out before he can fire.  She flicks her flashlight on and off which distracts him and causes him to pause for a crucial moment.  She fires at him and hits him, but he still gets the shot off.  Somehow exactly in the right place at the right time, as if she could track its trajectory exactly, Hayley spins, leaps and gracefully \underline{  {\color[RGB]{17,85,204}\hl{scissor kicks}}  }\footnote{\textbf{Nathaniel Ford }lulz \textsubscript{08/18/14 9:06pm}}, the grenade out of the air so that it explodes outside of the building.  Hayley and Drake absorb some concussive pushback, but there is negligible other damage from the blast.  Jonah, attending to Lorentz, misses what Hayley did entirely, but Drake sees the whole thing.
 
 
 
@@ -206,7 +206,7 @@ Back in the conference room, Jonah asks Lorentz if he has contact with the outsi
 
 
 
-Jaya and Vogel head down the street.  Jaya glories in feeling like part of an elite fighting squad.  One that she will soon be leading, of course. {[}\textit{Challenge 2: Notice.  Vigilant 3 (Jonah, through Jaya) → Overcome! }\textit{\textbf{2 VP (Jaya and Jonah)}}{]}.  Jaya and Jonah can see that the people standing in the streets are all Filis.  They are scared and it is taking a clear act of willpower to stay in place.  There's something \hl{Hayley-like}\footnote{\textbf{Nathaniel Ford }Strictly speaking, there is something Fili-like in the way Hayley follows orders, though she is perhaps an extreme case. \textsubscript{08/15/14 5:30am}}\footnote{$\rightarrow$\textbf{Suko T }''perhaps'' an extreme case?? :D \textsubscript{08/15/14 11:23am}} about them.   \jonahBrain{They're a distraction}  Jonah thinks at Jaya.
+Jaya and Vogel head down the street.  Jaya glories in feeling like part of an elite fighting squad.  One that she will soon be leading, of course. {[}\textit{Challenge 2: Notice.  Vigilant 3 (Jonah, through Jaya) $\rightarrow$ Overcome! }\textit{\textbf{2 VP (Jaya and Jonah)}}{]}.  Jaya and Jonah can see that the people standing in the streets are all Filis.  They are scared and it is taking a clear act of willpower to stay in place.  There's something \hl{Hayley-like}\footnote{\textbf{Nathaniel Ford }Strictly speaking, there is something Fili-like in the way Hayley follows orders, though she is perhaps an extreme case. \textsubscript{08/15/14 5:30am}}\footnote{$\rightarrow$\textbf{Suko T }''perhaps'' an extreme case?? :D \textsubscript{08/15/14 11:23am}} about them.   \jonahBrain{They're a distraction}  Jonah thinks at Jaya.
 
 
 
@@ -218,11 +218,11 @@ Not realizing they are about to bust onto the second floor right now, Hayley sta
 
 
 
-Jaya reaches the second floor.  She punches the door down and charges through.  There are two guys in the room, one of them has a device in his hands.  The other one is covering the door and opens fire.  {[}\textit{Challenge 2:  Avoid being shot.  Left Arm 3 (Jaya)→ Overcome! }\textit{\textbf{2 VP (Jaya)}}{]}.  Anime-style, Jaya uses her mechanical arm to deflect the bullets and rolls into open door of bathroom in the room.  Jaya hears the sound of a \hl{single very loud gunshot}\footnote{\textbf{Suko T }Ah yes, Vogel's superior sidearm. \textsubscript{08/15/14 11:29am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Jaya would recognize the sound as being a gauss pistol, since she's used one of those before. \textsubscript{08/18/14 9:03pm}} and a body hitting the floor.
+Jaya reaches the second floor.  She punches the door down and charges through.  There are two guys in the room, one of them has a device in his hands.  The other one is covering the door and opens fire.  {[}\textit{Challenge 2:  Avoid being shot.  Left Arm 3 (Jaya)$\rightarrow$ Overcome! }\textit{\textbf{2 VP (Jaya)}}{]}.  Anime-style, Jaya uses her mechanical arm to deflect the bullets and rolls into open door of bathroom in the room.  Jaya hears the sound of a \hl{single very loud gunshot}\footnote{\textbf{Suko T }Ah yes, Vogel's superior sidearm. \textsubscript{08/15/14 11:29am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Jaya would recognize the sound as being a gauss pistol, since she's used one of those before. \textsubscript{08/18/14 9:03pm}} and a body hitting the floor.
 
 
 
-{[}\textit{Challenge 3: Kill guy through the wall.  Sidearm 3 (Jaya) + Small Unit Tactics 3 (Jonah)  → Overcome! }\textit{\textbf{3 VP (Jaya and Jonah)}}{]}.  Remembering where the other guy was and getting a bit of targeting assist from Jonah, Jaya shoots through the bathroom wall and unerringly hits the guy holding the device.  She hears a slumping sound.
+{[}\textit{Challenge 3: Kill guy through the wall.  Sidearm 3 (Jaya) + Small Unit Tactics 3 (Jonah)  $\rightarrow$ Overcome! }\textit{\textbf{3 VP (Jaya and Jonah)}}{]}.  Remembering where the other guy was and getting a bit of targeting assist from Jonah, Jaya shoots through the bathroom wall and unerringly hits the guy holding the device.  She hears a slumping sound.
 
 
 
@@ -268,7 +268,7 @@ Something about this situation bothers Hayley but she can't think of what (nomin
 
 
 
-At Jaya's prompting, Jonah tries to radio Jari but Jari does not respond.  It has been about two hours since Jari left.  Jonah treats Jaya's arm. {[}\textit{Flaw 2: Injured right arm (Jaya)}\textit{ + Surgical Kit 2 (Jonah) → }\textit{ {\color[RGB]{255,0,0}Flaw 1: Injured right arm (Jaya)} }{]}
+At Jaya's prompting, Jonah tries to radio Jari but Jari does not respond.  It has been about two hours since Jari left.  Jonah treats Jaya's arm. {[}\textit{Flaw 2: Injured right arm (Jaya)}\textit{ + Surgical Kit 2 (Jonah) $\rightarrow$ }\textit{ {\color[RGB]{255,0,0}Flaw 1: Injured right arm (Jaya)} }{]}
 
 
 
@@ -366,7 +366,7 @@ Drake shrugs and shows his badge and the other two officers with us show theirs.
 
 
 
-{[}\textit{Challenge 1: Convince Drake to intervene.  Unashamed 1 (Hayley) → Matched}{]}.  Hayley is getting increasingly anxious at the delay.  She gives Drake a wide-eyed ``helpless girl'' look and asks him prettily, ``This delay is leaving us exposed for too long.  Is there \textit{anything} you could do to help expedite this situation, Sir?''
+{[}\textit{Challenge 1: Convince Drake to intervene.  Unashamed 1 (Hayley) $\rightarrow$ Matched}{]}.  Hayley is getting increasingly anxious at the delay.  She gives Drake a wide-eyed ``helpless girl'' look and asks him prettily, ``This delay is leaving us exposed for too long.  Is there \textit{anything} you could do to help expedite this situation, Sir?''
 
 
 
@@ -459,7 +459,7 @@ We arrive at the station.  Hayley waits until Jonah and Jaya enter the station, 
 
 Jonah looks around the station and then asks Hayley, ``Hayley, do you see anything out of place?''
 
-{[}\textit{Challenge 2: Notice.  Ladies' Maid 2 (Hayley) → Matched}{]}.  Hayley looks around the room, her eyes pausing on the Filis who are moving in an odd pattern.  ``Yes, there are Filis here, they may be watching us.''
+{[}\textit{Challenge 2: Notice.  Ladies' Maid 2 (Hayley) $\rightarrow$ Matched}{]}.  Hayley looks around the room, her eyes pausing on the Filis who are moving in an odd pattern.  ``Yes, there are Filis here, they may be watching us.''
 
 ``Was there anyone watching us outside?'' asks Jaya.
 
@@ -550,25 +550,25 @@ Jonah gets back onboard and the train pulls out of Terminus Station.
 
 \begin{itemize}
 \item Pool: 20
-\item Challenge 2: Not be injured.  Flaw 2: Injured right arm (Jaya) → Matched
+\item Challenge 2: Not be injured.  Flaw 2: Injured right arm (Jaya) $\rightarrow$ Matched
 \item Refresh: Left Arm 3 (Jaya)
-\item Challenge 2: Notice.  Binoculars 2 (Jaya) → Matched
-\item Challenge 3: Bandage Mohinder Lorentz.  Surgical Kit 2 (Jonah) + Street Medic 2 (Jonah) → Matched
+\item Challenge 2: Notice.  Binoculars 2 (Jaya) $\rightarrow$ Matched
+\item Challenge 3: Bandage Mohinder Lorentz.  Surgical Kit 2 (Jonah) + Street Medic 2 (Jonah) $\rightarrow$ Matched
 \item Refresh: Adrenaline Junkie 2 (Jaya)
-\item Challenge 2: Shoot guy aiming at Jaya. Rifle 2 (Hayley) → Matched
-\item Challenge 1: Jump down to second floor.  Adrenaline Junkie 2 (Jaya)  → Overcome! \textbf{1 VP (Jaya)}
-\item Challenge 4: Shoot guy with grenade launcher before he can fire on us.  Saltaremachy 3 (Hayley) + Bodyguard 2 (Hayley) + Memory for Details 1 (Hayley) + Small Unit Tactics 1 (Hayley) → Matched
+\item Challenge 2: Shoot guy aiming at Jaya. Rifle 2 (Hayley) $\rightarrow$ Matched
+\item Challenge 1: Jump down to second floor.  Adrenaline Junkie 2 (Jaya)  $\rightarrow$ Overcome! \textbf{1 VP (Jaya)}
+\item Challenge 4: Shoot guy with grenade launcher before he can fire on us.  Saltaremachy 3 (Hayley) + Bodyguard 2 (Hayley) + Memory for Details 1 (Hayley) + Small Unit Tactics 1 (Hayley) $\rightarrow$ Matched
 \item Challenge 1: Notice. Sent back to pool.
 \item Refresh: Combat Armor 3 (Jonah)
 \item Refresh: Truncheon 2 (Jaya)
-\item Challenge 2: Notice.  Vigilant 3 (Jonah, through Jaya) → Overcome! \textbf{2 VP (Jaya 1 and Jonah 1)}
+\item Challenge 2: Notice.  Vigilant 3 (Jonah, through Jaya) $\rightarrow$ Overcome! \textbf{2 VP (Jaya 1 and Jonah 1)}
 \item Challenge 1: Notice.  Sent back to pool.
 \item Refresh Rifle 2 (Hayley)
-\item Challenge 2:  Avoid being shot.  Left Arm 3 (Jaya) → Overcome! \textbf{2 VP (Jaya)}
-\item Challenge 3: Kill guy through the wall.  Sidearm 3 (Jaya) + Small Unit Tactics 3 (Jonah)  → Overcome! \textbf{3 VP (Jaya 2 and Jonah 1)}
-\item Flaw 2: Injured right arm (Jaya) + Surgical Kit 2 (Jonah) →  {\color[RGB]{255,0,0}Flaw 1: Injured right arm (Jaya)} 
-\item Challenge 1: Convince Drake to intervene.  Unashamed 1 (Hayley) → Matched
-\item Challenge 2: Notice.  Ladies' Maid 2 (Hayley) → Matched
+\item Challenge 2:  Avoid being shot.  Left Arm 3 (Jaya) $\rightarrow$ Overcome! \textbf{2 VP (Jaya)}
+\item Challenge 3: Kill guy through the wall.  Sidearm 3 (Jaya) + Small Unit Tactics 3 (Jonah)  $\rightarrow$ Overcome! \textbf{3 VP (Jaya 2 and Jonah 1)}
+\item Flaw 2: Injured right arm (Jaya) + Surgical Kit 2 (Jonah) $\rightarrow$  {\color[RGB]{255,0,0}Flaw 1: Injured right arm (Jaya)} 
+\item Challenge 1: Convince Drake to intervene.  Unashamed 1 (Hayley) $\rightarrow$ Matched
+\item Challenge 2: Notice.  Ladies' Maid 2 (Hayley) $\rightarrow$ Matched
 \item Pool: \hl{2}\footnote{\textbf{Suko T }I missed a refresh somewhere, because otherwise this should just be 1 token left. \textsubscript{08/15/14 2:09am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }There was one token on the table at some point that we decided was still in the pool. It's possible it should have been taken off instead. \textsubscript{08/15/14 5:40am}}
 \end{itemize}
 
