--- a/4T/ch31.tex
+++ b/4T/ch31.tex
@@ -858,3 +858,10 @@ THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
 % Exported @ 08/24/15 4:02pm
 \end{flushright}
 
+
+
+\begin{center}
+~
+\vskip 0em
+\includegraphics[width=12cm]{img/ch31_rook_ink.jpg}
+\end{center}
