--- a/4T/ch32.tex
+++ b/4T/ch32.tex
@@ -951,3 +951,7 @@ Jaya's scene endings are always the Best Television Ever., unable to correctly m
 % Exported @ 08/24/15 4:04pm
 \end{flushright}
 
+\begin{center}
+\includegraphics[width=12cm]{img/ch32_hayley_dress.jpg}
+\includegraphics[width=12cm]{img/ch32_jaya_and_riva.jpg}
+\end{center}
