--- a/4T/ch33.tex
+++ b/4T/ch33.tex
@@ -665,17 +665,17 @@ Hayley finds Jari.  He hands her two bundles and says, ``These are for you, sorr
 
 \textit{Req Cage updates:}
 
-Req Cage 3 → 4
+Req Cage 3 $\rightarrow$ 4
 
-Radio Network 2 →  3
+Radio Network 2 $\rightarrow$  3
 
-Armory 4 →  5
+Armory 4 $\rightarrow$  5
 
-Workshop 5 →  6
+Workshop 5 $\rightarrow$  6
 
-Closet 2 →  3
+Closet 2 $\rightarrow$  3
 
-Forensics 1 →  3
+Forensics 1 $\rightarrow$  3
 
 
 
@@ -1036,7 +1036,7 @@ Jonah instructs Lackovich's team to protect Douglas and Jayce while we walk up t
 
 
 
-{[}\textit{Challenge 1: Notice to Scan for Life.  Ladies' Maid 2 (Hayley) → Overcome! }\textit{\textbf{1 VP (Hayley)}}{]}  Hayley looks at the guy and thinks that he's not dead, or if he died, it is very recent.  The spike does not appear to be piercing his heart.  The guy is naked.
+{[}\textit{Challenge 1: Notice to Scan for Life.  Ladies' Maid 2 (Hayley) $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Hayley)}}{]}  Hayley looks at the guy and thinks that he's not dead, or if he died, it is very recent.  The spike does not appear to be piercing his heart.  The guy is naked.
 
 Jaya calls out to the guy, ``Hey!  What the fuck happened here?''
 
@@ -1056,7 +1056,7 @@ The guy's eyes are closed one moment and then, creepily, open the next moment. H
 
 ``Give him some fucking water, Hayley,'' says Jaya.
 
-Jonah is trying to figure out how this guy is still alive.  {[}\textit{Challenge 2:  How is he still alive?  Forensics 2 (Jonah) → Matched }{]}. There is a white silvery discoloration, like a mold on the stumps of his hands and around the stake.  He's extremely emaciated and appears to be starving.  One eye is occluded with white shit.  He should be dead already.  His skin is a little darker than ours, and his forehead is a little flatter than ours.
+Jonah is trying to figure out how this guy is still alive.  {[}\textit{Challenge 2:  How is he still alive?  Forensics 2 (Jonah) $\rightarrow$ Matched }{]}. There is a white silvery discoloration, like a mold on the stumps of his hands and around the stake.  He's extremely emaciated and appears to be starving.  One eye is occluded with white shit.  He should be dead already.  His skin is a little darker than ours, and his forehead is a little flatter than ours.
 
 ``The Harbinger comes in this world-moment,'' says the guy.
 
@@ -1076,7 +1076,7 @@ Hayley is examining the metal spike and trying to calculate what angle or force 
 
 
 
-{[}\textit{Challenge 1: Notice.  Sixth Sense 1 (Jaya) → Matched }{]}.  Jaya notices that there's someone coming through the woods.  Jaya yells, ``\hl{En garde!}\footnote{\textbf{Rebecca S. }we desperately need a better phrase for this \textsubscript{10/01/14 9:12am}}\footnote{$\rightarrow$\textbf{Suko T }Can we just say ``Heads up?''  Or ``Incoming?'' \textsubscript{10/01/14 11:16am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }I'll throw out ``Echo up!'' or ``E-up!'' as totally made up terminology to mean ``Eye's up!'' or ``Head's up!''. \textsubscript{10/01/14 9:51pm}}`` and spins and points her gun at the the approaching person.
+{[}\textit{Challenge 1: Notice.  Sixth Sense 1 (Jaya) $\rightarrow$ Matched }{]}.  Jaya notices that there's someone coming through the woods.  Jaya yells, ``\hl{En garde!}\footnote{\textbf{Rebecca S. }we desperately need a better phrase for this \textsubscript{10/01/14 9:12am}}\footnote{$\rightarrow$\textbf{Suko T }Can we just say ``Heads up?''  Or ``Incoming?'' \textsubscript{10/01/14 11:16am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }I'll throw out ``Echo up!'' or ``E-up!'' as totally made up terminology to mean ``Eye's up!'' or ``Head's up!''. \textsubscript{10/01/14 9:51pm}}`` and spins and points her gun at the the approaching person.
 
 Out of the trees comes a guy with dark skin like the guy who is pinned to the rock.  He's naked except for a loincloth and is moving with a very odd cadence.  He has an strange bowl in his hands (made from a gourd but none of us know what that is).
 
@@ -1190,7 +1190,7 @@ Jaya turns to Hayley, ``You're going to go over, establish the rope, then we sen
 
 ``Yes sir,'' says Hayley.  Jaya gives her a good luck slug to the shoulder.  Hayley, \hl{used to this by now}\footnote{\textbf{Rebecca S. }only took 30 or so sessions... \textsubscript{10/01/14 9:17am}}\footnote{$\rightarrow$\textbf{Suko T }Hayley is a slow learner. \textsubscript{10/01/14 11:17am}}, smiles and nods at her.
 
-Hayley sets foot on the bridge and realizes immediately how incredibly fragile and about to disintegrate the bridge is.  {[}\textit{Challenge 2: Cross the Terrifyingly Precarious Bridge.  Athletics 3 (Hayley) → Overcome! }\textit{\textbf{2 VP (Hayley)}}{]}  Hayley takes a deep breath and then sprints easily and unhesitatingly across the bridge, not pausing as slats crack and fall away under her feet as she goes.  The guy is covering his eyes and moaning and yelping as Hayley crosses the bridge.
+Hayley sets foot on the bridge and realizes immediately how incredibly fragile and about to disintegrate the bridge is.  {[}\textit{Challenge 2: Cross the Terrifyingly Precarious Bridge.  Athletics 3 (Hayley) $\rightarrow$ Overcome! }\textit{\textbf{2 VP (Hayley)}}{]}  Hayley takes a deep breath and then sprints easily and unhesitatingly across the bridge, not pausing as slats crack and fall away under her feet as she goes.  The guy is covering his eyes and moaning and yelping as Hayley crosses the bridge.
 
 As Hayley reaches the halfway point, the guy tugs at Jaya's metal hand and says in an anguished sounding voice- ``No!  No!  Waking...''
 
@@ -1212,10 +1212,10 @@ When Hayley reaches the far side of the bridge, the guy screams and in the dista
 \item Pool: 3 + 3 (3rd PC-initiated Scene)
 \item Pool: 6 + 4 (4th PC-initiated Scene)
 \item Pool: 10 + 10 (The Omen)
-\item Challenge 1: Notice to Scan for Life.  Ladies' Maid 2 (Hayley) → Overcome! \textbf{1 VP (Hayley)}
-\item Challenge 2:  How is he still alive?  Forensics 2 (Jonah)→ Matched
-\item Challenge 1: Notice.  Sixth Sense 1 (Jaya) → Matched 
-\item Challenge 2: Cross the Terrifyingly Precarious Bridge.  Athletics 3 (Hayley) → Overcome! \textbf{2 VP (Hayley)}
+\item Challenge 1: Notice to Scan for Life.  Ladies' Maid 2 (Hayley) $\rightarrow$ Overcome! \textbf{1 VP (Hayley)}
+\item Challenge 2:  How is he still alive?  Forensics 2 (Jonah)$\rightarrow$ Matched
+\item Challenge 1: Notice.  Sixth Sense 1 (Jaya) $\rightarrow$ Matched 
+\item Challenge 2: Cross the Terrifyingly Precarious Bridge.  Athletics 3 (Hayley) $\rightarrow$ Overcome! \textbf{2 VP (Hayley)}
 \item Pool: 14
 \end{itemize}
 
