--- a/4T/ch34.tex
+++ b/4T/ch34.tex
@@ -117,7 +117,7 @@ Hayley had kneeled down, head bowed and breathing hard, to recover from the terr
 
 
 
-{[}\textit{Challenge 1: Notice.  Secret Truth 1 (Jaya) → Matched }{]}.  Jaya looks down at the river and sees it start to glow and swirl and rise up.  She starts feeling a dull headache.  Jaya yells at people to get moving and then calls Jayce over and asks him in a whisper if he sees anything going on with the river.  He looks upriver and looks surprised.  There is a thick mist pouring down river and overflowing the banks. 
+{[}\textit{Challenge 1: Notice.  Secret Truth 1 (Jaya) $\rightarrow$ Matched }{]}.  Jaya looks down at the river and sees it start to glow and swirl and rise up.  She starts feeling a dull headache.  Jaya yells at people to get moving and then calls Jayce over and asks him in a whisper if he sees anything going on with the river.  He looks upriver and looks surprised.  There is a thick mist pouring down river and overflowing the banks. 
 
 ``We're fucking moving!'' yells Jaya.  Jaya sends Jonah over the bridge, followed by Jayce and Douglas.   Hayley watches the people cross carefully, holding onto the rope on her end in case they break and she has to hold onto them.
 
@@ -162,7 +162,7 @@ Almost everyone has crossed at this point.  Just Rust and two others are still o
 
 The road goes up the mountain, wide enough to march two across comfortably. 
 
-{[}\textit{Challenge 1: Notice (individual challenges).  Thrown back (Jaya).  Thrown back (Hayley).  Forensics 2 (Jonah) → Overcome! }\textit{\textbf{2 VP (Jonah)}}{]}.  Jonah notices that Hayley, who is usually quite crisp, is limping more noticeably than usual.  She is swaying and staggering a bit, almost like she is drunk.  Jonah starts noticing that everyone is moving or behaving a little oddly.  Jayce's nose is bleeding.
+{[}\textit{Challenge 1: Notice (individual challenges).  Thrown back (Jaya).  Thrown back (Hayley).  Forensics 2 (Jonah) $\rightarrow$ Overcome! }\textit{\textbf{2 VP (Jonah)}}{]}.  Jonah notices that Hayley, who is usually quite crisp, is limping more noticeably than usual.  She is swaying and staggering a bit, almost like she is drunk.  Jonah starts noticing that everyone is moving or behaving a little oddly.  Jayce's nose is bleeding.
 
 ``Are you okay?'' Jonah asks Jayce.
 
@@ -180,7 +180,7 @@ Jaya looks at Jayce and accuses him of being on drugs.  They squabble a bit.  Jo
 
 ``Don't ask,'' says Jaya flatly.
 
-The mist is definitely creeping up the mountain.  {[}\textit{Challenge 2: Get Up the Hill Faster.  Air of Command 2 (Jaya) → Matched }{]}. Jaya drives her two squads up the hill doubletime.  This is really hard on most of us.  Douglas is doing mostly okay.  The skinny guy is having a hard time keeping up and Breccan is not doing a very good job forcemarching him.  Drake's group are falling behind as they are not doubletiming it.
+The mist is definitely creeping up the mountain.  {[}\textit{Challenge 2: Get Up the Hill Faster.  Air of Command 2 (Jaya) $\rightarrow$ Matched }{]}. Jaya drives her two squads up the hill doubletime.  This is really hard on most of us.  Douglas is doing mostly okay.  The skinny guy is having a hard time keeping up and Breccan is not doing a very good job forcemarching him.  Drake's group are falling behind as they are not doubletiming it.
 
 
 
@@ -352,7 +352,7 @@ Jonah goes to talk to the guy, ``What happens when that comes?'' pointing to the
 
 ``What happens when Supay comes?'' asks Jonah.
 
-{[}\textit{Challenge 3: Get useful info out of guy.  Social Chameleon 4 (Jonah) → Overcome! }\textit{\textbf{3 VP (Jonah)}}{]}.  Jonah offers him some food.
+{[}\textit{Challenge 3: Get useful info out of guy.  Social Chameleon 4 (Jonah) $\rightarrow$ Overcome! }\textit{\textbf{3 VP (Jonah)}}{]}.  Jonah offers him some food.
 
 ``Yes!  Offering.  Yes.  Yes.  Sacrifice of Offering.  HA! \hl{Offering of sacrifice,}\footnote{\textbf{Rebecca S. }wait, wait, what?? While Jaya and Hayley were playing the vomit game apparently useful info was pouring forth.  Why didn't Jonah mention we needed to offer a sacrifice? Jaya would have cut Guy's throat on the spot! 
 Squandered opportunities... \textsubscript{10/10/14 7:21pm}}\footnote{$\rightarrow$\textbf{Suko T }Yup, I wonder if Jonah will tell us any of this because Ion seemed to treat it like Jonah felt it was senseless babbling.  Totally good info here tho.  ``Supay all around'' also very useful to know.
@@ -399,7 +399,7 @@ Drake says to Jaya, looking up the mountain and at the mist, ``We are not going 
 
 
 
-{[}\textit{Challenge 5: Get Most of the Team up the Mountain Ahead of the Mist.  Bad Cop 3 (Jaya) + Left Hand 3 (Jaya) + Stash 2 (Jaya) + Grim Visage 2 (Jaya) + Small Unit Tactics 3 (Jonah) → Matched}{]}.  \hl{Through a combination of yelling, intimidation, screaming, careful dispensation of drugs (mostly to Breccan and Morley), and just physically dragging people, Jaya hauls most of the team up the mountain}\footnote{\textbf{Suko T }Drake's gotta give Jaya at least little credit for this one, this is pretty damn impressive. \textsubscript{10/10/14 11:55am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Oh, credit is given. Maybe not by Drake \_per se\_, but it was an impressive performance. \textsubscript{10/10/14 1:19pm}}, assisted by Jonah's more orderly tactics of getting people to help each other.  Even some of Rust's people are a little intimidated by Jaya FaceTM.
+{[}\textit{Challenge 5: Get Most of the Team up the Mountain Ahead of the Mist.  Bad Cop 3 (Jaya) + Left Hand 3 (Jaya) + Stash 2 (Jaya) + Grim Visage 2 (Jaya) + Small Unit Tactics 3 (Jonah) $\rightarrow$ Matched}{]}.  \hl{Through a combination of yelling, intimidation, screaming, careful dispensation of drugs (mostly to Breccan and Morley), and just physically dragging people, Jaya hauls most of the team up the mountain}\footnote{\textbf{Suko T }Drake's gotta give Jaya at least little credit for this one, this is pretty damn impressive. \textsubscript{10/10/14 11:55am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Oh, credit is given. Maybe not by Drake \_per se\_, but it was an impressive performance. \textsubscript{10/10/14 1:19pm}}, assisted by Jonah's more orderly tactics of getting people to help each other.  Even some of Rust's people are a little intimidated by Jaya FaceTM.
 
 
 
@@ -425,7 +425,7 @@ That gets through and Hayley comes to an abrupt, swaying halt, and weakly tries 
 
 
 
-{[}\textit{Challenge 1: Maintain Mental Stability.  Unashamed 1 (Hayley) → Matched}{]}.  Hayley turns to look back at Drake but is distracted by the phenomenal view of this gorgeous valley that stretches out below her.  The mist seeping through the trees is creepy but also atmospheric and beautiful.  There are rainbows shimmering in the mist and the mountains... the lush trees....  Hayley is overcome by the unprecedented level of natural beauty before her and takes off her helmet and starts sobbing, unashamedly.
+{[}\textit{Challenge 1: Maintain Mental Stability.  Unashamed 1 (Hayley) $\rightarrow$ Matched}{]}.  Hayley turns to look back at Drake but is distracted by the phenomenal view of this gorgeous valley that stretches out below her.  The mist seeping through the trees is creepy but also atmospheric and beautiful.  There are rainbows shimmering in the mist and the mountains... the lush trees....  Hayley is overcome by the unprecedented level of natural beauty before her and takes off her helmet and starts sobbing, unashamedly.
 
 In stark contrast to the valley, Hayley can see the trail below her is littered with bodies, gasping for air and barely moving, some of them reduced to crawling.  Drake is standing in one place looking he's using every last bit of willpower just to stay upright.  Jonah is staggering up the hill looking super drunk.  Hayley doesn't see Jaya or Jayce.  Once she sees that Jonah is alive, Hayley mostly ignores the people and looks out again over the valley, soaking in the view and letting the tears fall. 
 
@@ -656,7 +656,7 @@ Jonah says over the radio to the team.  ``Apparently Tesco was originally for sc
 
 ``That's why we have guns!'' says Jaya.  ``Get your ass over here.''
 
-Hayley is investigating the arch and tunnel.  {[}\textit{Challenge 1: Notice.  Bodyguard 2 (Hayley) → Overcome! }\textit{\textbf{1 VP (Hayley)}}{]}.   Hayley notices bloodstains.  They are old and difficult to decipher what caused them.  Looking in the vegetation nearby she sees a few bones.  She sees a few bits of black glass.  No scorchmarks.
+Hayley is investigating the arch and tunnel.  {[}\textit{Challenge 1: Notice.  Bodyguard 2 (Hayley) $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Hayley)}}{]}.   Hayley notices bloodstains.  They are old and difficult to decipher what caused them.  Looking in the vegetation nearby she sees a few bones.  She sees a few bits of black glass.  No scorchmarks.
 
 \hl{Jonah heads over and tries to look around but doesn't actually look at anything.}\footnote{\textbf{Nathaniel Ford }For the record, I think I technically mishandled this: I should have given you some piece of misinformation or misconclusion, or something else adverse happening. (I'm not going to retcon it, though, just a slipup on my part.) \textsubscript{10/10/14 2:15pm}}\footnote{$\rightarrow$\textbf{Suko T }I think Ion said that the refresh was more that Jonah doesn't actually use his Forensics in any useful way despite the bloodstains, bones, etc.  So less a misconclusion than a deliberate miss of an opportunity for more information. \textsubscript{10/10/14 2:25pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Right, but simply not doing anything would have yielded that same result. Narratively, skill refreshes should put you in a more awkward situation. \textsubscript{10/10/14 2:58pm}}\footnote{$\rightarrow$\textbf{Suko T }Ah, right, that makes sense. Well you'll just have to be extra mean to Jonah on his next Refresh :D \textsubscript{10/10/14 4:14pm}} {[}\textit{Refresh Forensics 2 (Jonah)}{]}
 
@@ -692,7 +692,7 @@ And to the left, starting slowly at first but then growing to a veritable mound,
 
 Jaya pulls out her binoculars and looks at the people on the hill.  They are wearing loose fitting tunics, pants and sandals.  Their hair is dark and their faces are dark.  They show up on on the heat sensors.  Jaya looks through the thermal scanner at the pile of bones.  It is as cold as death.
 
-Hayley scans the buildings.  It is a veritable city and there are terraces among the buildings.  {[}\textit{Challenge 1: Notice.  Binoculars 2 (Hayley) → Overcome! }\textit{\textbf{1 VP (Hayley)}}{]}  Hayley spots a couple of people on one of the terraces, they seem to be doing something, futzing with something and moving around.  There are some terraces that go up to the edge of the mountain and on top of that there are some structures.  Beyond that is rocky grass.
+Hayley scans the buildings.  It is a veritable city and there are terraces among the buildings.  {[}\textit{Challenge 1: Notice.  Binoculars 2 (Hayley) $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Hayley)}}{]}  Hayley spots a couple of people on one of the terraces, they seem to be doing something, futzing with something and moving around.  There are some terraces that go up to the edge of the mountain and on top of that there are some structures.  Beyond that is rocky grass.
 
 Jaya whispers to Hayley, ``How many do you see?''
 
@@ -837,7 +837,7 @@ We start heading toward the city.  There is a long low wall with a door in it.  
 
 She and Lackovich coordinate and Jaya gets through the tunnel.  Jaya goes to the nearest building and peeks inside.
 
-{[}\textit{Challenge 2: Don't Flip the Fuck Out.  Gauss Pistol 2 (Jaya) → Matched}{]}.   Her gauss pistol is comforting as Jaya confronts some weird shit.  Jaya looks through the window and feels her reflexes take over.  Almost without thought, Jaya finds herself with her gun pointed at a woman, the trigger almost fully depressed, just an iota away from launching a bullet through the woman's brain.  But Jaya manages to ease her finger off the trigger and takes stock of what is going on in the building.  The woman is middle-aged with white hair pulled back into a bun.  She is casting a shuttlecock back and forth on a loom.  \hl{Her eyes are entirely glazed over with white}\footnote{\textbf{Nathaniel Ford }http://content9.flixster.com/question/51/99/14/5199147\_std.jpg \textsubscript{10/10/14 2:35pm}}\footnote{$\rightarrow$\textbf{Suko T }If we get infected by the white stuff, do we get wings 'cause we're girls? \textsubscript{10/10/14 4:17pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }There is only one person... er... entity... in the game thus far remotely both interested and capable of getting wings. \textsubscript{10/10/14 5:22pm}}\footnote{$\rightarrow$\textbf{Suko T }Augh!  \textsubscript{10/10/14 5:40pm}} and she is staring right at Jaya (not at her work).  She doesn't appear to be alarmed and her fingers are moving of their own accord.
+{[}\textit{Challenge 2: Don't Flip the Fuck Out.  Gauss Pistol 2 (Jaya) $\rightarrow$ Matched}{]}.   Her gauss pistol is comforting as Jaya confronts some weird shit.  Jaya looks through the window and feels her reflexes take over.  Almost without thought, Jaya finds herself with her gun pointed at a woman, the trigger almost fully depressed, just an iota away from launching a bullet through the woman's brain.  But Jaya manages to ease her finger off the trigger and takes stock of what is going on in the building.  The woman is middle-aged with white hair pulled back into a bun.  She is casting a shuttlecock back and forth on a loom.  \hl{Her eyes are entirely glazed over with white}\footnote{\textbf{Nathaniel Ford }http://content9.flixster.com/question/51/99/14/5199147\_std.jpg \textsubscript{10/10/14 2:35pm}}\footnote{$\rightarrow$\textbf{Suko T }If we get infected by the white stuff, do we get wings 'cause we're girls? \textsubscript{10/10/14 4:17pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }There is only one person... er... entity... in the game thus far remotely both interested and capable of getting wings. \textsubscript{10/10/14 5:22pm}}\footnote{$\rightarrow$\textbf{Suko T }Augh!  \textsubscript{10/10/14 5:40pm}} and she is staring right at Jaya (not at her work).  She doesn't appear to be alarmed and her fingers are moving of their own accord.
 
 
 
@@ -879,7 +879,7 @@ Javier is twitching, ``Make her stop!  Make her stop!'' His voice gets louder an
 
 Jaya snatches the ball away from the girl.
 
-{[}\textit{Challenge 2: Get Javier Under Control.  Trigger Reflex 2 (Jonah) → Matched}{]}. Before Javier can fire his gun, Jonah grabs it, switches the safety back on and pushes it down. 
+{[}\textit{Challenge 2: Get Javier Under Control.  Trigger Reflex 2 (Jonah) $\rightarrow$ Matched}{]}. Before Javier can fire his gun, Jonah grabs it, switches the safety back on and pushes it down. 
 
 The girl looks at Jaya and her eyes get sadder and sadder.  ``Javier, I'm going to give her back the ball.  I need you not to flip out, okay?'' says Jaya.
 
@@ -926,19 +926,19 @@ And somewhere in the streets, there comes the strangled gurgling cry of someone 
 
 \begin{itemize}
 \item Pool: 14
-\item Challenge 1: Notice.  Secret Truth 1 (Jaya) → Matched
-\item Challenge 1: Notice (individual challenges).  Thrown back (Jaya).  Thrown back (Hayley).  Forensics 2 (Jonah) → Overcome! \textbf{1 VP (Jonah)}
-\item Challenge 2: Get Up the Hill Faster.  Air of Command 2 (Jaya) → Matched 
-\item Challenge 3: Get useful info out of guy.  Social Chameleon 4 (Jonah) → Overcome! \textbf{3 VP (Jonah)}
-\item Challenge 5: Get (Most) of the Team up the Mountain Ahead of the Mist.  Bad Cop 3 (Jaya) + Left Hand 3 (Jaya) + Stash 2 (Jaya) + Grim Visage 2 (Jaya) + Small Unit Tactics 3 (Jonah) → Matched
-\item Challenge 1: Maintain Mental Stability.  Unashamed 1 (Hayley) → Matched
-\item Challenge 1: Notice.  Bodyguard 2 (Hayley) → Overcome! \textbf{1 VP (Hayley)}
+\item Challenge 1: Notice.  Secret Truth 1 (Jaya) $\rightarrow$ Matched
+\item Challenge 1: Notice (individual challenges).  Thrown back (Jaya).  Thrown back (Hayley).  Forensics 2 (Jonah) $\rightarrow$ Overcome! \textbf{1 VP (Jonah)}
+\item Challenge 2: Get Up the Hill Faster.  Air of Command 2 (Jaya) $\rightarrow$ Matched 
+\item Challenge 3: Get useful info out of guy.  Social Chameleon 4 (Jonah) $\rightarrow$ Overcome! \textbf{3 VP (Jonah)}
+\item Challenge 5: Get (Most) of the Team up the Mountain Ahead of the Mist.  Bad Cop 3 (Jaya) + Left Hand 3 (Jaya) + Stash 2 (Jaya) + Grim Visage 2 (Jaya) + Small Unit Tactics 3 (Jonah) $\rightarrow$ Matched
+\item Challenge 1: Maintain Mental Stability.  Unashamed 1 (Hayley) $\rightarrow$ Matched
+\item Challenge 1: Notice.  Bodyguard 2 (Hayley) $\rightarrow$ Overcome! \textbf{1 VP (Hayley)}
 \item Refresh Forensics 2 (Jonah)
 \item Pool: 1 + 10 (The Children of the Corn)
-\item Challenge 1: Notice.  Binoculars 2 (Hayley) → Overcome! \textbf{1 VP (Hayley)}
-\item Challenge 2: Don't Flip the Fuck Out.  Gauss Pistol 2 (Jaya) → Matched
+\item Challenge 1: Notice.  Binoculars 2 (Hayley) $\rightarrow$ Overcome! \textbf{1 VP (Hayley)}
+\item Challenge 2: Don't Flip the Fuck Out.  Gauss Pistol 2 (Jaya) $\rightarrow$ Matched
 \item Challenge 1: Notice (sound).  Thrown back
-\item Challenge 2: Get Javier Under Control.  Trigger Reflex 2 (Jonah) → Matched
+\item Challenge 2: Get Javier Under Control.  Trigger Reflex 2 (Jonah) $\rightarrow$ Matched
 \item Pool: 6
 \end{itemize}
 
