--- a/4T/ch35.tex
+++ b/4T/ch35.tex
@@ -61,7 +61,7 @@ Javier stutters out, ``Lost.  Carruthers.'' and he grimaces.  His eyes are super
 
 ``Focus,'' says Jonah sternly.
 
-{[}\textit{Challenge 1: Notice.  Agent 1 (Jaya) → Matched}{]}
+{[}\textit{Challenge 1: Notice.  Agent 1 (Jaya) $\rightarrow$ Matched}{]}
 
 Jaya feels some weird Jonah-paranoia in the back of her mind, and for some reason it makes her look up.  She sees that the stars in the sky overhead are disappearing.  \hl{The sky looks like it is being painted black as a churning darkness draws like a curtain across the sky.} \footnote{\textbf{Suko T }The Nothing is coming. \textsubscript{10/23/14 4:43pm}}\footnote{$\rightarrow$\textbf{Rebecca S. }+1 \textsubscript{11/02/14 1:26am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 many times. \textsubscript{11/02/14 1:59am}}
 
@@ -101,7 +101,7 @@ Hayley can see flashes of gunfire down the street she's covering.  Hayley \hl{re
 
 Jaya notices that the roof of the building is very smooth and flat black glass.  As she hoists herself onto the roof, she sees a drop of something wet splatter next to her.  Her first instinct is that it's a huge drop of blood, but it's rain. She looks around and sees a maze of streets stretching out around her. She sees flashes of light and the distant pops of gunfire in between some buildings, some distance away.
 
-{[}\textit{Challenge 2: Keep Her Balance.  Adrenaline Junkie 2 (Jaya) → Matched}{]}  In the other direction she sees a terrifying plunge into nothingness just one building away from her.  Jaya staggers and almost falls at the sight.  The houses in this section abut a very steep, very tall cliff.  There are a few terraces and then nothing but clouds below.  But Jaya's hopped up on adrenaline, ready to take on anything crazy- portals, Octavius, whatevs- so this doesn't faze her for long.
+{[}\textit{Challenge 2: Keep Her Balance.  Adrenaline Junkie 2 (Jaya) $\rightarrow$ Matched}{]}  In the other direction she sees a terrifying plunge into nothingness just one building away from her.  Jaya staggers and almost falls at the sight.  The houses in this section abut a very steep, very tall cliff.  There are a few terraces and then nothing but clouds below.  But Jaya's hopped up on adrenaline, ready to take on anything crazy- portals, Octavius, whatevs- so this doesn't faze her for long.
 
 
 
@@ -129,7 +129,7 @@ Jaya leans over the edge of the roof and yells, ``Are you questioning my fucking
 
 Breccan climbs onto the roof.
 
-{[}\textit{Challenge 1: Notice.  Street Medic 2 (Jonah) → Overcome! }\textit{\textbf{1 VP (Jonah)}}{]}
+{[}\textit{Challenge 1: Notice.  Street Medic 2 (Jonah) $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Jonah)}}{]}
 
 Jonah can tell that Javier is not going to make it up.  Javier is unsteady and not coordinated enough to climb around on rooftops and jump from building to building.  ``Chief, we have a problem.  Javier is offline and he's not going to be able to do this.''
 
@@ -145,11 +145,11 @@ Jaya snaps at Breccan, ``What?  WHAT??''
 
 Jaya doesn't see anything and turns on her flashlight.  On the street below, Lackovich, Jonah and Javier can see Jaya's flashlight sweep across the rooftops.
 
-{[}\textit{Challenge 2: Dodge Shards.  VAC Infantry Light Armor 3 (Jaya) → Overcome! }\textit{\textbf{2 VP (Jaya)}}{]} There's an odd noise, muffled by Jaya's armor's helmet, like the fwip! fwip! sound of a sniper bullet but without the usual pop preceding it.  Something embeds itself in Jaya's armor and she looks down to see a black shard of something sticking out of her armor.  Then one of the shards hits her flashlight and it shatters.  More shards hit her and Jaya can feel the pinprick of one of them as it pierces completely through her armor.  Jaya's helmet indicators start informing her that containment and vacuum have been compromised.  Jaya looks around and sees that Breccan is okay.  Breccan has dropped prone to provide a minimal target to the attacker.
+{[}\textit{Challenge 2: Dodge Shards.  VAC Infantry Light Armor 3 (Jaya) $\rightarrow$ Overcome! }\textit{\textbf{2 VP (Jaya)}}{]} There's an odd noise, muffled by Jaya's armor's helmet, like the fwip! fwip! sound of a sniper bullet but without the usual pop preceding it.  Something embeds itself in Jaya's armor and she looks down to see a black shard of something sticking out of her armor.  Then one of the shards hits her flashlight and it shatters.  More shards hit her and Jaya can feel the pinprick of one of them as it pierces completely through her armor.  Jaya's helmet indicators start informing her that containment and vacuum have been compromised.  Jaya looks around and sees that Breccan is okay.  Breccan has dropped prone to provide a minimal target to the attacker.
 
 
 
-{[}\textit{Challenge 1: Notice.  Small Unit Tactics 1 (Hayley) → Matched}{]}   Rust, Misha, and Arjoon are covering Grabber as he hauls the injured teammate (Das).  One of the soldiers covering Grabber fires at something behind them and in the muzzleflash Hayley sees a dark shape with a reddish face and a strange helmet that seems sort of demonic.  The figure darts across the street and swings something at Grabber and Grabber falls down.
+{[}\textit{Challenge 1: Notice.  Small Unit Tactics 1 (Hayley) $\rightarrow$ Matched}{]}   Rust, Misha, and Arjoon are covering Grabber as he hauls the injured teammate (Das).  One of the soldiers covering Grabber fires at something behind them and in the muzzleflash Hayley sees a dark shape with a reddish face and a strange helmet that seems sort of demonic.  The figure darts across the street and swings something at Grabber and Grabber falls down.
 
 
 
@@ -171,7 +171,7 @@ Rust says over the radio, ``Wasn't my squad!'' and there are negatory responses 
 
 
 
-Jaya ignores Drake as so much background noise and looks around to see if she got anything with the grenade.  The rain is getting increasingly heavy.  {[}\textit{Challenge 1: Notice.  HE Grenade 2 (Jaya) → Overcome! }\textit{\textbf{1 VP (Jaya)}}{]}.  In the flash of the grenade Jaya sees something very strange.  A figure has climbed over the edge of the roof with a red face with deep hollows where eyes would be. \hl{The face seems plastic and mask-like, with a grimace and horns}\footnote{\textbf{Suko T }Like this?
+Jaya ignores Drake as so much background noise and looks around to see if she got anything with the grenade.  The rain is getting increasingly heavy.  {[}\textit{Challenge 1: Notice.  HE Grenade 2 (Jaya) $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Jaya)}}{]}.  In the flash of the grenade Jaya sees something very strange.  A figure has climbed over the edge of the roof with a red face with deep hollows where eyes would be. \hl{The face seems plastic and mask-like, with a grimace and horns}\footnote{\textbf{Suko T }Like this?
 https://www.etsy.com/listing/158402178/hannya-kabuki-mask-airsoft-mask?ref=market \textsubscript{10/27/14 1:53am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }More like this but with black for the eyes:
 http://1.bp.blogspot.com/\_vp3tA9fhYl4/SnrUFYZHxXI/AAAAAAAAADY/pggsh2mfc8A/s320/diablada5.jpg \textsubscript{11/02/14 1:05am}}\footnote{$\rightarrow$\textbf{Rebecca S. }Shit, those are some big ass horns... \textsubscript{11/02/14 1:21am}}\footnote{$\rightarrow$\textbf{Suko T }Sweet! \textsubscript{11/02/14 10:22am}}.  The figure's body seems to disappear and reappear or shift color (from black to white and back again).  It is carrying a long black blade of some sort.  In its other hand it has something that looks like a gun (since that's the closest analog she knows of).  It raises the gun and there's that fwip! fwip! noise again and Jaya's armor starts getting shredded.
 
@@ -187,7 +187,7 @@ Jonah turns to Lackovich and says, ``Please keep an eye on Javier, I'm going to 
 
 
 
-Hayley reaches Grabber who appears to be hamstrung.  Das is lying on the ground, bleeding severely.  He appears to be missing part of an arm and a leg.  In one hand, Das is clutching a grenade.  {[}\textit{Challenge 1: Notice.  HE Grenade 2 (Hayley) → Overcome! }\textit{\textbf{1 VP (Hayley)}}\textit{{]}}.  The pin is out and the only thing keeping it from exploding is Das' grip on it.  Hayley can tell that if the grenade goes off, it will catch pretty much herself and all of Rust's team.
+Hayley reaches Grabber who appears to be hamstrung.  Das is lying on the ground, bleeding severely.  He appears to be missing part of an arm and a leg.  In one hand, Das is clutching a grenade.  {[}\textit{Challenge 1: Notice.  HE Grenade 2 (Hayley) $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Hayley)}}\textit{{]}}.  The pin is out and the only thing keeping it from exploding is Das' grip on it.  Hayley can tell that if the grenade goes off, it will catch pretty much herself and all of Rust's team.
 
 She turns to Arjoon and points to Grabber.  \hl{``Constable Arjoon, get him out of here,'' she orders.}\footnote{\textbf{Suko T }I think this is the first instance (recorded) of Hayley giving an actual order to someone.  She's passed along orders from other people before but this is all her own. \textsubscript{11/03/14 12:07am}}Once Rust, Misha, Arjoon and Grabber have started clearing out of the immediate blast radius, Hayley grabs the haul loop on the back of Das' uniform and starts following them slowly.  As she drags Das, the grenade falls out of Das' hand. 
 
@@ -245,7 +245,7 @@ Jonah opens his eyes and the mirror has gone black and through the mirror Jonah 
 
 
 
-Jaya is going in low- using her mechanical hand to deal with the sword and her other hand to fire a lot of bullets into its torso.  {[}\textit{Challenge 5: Subdue the creature.  Sidearm 3 (Jaya) +Truncheon 2 (Jaya) + Small Arms 2 (Jonah) + Vigilant 3 (Jonah) + Battle Dress Uniform 2 (Jaya) + }\textit{\textbf{ {\color[RGB]{255,0,0}FLAW 2: Shoulder \& Neck wound (Jaya)} }}\textit{ → Matched}{]}.  The creature slices down with its sword.  Jaya jerks back out of the way but the blade still cuts through part of her helmet and through her armor with disturbing ease.  The tip of the sword slices into her neck, right through her ``loyalty'' tattoo and into her shoulder.  Jaya brings up her cybernetic arm and the blade hits it and shatters into pieces.  
+Jaya is going in low- using her mechanical hand to deal with the sword and her other hand to fire a lot of bullets into its torso.  {[}\textit{Challenge 5: Subdue the creature.  Sidearm 3 (Jaya) +Truncheon 2 (Jaya) + Small Arms 2 (Jonah) + Vigilant 3 (Jonah) + Battle Dress Uniform 2 (Jaya) + }\textit{\textbf{ {\color[RGB]{255,0,0}FLAW 2: Shoulder \& Neck wound (Jaya)} }}\textit{ $\rightarrow$ Matched}{]}.  The creature slices down with its sword.  Jaya jerks back out of the way but the blade still cuts through part of her helmet and through her armor with disturbing ease.  The tip of the sword slices into her neck, right through her ``loyalty'' tattoo and into her shoulder.  Jaya brings up her cybernetic arm and the blade hits it and shatters into pieces.  
 
 
 
@@ -285,7 +285,7 @@ The creature facing Jaya goes reeling back.  Jaya looks down at the splattered p
 
 ``Chief!  Grab it and come back!'' orders Jonah.
 
-{[}\textit{Challenge 2: Catch the guy.  AMP 3 (Jaya) → Overcome! }\textit{\textbf{1 VP (Jaya) + 1 VP (Jonah)}}{]}  The AMP sends a surge of drugs into Jaya's bloodstream to compensate for her new injuries and Jaya feels awesome.  She lunges at the creature and tackles it from behind before it gets away.   She grapples it and feels the sharp pinpricks of more shards piercing her armor.  
+{[}\textit{Challenge 2: Catch the guy.  AMP 3 (Jaya) $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Jaya) + 1 VP (Jonah)}}{]}  The AMP sends a surge of drugs into Jaya's bloodstream to compensate for her new injuries and Jaya feels awesome.  She lunges at the creature and tackles it from behind before it gets away.   She grapples it and feels the sharp pinpricks of more shards piercing her armor.  
 
 Jonah can tell that Jaya has a gushing head wound that she appears to be ignoring.
 
@@ -295,7 +295,7 @@ Jonah lurches back and bumps up against the wall.  Lackovich has her hand on his
 
 Jonah does not answer and just says over the radio, ``What the \textit{hell} is that thing?''
 
-{[}\textit{Challenge 2: Headbutt the guy into submission.  Heads up Display 4 (Jaya) → Overcome! }\textit{\textbf{2 VP (Jaya)}}{]}
+{[}\textit{Challenge 2: Headbutt the guy into submission.  Heads up Display 4 (Jaya) $\rightarrow$ Overcome! }\textit{\textbf{2 VP (Jaya)}}{]}
 
 Jaya smashes her helmeted head repeatedly into the creature's face.  The helmet starts protesting the abuse and then it cracks and breaks completely. The body eventually goes limp beneath her.  Jaya eventually finds the button for her radio and broadcasts over the general frequency, ``Unnnnnghhh.... I subdued one of them.  Get your asses over here, right now.''
 
@@ -319,7 +319,7 @@ Rust mutters contemptuously, ``Fainting spells.''
 
 
 
-{[}\textit{Challenge 1: Notice.  Binoculars 2 (Jaya) → Overcome! }\textit{\textbf{1 VP (Jaya)}}{]}.  Jaya is lying on top of the guy and is all tangled up in her equipment.  She starts detangling herself, removing her binoculars and tossing them aside.  As she does, she hears a sizzle and pop as they start melting as they lie in a puddle of white goo.  The same goo that's splattered all over her armor.  Jaya rolls away and starts stripping off her armor off rapidly, including her sidearm and other weapons.   {[}\textit{Refresh Sidearm 3 (Jaya)}{]}
+{[}\textit{Challenge 1: Notice.  Binoculars 2 (Jaya) $\rightarrow$ Overcome! }\textit{\textbf{1 VP (Jaya)}}{]}.  Jaya is lying on top of the guy and is all tangled up in her equipment.  She starts detangling herself, removing her binoculars and tossing them aside.  As she does, she hears a sizzle and pop as they start melting as they lie in a puddle of white goo.  The same goo that's splattered all over her armor.  Jaya rolls away and starts stripping off her armor off rapidly, including her sidearm and other weapons.   {[}\textit{Refresh Sidearm 3 (Jaya)}{]}
 
 Breccan comes running up and start trying to help Jaya.
 
@@ -329,7 +329,7 @@ Jaya pushes her away and orders, ``Shoot it some more.''
 
 At the sound of gunfire, Drake barks over the radio: ``All squads report!''
 
-Jaya looks over at the creature and the whole thing seems to be melting into the roof.  The head appears to detach and starts inflating and begins to slither off.  {[}\textit{Challenge 2: Don't freak out. Air of Command 2 (Jaya) → Matched}{]}.   Breccan freaks out a bit and Jaya orders her to shoot it more.  We all hear the sound of a gun going full auto.
+Jaya looks over at the creature and the whole thing seems to be melting into the roof.  The head appears to detach and starts inflating and begins to slither off.  {[}\textit{Challenge 2: Don't freak out. Air of Command 2 (Jaya) $\rightarrow$ Matched}{]}.   Breccan freaks out a bit and Jaya orders her to shoot it more.  We all hear the sound of a gun going full auto.
 
 At the sight of the creature through Jaya's eyes, Jonah freaks out and drops to the ground, yelling ``Get down!''  {[}\textit{Refresh Vigilant 3 (Jonah)}{]}
 
@@ -339,7 +339,7 @@ With the full weight of his authority behind it, Drake orders over the comm, ``A
 
 
 
-Jaya tries to grab the creature again, even as wounded as she is.  {[}\textit{Challenge 2: Not fall and crack open her head.  }\textit{\textbf{ {\color[RGB]{255,0,0}Flaw 1: Hit head on the roof (Jaya) } }}\textit{→ Sent back to pool}{]}  Jaya slips and hits her unhelmeted head and the creature slithers off.  The remains of the creature's spiky glass outfit are still in a deflated heap on the rooftop.
+Jaya tries to grab the creature again, even as wounded as she is.  {[}\textit{Challenge 2: Not fall and crack open her head.  }\textit{\textbf{ {\color[RGB]{255,0,0}Flaw 1: Hit head on the roof (Jaya) } }}\textit{$\rightarrow$ Sent back to pool}{]}  Jaya slips and hits her unhelmeted head and the creature slithers off.  The remains of the creature's spiky glass outfit are still in a deflated heap on the rooftop.
 
 
 
@@ -433,9 +433,9 @@ Carruthers can feel a \hl{complicated rush of feelings from Hayley}\footnote{\te
 
 \hl{Jonah looks over at Drake and flicks a glance questioningly at Jaya.  ``Do your work,'' says Drake, giving permission.}\footnote{\textbf{Rebecca S. }\textgreater :-/ \textsubscript{11/02/14 1:48am}}\footnote{$\rightarrow$\textbf{Rebecca S. }Clearly Jaya should just trade Jonah away for Madelyn and have an all girl team PG1 \textsubscript{11/02/14 1:49am}}\footnote{$\rightarrow$\textbf{Suko T }Don't forget to leave a spot for Riva! \textsubscript{11/02/14 10:27am}}  Jonah looks down at Jaya's many wounds and sighs, ``Jesus.''  He starts trying to tend her injuries.
 
-{[}\textit{Reduce Flaw: }\textit{ {\color[RGB]{255,0,0}FLAW 2: Shoulder \& Neck wound (Jaya). } }\textit{\textbf{ {\color[RGB]{255,0,0} } }}\textit{Surgical Field Kit 2 (Jonah)}\textit{ → }\textit{\textbf{ {\color[RGB]{255,0,0}FLAW 1: Shoulder \& Neck wound (Jaya)} }}{]} 
+{[}\textit{Reduce Flaw: }\textit{ {\color[RGB]{255,0,0}FLAW 2: Shoulder \& Neck wound (Jaya). } }\textit{\textbf{ {\color[RGB]{255,0,0} } }}\textit{Surgical Field Kit 2 (Jonah)}\textit{ $\rightarrow$ }\textit{\textbf{ {\color[RGB]{255,0,0}FLAW 1: Shoulder \& Neck wound (Jaya)} }}{]} 
 
-{[}\textit{Reduce Flaw: }\textit{ {\color[RGB]{255,0,0}Flaw 1: Hit head on the roof (Jaya).} }\textit{  Medkit 1 (Jonah) → Flaw 0}{]}
+{[}\textit{Reduce Flaw: }\textit{ {\color[RGB]{255,0,0}Flaw 1: Hit head on the roof (Jaya).} }\textit{  Medkit 1 (Jonah) $\rightarrow$ Flaw 0}{]}
 
 Jonah is worried about the constant rain, ``We need to get her out the rain.  If water gets into the wounds, it's going to be toxic.''
 
@@ -572,7 +572,7 @@ Drake notices our lagging behind and calls out, ``Hey! What's going back there? 
 
 ``Just completing a report, Sir,'' replies Hayley.
 
-{[}\textit{Challenge 2.  Don't tip off Drake to what we're talking about.  Air of Command 2 (Jaya) → Matched}{]}
+{[}\textit{Challenge 2.  Don't tip off Drake to what we're talking about.  Air of Command 2 (Jaya) $\rightarrow$ Matched}{]}
 
 ``I'm conferring with my fucking team!'' says Jaya with authority.
 
@@ -830,7 +830,7 @@ Hayley is already heading out and making sure Javier is able to keep up with eve
 
 Jaya sighs and looks at Hayley's boobs, which have no armor protection, and says to Rust, ``You're right, Hayley can't handle close combat.  Let's go.''  She laughs and says to Hayley with a conspiratorial smirk and a glance down at Hayley's chest, \hl{``Gotta protect the 'assets'.''}\footnote{\textbf{Suko T }HA!  So good. Even better that Carruthers sees this whole exchange too. \textsubscript{11/02/14 12:07am}}
 
-{[}\textit{Challenge 2.  Get to the rooftop before it gets overrun by zombies.  Air of Command 2 (Jaya) → Matched}{]}
+{[}\textit{Challenge 2.  Get to the rooftop before it gets overrun by zombies.  Air of Command 2 (Jaya) $\rightarrow$ Matched}{]}
 
 We climb up onto the building and it seems like a large portion of the people sense us and start turning in our direction.  It's still raining.  It's miserable.
 
@@ -863,7 +863,7 @@ Jaya is bitching about Drake to Hayley.  Hayley is trying to tune it out a bit a
 
 The corridor is curved and slopes downward.  It is less curved than the spiraling corridors of SAC-01.  Jonah notes there are tracks in the floor.  Presumably there is some mechanism for hauling things up from lower levels.  They walk for a while.  They reach a large room with branching corridors off it with sealed doors.
 
-{[}\textit{Challenge 2: Notice.  Vigilant 3 (Jonah) → Overcome! }\textit{\textbf{2 VP (Jonah)}}{]}  This place is quiet but not deathly quiet.  Jonah gets a sense that something is tracking us.  Things may be shifting when he looks away from them.  There is a sense that some\textit{thing} is watching them.
+{[}\textit{Challenge 2: Notice.  Vigilant 3 (Jonah) $\rightarrow$ Overcome! }\textit{\textbf{2 VP (Jonah)}}{]}  This place is quiet but not deathly quiet.  Jonah gets a sense that something is tracking us.  Things may be shifting when he looks away from them.  There is a sense that some\textit{thing} is watching them.
 
 ``Be advised that I believe we are being monitored,'' says Jonah.
 
@@ -893,9 +893,9 @@ There is a surge in the massed horde toward the building.  Hayley notes that som
 
 The attackers aren't mindless, they are helping throw each other up onto the roof and climbing up to get at us.
 
-{[}\textit{Challenge 4. Kill as many people near us as possible without completely compromising the safety of our position.  Sidearm 3 (Jaya) + Snap Reflexes 2 (Hayley) + Bodyguard 2 (Hayley) → Matched}{]}  Jaya pulls out a grenade and goes to drop it on the zombies right below her.  Hayley notices this and realizes that this would just create a pile of dead bodies that would provide a ramp right up to their position.  Before Jaya can even let go of the grenade, Hayley yells at Jaya, ``No! Further!''  Jaya's so surprised, she does as Hayley instructs.  There's an explosion, knocking some of the people back away from the building and \hl{Jaya starts unloading on the crowd, laughing as she does.}\footnote{\textbf{Rebecca S. }It just feels so good when what you're shooting at STAYS DOWN ONCE SHOT.  The relief just makes you giddy. And giggly. And the laughter just flows from there.... and being more powerful than everyone else... and winning \textsubscript{11/02/14 1:32am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Wait for it... \textsubscript{11/02/14 1:50am}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/02/14 10:27am}}  She mows down the people nearest to us, especially the ones that were looking at her.  The crowd is mixed: adults, elderly people, small children.  We shoot them all.
+{[}\textit{Challenge 4. Kill as many people near us as possible without completely compromising the safety of our position.  Sidearm 3 (Jaya) + Snap Reflexes 2 (Hayley) + Bodyguard 2 (Hayley) $\rightarrow$ Matched}{]}  Jaya pulls out a grenade and goes to drop it on the zombies right below her.  Hayley notices this and realizes that this would just create a pile of dead bodies that would provide a ramp right up to their position.  Before Jaya can even let go of the grenade, Hayley yells at Jaya, ``No! Further!''  Jaya's so surprised, she does as Hayley instructs.  There's an explosion, knocking some of the people back away from the building and \hl{Jaya starts unloading on the crowd, laughing as she does.}\footnote{\textbf{Rebecca S. }It just feels so good when what you're shooting at STAYS DOWN ONCE SHOT.  The relief just makes you giddy. And giggly. And the laughter just flows from there.... and being more powerful than everyone else... and winning \textsubscript{11/02/14 1:32am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Wait for it... \textsubscript{11/02/14 1:50am}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/02/14 10:27am}}  She mows down the people nearest to us, especially the ones that were looking at her.  The crowd is mixed: adults, elderly people, small children.  We shoot them all.
 
-{[}\textit{Challenge 3.  Don't hesitate in killing civilians.  Bad Cop 3 (Jaya) → Matched}{]}
+{[}\textit{Challenge 3.  Don't hesitate in killing civilians.  Bad Cop 3 (Jaya) $\rightarrow$ Matched}{]}
 
 Hayley starts firing with Jaya, being slightly more selective in picking off targets.  Carruthers assists Hayley when she can but they do have some moments of conflict.  Most particularly when Hayley calmly shoots small children in the head as easily as she drops adults.  No emotional distress, no thought of prioritizing adults as targets over children.  Just a dispassionate calculation of how far the enemy combatant could get before they make the situation worse, and then she kills them precisely before they reached that point.  No matter who or what they were.  Carruthers may not be certain Hayley even recognized them as children, beyond compensating for their shorter stature and smaller torso (thus making headshots more viable than through the heart) when aiming them.
 
@@ -943,41 +943,41 @@ It would be awesome if the lady (the one Victor has a crush on!) is the SAC-01 P
 \begin{itemize}
 \item Pool: 6
 \item Challenge 1: Notice.  Thrown back
-\item Challenge 1: Notice.  Agent 1 (Jaya) → Matched
+\item Challenge 1: Notice.  Agent 1 (Jaya) $\rightarrow$ Matched
 \item Refresh: Air of Command 2 (Jaya)
 \item Refresh: Small Unit Tactics 3 (Jonah)
 \item Pool: 7 + 15 (Darkness Falls)
-\item Challenge 2: Keep Her Balance.  Adrenaline Junkie 2 (Jaya) → Matched
+\item Challenge 2: Keep Her Balance.  Adrenaline Junkie 2 (Jaya) $\rightarrow$ Matched
 \item Challenge 1: Notice.  Thrown back
 \item Challenge 1: Notice.  Thrown back
-\item Challenge 1: Notice.  Street Medic 2 (Jonah) → Overcome! \textbf{1 VP (Jonah)}
-\item Challenge 2: Dodge Shards.  VAC Infantry Light Armor 3 (Jaya) → Overcome! \textbf{2 VP (Jaya)}
-\item Challenge 1: Notice.  Small Unit Tactics 1 (Hayley) → Matched
+\item Challenge 1: Notice.  Street Medic 2 (Jonah) $\rightarrow$ Overcome! \textbf{1 VP (Jonah)}
+\item Challenge 2: Dodge Shards.  VAC Infantry Light Armor 3 (Jaya) $\rightarrow$ Overcome! \textbf{2 VP (Jaya)}
+\item Challenge 1: Notice.  Small Unit Tactics 1 (Hayley) $\rightarrow$ Matched
 \item Refresh: Bodyguard 2 (Hayley)
 \item Refresh: Bad Cop 3 (Jaya)
-\item Challenge 1: Notice.  HE Grenade 2 (Jaya) → Overcome! \textbf{1 VP (Jaya)}
-\item Challenge 1: Notice.  HE Grenade 2 (Hayley) → Overcome! \textbf{1 VP (Hayley)}
+\item Challenge 1: Notice.  HE Grenade 2 (Jaya) $\rightarrow$ Overcome! \textbf{1 VP (Jaya)}
+\item Challenge 1: Notice.  HE Grenade 2 (Hayley) $\rightarrow$ Overcome! \textbf{1 VP (Hayley)}
 \item Refresh: Athletics 3 (Hayley)
-\item Challenge 5: Subdue the guy.  Sidearm 3 (Jaya) +Truncheon 2 (Jaya) + Small Arms 2 (Jonah) + Vigilant 3 (Jonah) + Battle Dress Uniform 2 (Jaya) + FLAW 2: Shoulder \& Neck wound (Jaya) → Matched
-\item Challenge 2: Catch the guy.  AMP 3 (Jaya) → Overcome! \textbf{1 VP (Jaya) + } \textbf{1 VP (Jonah)}
-\item Challenge 2: Headbutt the guy into submission.  Heads up Display 4 (Jaya) → Overcome! \textbf{2 VP (Jaya)}
-\item Challenge 1: Notice.  Binoculars 2 (Jaya) → Overcome! \textbf{1 VP (Jaya)}
+\item Challenge 5: Subdue the guy.  Sidearm 3 (Jaya) +Truncheon 2 (Jaya) + Small Arms 2 (Jonah) + Vigilant 3 (Jonah) + Battle Dress Uniform 2 (Jaya) + FLAW 2: Shoulder \& Neck wound (Jaya) $\rightarrow$ Matched
+\item Challenge 2: Catch the guy.  AMP 3 (Jaya) $\rightarrow$ Overcome! \textbf{1 VP (Jaya) + } \textbf{1 VP (Jonah)}
+\item Challenge 2: Headbutt the guy into submission.  Heads up Display 4 (Jaya) $\rightarrow$ Overcome! \textbf{2 VP (Jaya)}
+\item Challenge 1: Notice.  Binoculars 2 (Jaya) $\rightarrow$ Overcome! \textbf{1 VP (Jaya)}
 \item Refresh Sidearm 3 (Jaya)
-\item Challenge 2: Don't freak out. Air of Command 2 (Jaya) → Matched
+\item Challenge 2: Don't freak out. Air of Command 2 (Jaya) $\rightarrow$ Matched
 \item Refresh Vigilant 3 (Jonah)
-\item Challenge 2: Not fall and crack open her head.  Flaw 1: Hit head on the roof (Jaya)\textbf{ }→ Sent back to pool
+\item Challenge 2: Not fall and crack open her head.  Flaw 1: Hit head on the roof (Jaya)\textbf{ }$\rightarrow$ Sent back to pool
 \item Refresh: Air of Command 2 (Jaya)
-\item Reduce Flaw: FLAW 2: Shoulder \& Neck wound (Jaya). {\color[RGB]{255,0,0}  } Surgical Field Kit 2 (Jonah) → \textbf{ {\color[RGB]{255,0,0}FLAW 1: Shoulder \& Neck wound (Jaya)} }
-\item Reduce Flaw: Flaw 1: Hit head on the roof (Jaya).  Medkit 1 (Jonah) → Flaw 0
+\item Reduce Flaw: FLAW 2: Shoulder \& Neck wound (Jaya). {\color[RGB]{255,0,0}  } Surgical Field Kit 2 (Jonah) $\rightarrow$ \textbf{ {\color[RGB]{255,0,0}FLAW 1: Shoulder \& Neck wound (Jaya)} }
+\item Reduce Flaw: Flaw 1: Hit head on the roof (Jaya).  Medkit 1 (Jonah) $\rightarrow$ Flaw 0
 \item Refresh: Forensics 2 (Jonah)
-\item Challenge 2.  Don't tip off Drake to what we're talking about.  Air of Command 2 (Jaya) → Matched
+\item Challenge 2.  Don't tip off Drake to what we're talking about.  Air of Command 2 (Jaya) $\rightarrow$ Matched
 \item Refresh: Left Arm 3 (Jaya)
 \item Refresh: Air of Command 2 (Jaya)
 \item Pool: 9 + 30 (Let the Right One In)
-\item Challenge 2.  Get to the rooftop before it gets overrun by zombies.  Air of Command 2 (Jaya) → Matched
-\item Challenge 2: Notice.  Vigilant 3 (Jonah) → Overcome! \textbf{2 VP (Jonah)}
-\item Challenge 4. Kill as many people near us as possible \textit{without} completely compromising the safety of our position.  Sidearm 3 (Jaya) + Snap Reflexes 2 (Hayley) + Bodyguard 2 (Hayley) → Matched
-\item Challenge 3.  Don't hesitate in killing civilians.  Bad Cop 3 (Jaya) → Matched
+\item Challenge 2.  Get to the rooftop before it gets overrun by zombies.  Air of Command 2 (Jaya) $\rightarrow$ Matched
+\item Challenge 2: Notice.  Vigilant 3 (Jonah) $\rightarrow$ Overcome! \textbf{2 VP (Jonah)}
+\item Challenge 4. Kill as many people near us as possible \textit{without} completely compromising the safety of our position.  Sidearm 3 (Jaya) + Snap Reflexes 2 (Hayley) + Bodyguard 2 (Hayley) $\rightarrow$ Matched
+\item Challenge 3.  Don't hesitate in killing civilians.  Bad Cop 3 (Jaya) $\rightarrow$ Matched
 \item Pool 28
 \end{itemize}
 
