--- a/4T/ch36.tex
+++ b/4T/ch36.tex
@@ -45,11 +45,11 @@ Hayley tries to shoot as many of the people approaching the cave as she can befo
 
 Jaya screams, ``Shoot the motherfuckers!  Shoot them in the damn head!'' and she fires until her magazine is emptied.  {[}\textit{Refresh: Sidearm 3 (Jaya)}{]}
 
-{[}\textit{Challenge 2: Notice.  Nose for Breadcrumbs 2 (Hayley) → Matched}{]}
+{[}\textit{Challenge 2: Notice.  Nose for Breadcrumbs 2 (Hayley) $\rightarrow$ Matched}{]}
 
-{[}\textit{Challenge 1: Notice. Agent 1 (Hayley) → Matched}{]}  As Hayley shoots them, she notes that they appear to be operating in groups of roughly 10 and they are organized around a single person.  Additionally, two tiles have dropped down and from one of them something shiny, black and vaguely circular is emerging.
+{[}\textit{Challenge 1: Notice. Agent 1 (Hayley) $\rightarrow$ Matched}{]}  As Hayley shoots them, she notes that they appear to be operating in groups of roughly 10 and they are organized around a single person.  Additionally, two tiles have dropped down and from one of them something shiny, black and vaguely circular is emerging.
 
-The zombies start swarming the building.  {[}\textit{Challenge 4: Stop the zombies from getting up the building.  Left hand 3 (Jaya) + Vacuum-sealed Armor 3 (Jaya) → Matched}{]}  Jaya goes to town and starts tossing people off the building (not her team).  She tears off limbs and breaks bones.  The sprays of red arterial blood, showers of bone fragments and gobs of flesh coat her in a layer of horrifying awesome.  From Jaya to Jonah there is a sense of intense joy.  She cackles with glee and is grinning madly as she digs her fingers into eyesockets and rips out eyeballs or crushes them.  Lackovich, Breccan and Javier are taken a bit aback {[}\textit{Refresh: Bad Cop 3 (Jaya)}{]}.  Hayley isn't bothered by this quite so much but she gets an increasing sense of nausea from Carruthers until she's overcome with a sensation of vomiting that is hard to ignore.
+The zombies start swarming the building.  {[}\textit{Challenge 4: Stop the zombies from getting up the building.  Left hand 3 (Jaya) + Vacuum-sealed Armor 3 (Jaya) $\rightarrow$ Matched}{]}  Jaya goes to town and starts tossing people off the building (not her team).  She tears off limbs and breaks bones.  The sprays of red arterial blood, showers of bone fragments and gobs of flesh coat her in a layer of horrifying awesome.  From Jaya to Jonah there is a sense of intense joy.  She cackles with glee and is grinning madly as she digs her fingers into eyesockets and rips out eyeballs or crushes them.  Lackovich, Breccan and Javier are taken a bit aback {[}\textit{Refresh: Bad Cop 3 (Jaya)}{]}.  Hayley isn't bothered by this quite so much but she gets an increasing sense of nausea from Carruthers until she's overcome with a sensation of vomiting that is hard to ignore.
 
 
 
@@ -60,7 +60,7 @@ The people attacking look like civilians.  Other than their milky white eyes the
 
 \sceneHeadline{SAC-04}
 
-Jonah gets distracted by the white goo in the tanks {[}\textit{Refresh: Vigilant 3 (Jonah)}{]}.  Jonah eventually realizes that the others are agreeing that they need move now.  Drake says loudly, ``Soldier!  NOW.''  {[}\textit{Challenge 2: Notice. Trigger Reflex 2 (Jonah) → Matched}{]}  Jonah realizes that the glass of the lab is starting to fog over and his Heads-up Display notes a drop in temperature.
+Jonah gets distracted by the white goo in the tanks {[}\textit{Refresh: Vigilant 3 (Jonah)}{]}.  Jonah eventually realizes that the others are agreeing that they need move now.  Drake says loudly, ``Soldier!  NOW.''  {[}\textit{Challenge 2: Notice. Trigger Reflex 2 (Jonah) $\rightarrow$ Matched}{]}  Jonah realizes that the glass of the lab is starting to fog over and his Heads-up Display notes a drop in temperature.
 
 ``Something's changing.  Incoming!,'' says Jonah backing away from the glass.
 
@@ -89,13 +89,13 @@ Jaya jumps down after Breccan, abandoning her post. {[}\textit{Refresh: Air of C
 
 
 
-{[}\textit{Challenge 4: Kill the zombies holding onto Breccan, but Breccan and Jaya get dragged to the Plaza.  Rifle 2 (Hayley) + Hush Radio 1 (Hayley) + Hush Radio 1 (Jaya) + Heavy Pulse Rifle 3 (Hayley) → Matched}{]}  Hayley starts picking off the zombies hanging onto Breccan.  Through the hush radio she gives clipped orders to Jaya, ``On your right.  Duck now.  Left.''  Jaya actually follows Hayley's orders.  Their coordination manages to keep Jaya and Breccan from being shot.  They shoot all the zombies off of Breccan but she and Jaya have been dragged to the Plaza.
+{[}\textit{Challenge 4: Kill the zombies holding onto Breccan, but Breccan and Jaya get dragged to the Plaza.  Rifle 2 (Hayley) + Hush Radio 1 (Hayley) + Hush Radio 1 (Jaya) + Heavy Pulse Rifle 3 (Hayley) $\rightarrow$ Matched}{]}  Hayley starts picking off the zombies hanging onto Breccan.  Through the hush radio she gives clipped orders to Jaya, ``On your right.  Duck now.  Left.''  Jaya actually follows Hayley's orders.  Their coordination manages to keep Jaya and Breccan from being shot.  They shoot all the zombies off of Breccan but she and Jaya have been dragged to the Plaza.
 
 
 
-The laser thing starts aiming at Hayley.  {[}\textit{Challenge 2: Dodge.  Athletics 3 (Hayley) →  Overcome! }\textit{\textbf{2 VP (Hayley)}}{]}  Hayley nimbly ducks out of the way.  
+The laser thing starts aiming at Hayley.  {[}\textit{Challenge 2: Dodge.  Athletics 3 (Hayley) $\rightarrow$  Overcome! }\textit{\textbf{2 VP (Hayley)}}{]}  Hayley nimbly ducks out of the way.  
 
-{[}\textit{Challenge 1: Notice.  Bodyguard 2 (Hayley) →  Overcome! }\textit{\textbf{1 VP (Hayley)}}{]}  It is a very slight shift now, but Hayley notices that the roof that they are on is beginning to slide and collapse.  The laser has sliced all the way through the building.
+{[}\textit{Challenge 1: Notice.  Bodyguard 2 (Hayley) $\rightarrow$  Overcome! }\textit{\textbf{1 VP (Hayley)}}{]}  It is a very slight shift now, but Hayley notices that the roof that they are on is beginning to slide and collapse.  The laser has sliced all the way through the building.
 
 
 
@@ -110,7 +110,7 @@ Jonah and Douglas enter the lab and run smack into a figure there, dripping in w
 
 
 
-Jonah looks around for the second creature.  {[}\textit{Challenge 1: Notice.  Grace Under Fire 1 (Jonah) → Matched}{]}  He sees it disappearing into a hatch leading to another room.  Jonah tosses a grenade after it.  Jayce is in the doorway, his gun ready but he's hesitating, not wanting to shoot Douglas.  Drake is running toward them.  Jonah is aiming carefully at the creature, trying not to shoot Douglas.  Drake and Jayce enter the room.  Douglas is being backed into a corner.  Jonah's grenade goes off in another room.  Drake yells, ``WTF?''  {[}\textit{Challenge 2: Shoot the creature and not Douglas.  Small Arms 2 → Matched}{]}  Jonah finds his shot and shoots the creature and it staggers.  Jonah's attack gives Douglas an opening and he runs the guy through with his sword and slices through him.
+Jonah looks around for the second creature.  {[}\textit{Challenge 1: Notice.  Grace Under Fire 1 (Jonah) $\rightarrow$ Matched}{]}  He sees it disappearing into a hatch leading to another room.  Jonah tosses a grenade after it.  Jayce is in the doorway, his gun ready but he's hesitating, not wanting to shoot Douglas.  Drake is running toward them.  Jonah is aiming carefully at the creature, trying not to shoot Douglas.  Drake and Jayce enter the room.  Douglas is being backed into a corner.  Jonah's grenade goes off in another room.  Drake yells, ``WTF?''  {[}\textit{Challenge 2: Shoot the creature and not Douglas.  Small Arms 2 $\rightarrow$ Matched}{]}  Jonah finds his shot and shoots the creature and it staggers.  Jonah's attack gives Douglas an opening and he runs the guy through with his sword and slices through him.
 
 
 
@@ -125,7 +125,7 @@ Hayley shouts to Lackovich and Javier that the roof is collapsing.  Hayley think
 
 
 
-Jaya is being dragged to a hole.  They seem to be ignoring Breccan for the moment, though Jaya quickly loses track of her.  {[}\textit{Challenge 2: Cinematically cling to edge of hole.  Side Arm 3 →  Overcome! }\textit{\textbf{2 VP (Jaya)}}{]}.  Jaya plants the gauss pistol into someone's brain and lets go to grab onto a lip about one foot down the pit, deflecting attacks with her metal hand.
+Jaya is being dragged to a hole.  They seem to be ignoring Breccan for the moment, though Jaya quickly loses track of her.  {[}\textit{Challenge 2: Cinematically cling to edge of hole.  Side Arm 3 $\rightarrow$  Overcome! }\textit{\textbf{2 VP (Jaya)}}{]}.  Jaya plants the gauss pistol into someone's brain and lets go to grab onto a lip about one foot down the pit, deflecting attacks with her metal hand.
 
 
 
@@ -239,7 +239,7 @@ Hayley is coordinating with Lackovich and Javier to get to the Plaza.  She also 
 
 
 
-\textit{{[}Challenge: Notice 1.  Streetwise 1 (Jonah) → Matched{]}  }Jaya notices that the people they're shooting are getting back up.  She shoots one and yells loudly, ``Motherfucker!''  She turns to Rust and says, ``\hl{Did you know they're getting back up?? FUCK!}\footnote{\textbf{Rebecca S. }And thus ends Jaya's good time. \textsubscript{11/18/14 8:06am}}''
+\textit{{[}Challenge: Notice 1.  Streetwise 1 (Jonah) $\rightarrow$ Matched{]}  }Jaya notices that the people they're shooting are getting back up.  She shoots one and yells loudly, ``Motherfucker!''  She turns to Rust and says, ``\hl{Did you know they're getting back up?? FUCK!}\footnote{\textbf{Rebecca S. }And thus ends Jaya's good time. \textsubscript{11/18/14 8:06am}}''
 
 
 
@@ -713,7 +713,7 @@ Jaya winks at him and says in a loud whisper, ``Where the fuck is Drake?''
 
 
 
-Jonah treats Jaya's wound, which has started bleeding at this point.  {[}\textit{Reduce Flaw: }\textit{ {\color[RGB]{255,0,0}Flaw 1: Cauterized abdomen wound (Jaya).} }\textit{  Medkit 1 (Jonah) → Flaw 0}{]}
+Jonah treats Jaya's wound, which has started bleeding at this point.  {[}\textit{Reduce Flaw: }\textit{ {\color[RGB]{255,0,0}Flaw 1: Cauterized abdomen wound (Jaya).} }\textit{  Medkit 1 (Jonah) $\rightarrow$ Flaw 0}{]}
 
 
 
@@ -1460,32 +1460,32 @@ Rook comes back into the room.  They put \hl{Jonah in the tank}\footnote{\textbf
 \begin{itemize}
 \item Pool: 28
 \item Refresh: Sidearm 3 (Jaya)
-\item Challenge 2: Notice.  Nose for Breadcrumbs 2 (Hayley) → Matched
-\item Challenge 1: Notice. Agent 1 (Hayley) → Matched
-\item Challenge 4: Stop the zombies from getting up the building.  Left hand 3 (Jaya) + Vacuum-sealed Armor 3 (Jaya) → Matched
+\item Challenge 2: Notice.  Nose for Breadcrumbs 2 (Hayley) $\rightarrow$ Matched
+\item Challenge 1: Notice. Agent 1 (Hayley) $\rightarrow$ Matched
+\item Challenge 4: Stop the zombies from getting up the building.  Left hand 3 (Jaya) + Vacuum-sealed Armor 3 (Jaya) $\rightarrow$ Matched
 \item Refresh: Bad Cop 3 (Jaya)
 \item Refresh: Bodyguard 2 (Hayley)
 \item Refresh: Vigilant 3 (Jonah)
-\item Challenge 2: Notice. Trigger Reflex 2 (Jonah) → Matched
+\item Challenge 2: Notice. Trigger Reflex 2 (Jonah) $\rightarrow$ Matched
 \item Refresh: Air of Command 2 (Jaya)
-\item Challenge 4: Kill the zombies holding onto Breccan, but Breccan and Jaya get dragged to the Plaza.  Rifle 2 (Hayley) + Hush Radio 1 (Hayley) + Hush Radio 1 (Jaya) + Heavy Pulse Rifle 3 (Hayley) → Matched
+\item Challenge 4: Kill the zombies holding onto Breccan, but Breccan and Jaya get dragged to the Plaza.  Rifle 2 (Hayley) + Hush Radio 1 (Hayley) + Hush Radio 1 (Jaya) + Heavy Pulse Rifle 3 (Hayley) $\rightarrow$ Matched
 \item Refresh: Small Arms 2 (Jonah)
-\item Challenge 2: Dodge.  Athletics 3 (Hayley) →  Overcome! \textbf{2 VP (Hayley)}
-\item Challenge 1: Notice.  Bodyguard 2 (Hayley) →  Overcome! \textbf{1 VP (Hayley)}
+\item Challenge 2: Dodge.  Athletics 3 (Hayley) $\rightarrow$  Overcome! \textbf{2 VP (Hayley)}
+\item Challenge 1: Notice.  Bodyguard 2 (Hayley) $\rightarrow$  Overcome! \textbf{1 VP (Hayley)}
 \item Challenge 2. Dodge.   Flaw 1: Cauterized abdomen wound (Jaya).  Thrown back
 \item Refresh: Left Arm 3 (Jaya)
-\item Challenge 1: Notice.  Grace Under Fire 1 (Jonah) → Matched
+\item Challenge 1: Notice.  Grace Under Fire 1 (Jonah) $\rightarrow$ Matched
 \item 14 tokens
-\item Challenge 2: Shoot the creature and not Douglas.  Small Arms 2 → Matched
+\item Challenge 2: Shoot the creature and not Douglas.  Small Arms 2 $\rightarrow$ Matched
 \item Refresh: Athletics 3 (Hayley)
-\item Challenge 2: Cinematically cling to edge of hole.  Side Arm 3 →  Overcome! \textbf{2 VP (Jaya)}
+\item Challenge 2: Cinematically cling to edge of hole.  Side Arm 3 $\rightarrow$  Overcome! \textbf{2 VP (Jaya)}
 \item Refresh: Heavy Pulse Rifle 3 (Hayley)
 \item Refresh: Side Arm 3 (Jaya)
 \item Challenge 1: Notice.  Sent back.
 \item Challenge: Notice 1.  Streetwise 1 (Jonah)
 \item Challenge 1: Notice.  Sent back
 \item Refresh: Social Chameleon 2 (Jonah)
-\item Reduce Flaw:  {\color[RGB]{255,0,0}Flaw 1: Cauterized abdomen wound (Jaya).}   Medkit 1 (Jonah) → Flaw 0
+\item Reduce Flaw:  {\color[RGB]{255,0,0}Flaw 1: Cauterized abdomen wound (Jaya).}   Medkit 1 (Jonah) $\rightarrow$ Flaw 0
 \item Pool 16 (plus 1 flaw minus \_\underline{ 6 }\_ tokens for SAC-09 scenes) = 11 more backlash
 \end{itemize}
 
