--- a/4T/ch6.tex
+++ b/4T/ch6.tex
@@ -302,3 +302,8 @@ Raj (friendly sarcasm): Oh\textit{ yeah}.  That must be it.  A\textit{ Senate}.
 % Exported @ 08/22/15 1:30pm
 \end{flushright}
 
+\begin{center}
+~
+\vskip 0em
+\includegraphics[width=8cm]{img/jayce.png}
+\end{center}
