--- a/4T/ch7.tex
+++ b/4T/ch7.tex
@@ -217,10 +217,10 @@ Then Jonah and Hayley open the lock on the top of the cylinder in the room.  The
 \end{itemize}
 
 \begin{itemize}
-\item Adrenaline Junkie 2 (Jaya) → Matched
-\item Hardened 2 (Oliver) → Matched
-\item Uniform 1 (Jonah) → Sent back to pool
-\item Athletics 2 + Uniform 2 (Hayley) → Matched
+\item Adrenaline Junkie 2 (Jaya) $\rightarrow$ Matched
+\item Hardened 2 (Oliver) $\rightarrow$ Matched
+\item Uniform 1 (Jonah) $\rightarrow$ Sent back to pool
+\item Athletics 2 + Uniform 2 (Hayley) $\rightarrow$ Matched
 \end{itemize}
 
 \begin{itemize}
