--- a/4T/ch8.tex
+++ b/4T/ch8.tex
@@ -364,8 +364,8 @@ Hayley returns to her physical therapy but her rhythm is off, and she ends soone
 
 
 \begin{itemize}
-\item Gerhauser Sisters. \textit{Hardened: 2} (Oliver), \textit{Anti-Authoritarian: 1} (Oliver) → Ongoing challenge
-\item Gerhauser Sisters. \textit{Outgoing: 1} (Oliver) → Ongoing challenge
+\item Gerhauser Sisters. \textit{Hardened: 2} (Oliver), \textit{Anti-Authoritarian: 1} (Oliver) $\rightarrow$ Ongoing challenge
+\item Gerhauser Sisters. \textit{Outgoing: 1} (Oliver) $\rightarrow$ Ongoing challenge
 \end{itemize}
 
 
