--- a/4T/ch9.tex
+++ b/4T/ch9.tex
@@ -415,7 +415,7 @@ Oliver tries to follow Lackovich but feels too exposed to search outside.  He ge
 
 
 \begin{itemize}
-\item Gerhauser Sisters. \textit{Social Chameleon: 3} (Jonah) → Ongoing challenge
+\item Gerhauser Sisters. \textit{Social Chameleon: 3} (Jonah) $\rightarrow$ Ongoing challenge
 \end{itemize}
 
 
